--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp10.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp10.html
@@ -235,9 +235,12 @@ if (A[i] &lt;= p) {
   <h4>Выходные данные</h4>
   <p>Выведите наименьшее количество вопросов, которого гарантированно хватит Пете, чтобы угадать Васино число.</p>
 
-  <h4>Пример</h4>
-  <code>5</code>
-  <code>3</code>
+  <details>
+    <summary>Пример</summary>
+    <h4></h4>
+    <code>5</code>
+    <code>3</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -289,7 +292,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>На каждый запрос в отдельной необходимо вывести «YES», если загаданное Денисом число есть, и «NO» в противном случае.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 2 5
 6 5
@@ -306,6 +310,7 @@ NO
 NO
 NO
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -410,7 +415,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>На выходе следует записать YES, если из списков можно выбрать по числу, которые в сумме дадут 10000 и NO в противном случае.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 -175
@@ -422,7 +428,8 @@ int main() {
 -424
 -788
 </pre>
-  <code>YES</code>
+    <code>YES</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -499,7 +506,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Вам необходимо отвечать на каждый из M запросов по одному в строке - на какой позиции стоит запрашиваемый элемент. Если же такого элемента нет вывести -1.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3 5
 1 3 4
@@ -516,6 +524,7 @@ int main() {
 3
 -1
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -584,7 +593,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите количество собственных чисел команды Psych Up.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 13 20 22 43 146
@@ -593,7 +603,8 @@ int main() {
 5
 13 43 67 89 146
 </pre>
-  <code>3</code>
+    <code>3</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -675,7 +686,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выводить нужно ответы на запросы - по одному в строке - число вхождений запрашиваемого числа в заданный массив.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 10 5
 1 2 3 3 4 4 4 5 6 7
@@ -692,9 +705,9 @@ int main() {
 1
 0
 </pre>
-  <p>В первом тестовом примере - число 4 встречается 3 раза, число 3 - 2, 2 - встречается 1 раз, число 1 - тоже 1, а числа 0 нет в массиве, поэтому оно ни разу не встречается.</p>
+    <p>В первом тестовом примере - число 4 встречается 3 раза, число 3 - 2, 2 - встречается 1 раз, число 1 - тоже 1, а числа 0 нет в массиве, поэтому оно ни разу не встречается.</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 10 3
 4 5 1 2 3 4 7 4 4 0
@@ -707,6 +720,7 @@ int main() {
 1
 0
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -784,7 +798,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Вы должны вывести одно число — количество чисел во втором списке, которые также содержатся в первом.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 2
 1054
@@ -795,7 +810,8 @@ int main() {
 1492
 100
 </pre>
-  <code>2</code>
+    <code>2</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -880,7 +896,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите m строк. В i-ой строке выведите значение выражения f(xᵢ).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 1 3
@@ -902,6 +919,7 @@ int main() {
 2
 3
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -990,7 +1008,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите n строк, i-ая из них должна содержать ответ на i-ый запрос из входных данных. Если в данном отрезке общих делителей нет, выводите -1 в качестве ответа на запрос.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 9 27
 3
@@ -1003,6 +1022,7 @@ int main() {
 -1
 9
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1095,29 +1115,32 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное целое число — минимальное s, такое что Кевин сможет упаковать все свои n колокольчиков в k коробок размера s.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 2 1
 2 5
 </pre>
-  <code>7</code>
-  <p>В первом примере Кевину придётся упаковать оба колокольчика в одну коробку.</p>
+    <code>7</code>
+    <p>В первом примере Кевину придётся упаковать оба колокольчика в одну коробку.</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 4 3
 2 3 5 9
 </pre>
-  <code>9</code>
-  <p>Во втором примере Кевин может упаковать колокольчики следующим образом: {2, 3}, {5} и {9}.</p>
+    <code>9</code>
+    <p>Во втором примере Кевин может упаковать колокольчики следующим образом: {2, 3}, {5} и {9}.</p>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 3 2
 3 5 7
 </pre>
-  <code>8</code>
-  <p>В третьем примере оптимальное решение следующее: {3, 5} и {7}.</p>
+    <code>8</code>
+    <p>В третьем примере оптимальное решение следующее: {3, 5} и {7}.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1177,23 +1200,26 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите k-е по величине число в таблице умножения n x m.</p>
 
-  <h4>Пример 1</h4>
-  <code>2 2 2</code>
-  <code>2</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>2 2 2</code>
+    <code>2</code>
 
-  <h4>Пример 2</h4>
-  <code>2 3 4</code>
-  <code>3</code>
+    <h4>Пример 2</h4>
+    <code>2 3 4</code>
+    <code>3</code>
 
-  <h4>Пример 3</h4>
-  <code>1 10 5</code>
-  <code>5</code>
+    <h4>Пример 3</h4>
+    <code>1 10 5</code>
+    <code>5</code>
 
-  <p>Таблица умножения 2 x 3 выглядит следующим образом:</p>
+    <p>Таблица умножения 2 x 3 выглядит следующим образом:</p>
 <pre>
 1 2 3
 2 4 6
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1272,20 +1298,23 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите -1, если уравнение не имеет целых положительных корней. Иначе выведите такое наименьшее целое x (x > 0), что описанное в условии равенство выполняется.</p>
 
-  <h4>Пример 1</h4>
-  <code>2</code>
-  <code>1</code>
-  <p>В первом тестовом примере x = 1 является наименьшим корнем. Так как s(1) = 1 и 1<sup>2</sup> + 1·1 - 2 = 0.</p>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>2</code>
+    <code>1</code>
+    <p>В первом тестовом примере x = 1 является наименьшим корнем. Так как s(1) = 1 и 1<sup>2</sup> + 1·1 - 2 = 0.</p>
 
-  <h4>Пример 2</h4>
-  <code>110</code>
-  <code>10</code>
-  <p>Во втором тестовом примере x = 10 является наименьшим корнем. Так как s(10) = 1 + 0 = 1 и 10<sup>2</sup> + 1·10 - 110 = 0.</p>
+    <h4>Пример 2</h4>
+    <code>110</code>
+    <code>10</code>
+    <p>Во втором тестовом примере x = 10 является наименьшим корнем. Так как s(10) = 1 + 0 = 1 и 10<sup>2</sup> + 1·10 - 110 = 0.</p>
 
-  <h4>Пример 3</h4>
-  <code>4</code>
-  <code>-1</code>
-  <p>В третьем тестовом примере корней у уравнения нет.</p>
+    <h4>Пример 3</h4>
+    <code>4</code>
+    <code>-1</code>
+    <p>В третьем тестовом примере корней у уравнения нет.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1370,7 +1399,9 @@ int main() {
   <p>Для каждого запроса вида «? x» выведите в отдельной строке число – номер числа x в массиве. Если числа x в масиве нет, в отдельной строке выведите «-1». Считается, что элементы массива нумеруются с 1
   .</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 7
 1 2 3 4 5 6 7
@@ -1390,7 +1421,7 @@ s -5
 1
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 7
 1 1 2 2 3 3 4
@@ -1409,17 +1440,18 @@ s -5
 4
 4
 </pre>
-  <p>Рассмотрим первый пример.</p>
-  <p>Изначально массив a=[1,2,3,4,5,6,7].</p>
-  <ol>
-    <li>Так как число 9 больше любого элемента массива a, выведем -1.</li>
-    <li>После запроса s 2 нужно сдвинуть массив вправо на 2 позиции, он станет равен [6,7,1,2,3,4,5].</li>
-    <li>Число 4 находится на позиции 6, поэтому выводим 6.</li>
-    <li>После запроса s -2 массив примет исходный вид [1,2,3,4,5,6,7]</li>
-    <li>Число 3 находится на позиции 3, поэтому выводим 3</li>
-    <li>После запроса s -5 массив сдвигается на 5 позиций влево: [6,7,1,2,3,4,5]</li>
-    <li>Число 6 находится на позиции 1, поэтому выводим 1.</li>
-  </ol>
+    <p>Рассмотрим первый пример.</p>
+    <p>Изначально массив a=[1,2,3,4,5,6,7].</p>
+    <ol>
+      <li>Так как число 9 больше любого элемента массива a, выведем -1.</li>
+      <li>После запроса s 2 нужно сдвинуть массив вправо на 2 позиции, он станет равен [6,7,1,2,3,4,5].</li>
+      <li>Число 4 находится на позиции 6, поэтому выводим 6.</li>
+      <li>После запроса s -2 массив примет исходный вид [1,2,3,4,5,6,7]</li>
+      <li>Число 3 находится на позиции 3, поэтому выводим 3</li>
+      <li>После запроса s -5 массив сдвигается на 5 позиций влево: [6,7,1,2,3,4,5]</li>
+      <li>Число 6 находится на позиции 1, поэтому выводим 1.</li>
+    </ol>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1586,7 +1618,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите q строк. В j-й строке выведите количество конфет, которое нужно съесть Тимуру, чтобы получить количество сахара, большее или равное x<sub>j</sub>. Выведите -1, если получить такое количество невозможно.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 8 7
@@ -1618,18 +1651,19 @@ int main() {
 1
 -1
 </pre>
-  <p>В первом наборе входных данных примера:</p>
-  <ul>
-    <li>В первом запросе Тимур может съесть любую конфету, и он наберет нужное количество.</li>
-    <li>Во втором запросе Тимур может получить количество не менее 10, съев 7-ю и 8-ю конфету, таким образом потребив количество сахара, равное 14.</li>
-    <li>На третий запрос нет возможного ответа.</li>
-    <li>В четвертом запросе Тимур может получить количество как минимум 14, съев 7-ю и 8-ю конфету, таким образом потребив количество сахара, равное 14.</li>
-  </ul>
+    <p>В первом наборе входных данных примера:</p>
+    <ul>
+      <li>В первом запросе Тимур может съесть любую конфету, и он наберет нужное количество.</li>
+      <li>Во втором запросе Тимур может получить количество не менее 10, съев 7-ю и 8-ю конфету, таким образом потребив количество сахара, равное 14.</li>
+      <li>На третий запрос нет возможного ответа.</li>
+      <li>В четвертом запросе Тимур может получить количество как минимум 14, съев 7-ю и 8-ю конфету, таким образом потребив количество сахара, равное 14.</li>
+    </ul>
 
-  <p>Во втором наборе входных данных примера:</p>
-  <ul>
-    <li>Для единственного запроса второго набора входных данных мы можем выбрать третью конфету, из которой Тимур получает количество сахара равное 3. Также можно получить тот же ответ, выбрав четвертую конфету.</li>
-  </ul>
+    <p>Во втором наборе входных данных примера:</p>
+    <ul>
+      <li>Для единственного запроса второго набора входных данных мы можем выбрать третью конфету, из которой Тимур получает количество сахара равное 3. Также можно получить тот же ответ, выбрав четвертую конфету.</li>
+    </ul>
+  </details>
 
   <details>
     <summary>Решение</summary>
