--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp14.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp14.html
@@ -173,6 +173,34 @@ int tmp = *st.begin();
   <code>st.erase(st.begin()):</code>
   <code>1 2 2 3 4 7 9 12</code>
 
+  <h4>Метод count</h4>
+  <p>В multiset и multimap есть метод count, который подсчитывает число одинаковых элементов. Его использовать в спортивном программировании нельзя, потому что он делает подсчет линейно, не используя никакие оптимизации. Он проходит от первого элемента и до последнего.</p>
+
+  <h4>Разыменование указателя</h4>
+  <p>Чтобы получить значение элемента, имея только указатель на него, надо перед указателем поставить оператор звездочка *. Эта операция называется разыменование указателя</p>
+  <code>int tmp = *st.begin();</code>
+
+  <h4>Итератор</h4>
+  <p>Создадим множество</p>
+  <code>set&lt;int&gt; st;</code>
+  <p>Создадим итератор для множества</p>
+  <code>set&lt;int&gt; :: iterator itst;</code>
+  <p>Присвоим ему указатель на минимальный элемент в множестве.</p>
+  <code>itst = st.begin();</code>
+  <p>Выведем значение минимального элемента</p>
+  <code>cout &lt;&lt; *itst;</code>
+  <code>cout &lt;&lt; *st.begin();</code>
+
+  <p>Создадим словарь</p>
+  <code>map&lt;int, int&gt; mp;</code>
+  <p>Создадим итератор для словаря</p>
+  <code>map&lt;int, int&gt; :: iterator itmp;</code>
+  <p>Присвоим ему указатель на минимальный ключ в словаре.</p>
+  <code>itmp = mp.begin();</code>
+  <p>Выведем минимальный ключ</p>
+  <code>cout &lt;&lt; itmp -> first;</code>
+  <code>cout &lt;&lt; *itmp.first;</code>
+
   <h4>Ускорение ввода/вывода</h4>
   <p>В задачах, где много вывода, можно получить TL только из-за того, что ввод
   (или вывод) занимает очень много времени. По умолчанию C++ использует
@@ -204,7 +232,9 @@ cin.tie(0);
   <h4>Выходные данные</h4>
   <p>В выходных данных должно содержаться n строк — ответы системы на запросы: ОК в случае успешной регистрации, или подсказку с новым именем, если запрашиваемое уже занято.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4
 abacaba
@@ -219,7 +249,7 @@ abacaba1
 OK
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 6
 first
@@ -237,6 +267,7 @@ second1
 OK
 third1
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -334,7 +365,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Первая строка выходного файла должна содержать одно число m – количество школ, от которых на олимпиаду зарегистрировалось от одного до пяти участников. Последующие m строк должны содержать только номера таких школ, при этом номера должны располагаться по одному в строке в произвольном порядке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 9
 Physics and Mathematics School 18
@@ -352,7 +384,8 @@ School N 9
 18
 42
 </pre>
-  <p>В приведенном примере для участия в интернет-олимпиаде зарегистрировались: два ученика из школы с номером 18, один ученик из школы с номером 42 и шесть учеников из школы с номером 9. Таким образом, от 1 до 5 участников зарегистрировано от школ с номерами 18 и 42.</p>
+    <p>В приведенном примере для участия в интернет-олимпиаде зарегистрировались: два ученика из школы с номером 18, один ученик из школы с номером 42 и шесть учеников из школы с номером 9. Таким образом, от 1 до 5 участников зарегистрировано от школ с номерами 18 и 42.</p>
+  </details>
 
   <details>
     <summary>Решение с map</summary>
@@ -528,7 +561,8 @@ int main() {
 
   <p>В шестой строке выведите r чисел — разность множеств (отсортированное), разделяя элементы пробелами.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5 5
 2 1 3 2 1
@@ -542,6 +576,7 @@ UNION: 6
 A SUBTRACT B: 1
 1
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -645,7 +680,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите одно число – максимальное число золота, которое может получить Дон Кихот, либо -1, если он убьёт драконов меньше, чем красота Дульсинеи.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 6
 d 10
@@ -654,10 +691,10 @@ p 2
 d 1
 p 2
 </pre>
-  <code>13</code>
-  <p>В первом тестовом примере Дон Кихоту выгодно убить драконов в клетках 3 и 5.</p>
+    <code>13</code>
+    <p>В первом тестовом примере Дон Кихоту выгодно убить драконов в клетках 3 и 5.</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 6
 d 10
@@ -666,8 +703,9 @@ p 2
 d 1
 p 3
 </pre>
-  <code>-1</code>
-  <p>Во втором тестовом примере Дон Кихот убьёт драконов в клетках 3 и 5, но так как он убил двух драконов, а красота Дульсинеи равна 3, и поэтому Дон Кихот потерпит неудачу.</p>
+    <code>-1</code>
+    <p>Во втором тестовом примере Дон Кихот убьёт драконов в клетках 3 и 5, но так как он убил двух драконов, а красота Дульсинеи равна 3, и поэтому Дон Кихот потерпит неудачу.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -684,18 +722,23 @@ int main() {
   cin.tie(0);
 
   // ввод данных
-  multiset&lt;int&gt; mst;
-  int n, tmp, sum = 0;
-  char ch;
+  int n; // число клеток
   cin >> n;
+  char ch;
+  int tmp; // число золота у дракона или красота дамы
+  multiset&lt;int&gt; mst;
 
-  // ввод принцесс и драконов
+  // для каждой клетки
   for (int i = 2; i &lt;= n - 1; i++) {
     cin >> ch >> tmp;
     if (ch == 'd') {
-      mst.insert(tmp);
+      // если в клетке дракон
+      mst.insert(tmp); // забираем его золото
     } else {
+      // если в клетке дама
       while (mst.size() >= tmp) {
+        // пока число убитых драконов больше чем красота дамы
+        // не будем убивать драконов с наименьшим золотом
         mst.erase(mst.begin());
       }
     }
@@ -703,9 +746,11 @@ int main() {
 
   // ввод Дульсинеи
   cin >> ch >> tmp;
+  int sum = 0;
 
   // решение и вывод результата
   if (mst.size() &lt; tmp) {
+    // если число убитых драконов меньше красоты Дульсинеи
     cout &lt;&lt; -1;
   } else {
     while (mst.size() > 0) {
@@ -740,7 +785,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите n строк: i-тая строка должна содержать «YES» (без кавычек), если число xᵢ является Т-простым, и «NO» (без кавычек), если не является.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 4 5 6
@@ -750,7 +796,8 @@ YES
 NO
 NO
 </pre>
-  <p>В приведенном тесте даны три числа. Первое число 4 имеет ровно три делителя — 1, 2 и 4, поэтому ответ для этого числа — «YES». Второе число 5 имеет два делителя (1 и 5), а третье число 6 — четыре делителя (1, 2, 3, 6), поэтому ответ для них — «NO».</p>
+    <p>В приведенном тесте даны три числа. Первое число 4 имеет ровно три делителя — 1, 2 и 4, поэтому ответ для этого числа — «YES». Второе число 5 имеет два делителя (1 и 5), а третье число 6 — четыре делителя (1, 2, 3, 6), поэтому ответ для них — «NO».</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -775,13 +822,13 @@ int main() {
   cin.tie(nullptr);
 
   // T-простым числом будтет только квадрат простого числа
-  // соберем решето Эратосфена в векторе A
-  // соберем квадраты простых чисел в сете st
   set&lt;long long&gt; st;
   vector&lt;int&gt; A(1e6, 0);
+
+  // соберем решето Эратосфена в векторе A
   for (long long i = 2; i &lt; A.size(); i++) {
     if (A[i] == 0) {
-      st.insert(i * i);
+      st.insert(i * i); // квадраты простых чисел
       for (int j = 2 * i; j &lt; A.size(); j += i) {
         A[j] = 1;
       }
@@ -789,7 +836,7 @@ int main() {
   }
 
   // ввод данных
-  int n;
+  int n; // число чисел
   cin >> n;
   long long tmp;
 
@@ -837,7 +884,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите ответ: «YES», если выиграет Польшар, и «NO» иначе. Оба шара играют оптимально.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 5 1
 polandball
@@ -847,10 +896,10 @@ cool
 character
 nope
 </pre>
-  <code>YES</code>
-  <p>В первом примере Польшар знает намного больше слов и выиграет без труда.</p>
+    <code>YES</code>
+    <p>В первом примере Польшар знает намного больше слов и выиграет без труда.</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 2 2
 kremowka
@@ -858,17 +907,18 @@ wadowicka
 kremowka
 wiedenska
 </pre>
-  <code>YES</code>
-  <p>Во втором примере если Польшар скажет вначале kremowka, то Врагошар не сможет использовать это слово. Единственное, что может сделать Врагошар — сказать wiedenska. Польшар скажет wadowicka и выиграет.</p>
+    <code>YES</code>
+    <p>Во втором примере если Польшар скажет вначале kremowka, то Врагошар не сможет использовать это слово. Единственное, что может сделать Врагошар — сказать wiedenska. Польшар скажет wadowicka и выиграет.</p>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 1 2
 a
 a
 b
 </pre>
-  <code>NO</code>
+    <code>NO</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -969,21 +1019,24 @@ int main() {
 
   <p>Вы можете выводить каждую из букв в любом регистре (заглавную или строчную).</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 5 1
 AABBB
 </pre>
-  <code>NO</code>
-  <p>В первом примере дверь входа A открывается перед приходом первого гостя и закрывается после прихода второго гостя, а дверь входа B открывается перед приходом третьего гостя и закрывается после прихода пятого. Охранник спокойно может обслужить обе двери, потому что первая закроется раньше, чем откроется вторая.</p>
+    <code>NO</code>
+    <p>В первом примере дверь входа A открывается перед приходом первого гостя и закрывается после прихода второго гостя, а дверь входа B открывается перед приходом третьего гостя и закрывается после прихода пятого. Охранник спокойно может обслужить обе двери, потому что первая закроется раньше, чем откроется вторая.</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5 1
 ABABB
 </pre>
-  <code>YES</code>
-  <p>Во втором примере дверь B открывается перед приходом второго гостя, но единственный охранник не может покинуть дверь A, потому что третий гость должен через нее пройти.</p>
+    <code>YES</code>
+    <p>Во втором примере дверь B открывается перед приходом второго гостя, но единственный охранник не может покинуть дверь A, потому что третий гость должен через нее пройти.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1072,23 +1125,26 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите n разделённых пробелами чисел b₁, b₂, ..., bₙ, где bᵢ — общее количество пикселей на минимальной фотографии, вмещающей всех друзей, кроме i-го из них.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3
 1 10
 5 5
 10 1
 </pre>
-  <code>75 110 60</code>
+    <code>75 110 60</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3
 2 1
 1 2
 2 1
 </pre>
-  <code>6 4 6</code>
+    <code>6 4 6</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1200,7 +1256,8 @@ int main() {
 
   <p>Если существует несколько массивов a, то можете выводить любой.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 3
@@ -1218,6 +1275,7 @@ int main() {
 2 2 2 3 9
 1 2 6
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1328,8 +1386,10 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите n чисел, по одному на каждой строке. В i-ой строке должен содержаться номер корзины, в которую попадет i-ый мяч.</p>
 
-  <h4>Пример 1</h4>
-  <code>4 3</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>4 3</code>
 <pre>
 2
 1
@@ -1337,13 +1397,14 @@ int main() {
 2
 </pre>
 
-  <h4>Пример 2</h4>
-  <code>3 1</code>
+    <h4>Пример 2</h4>
+    <code>3 1</code>
 <pre>
 1
 1
 1
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1388,7 +1449,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите q строк. В j-й строке выведите количество конфет, которое нужно съесть Тимуру, чтобы получить количество сахара, большее или равное x<sub>j</sub>. Выведите -1, если получить такое количество невозможно.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 8 7
@@ -1421,16 +1483,17 @@ int main() {
 -1
 </pre>
 
-  <p>В первом наборе входных данных примера:</p>
-  <ul>
-    <li>В первом запросе Тимур может съесть любую конфету, и он наберет нужное количество.</li>
-    <li>Во втором запросе Тимур может получить количество не менее 10, съев 7-ю и 8-ю конфету, таким образом потребив количество сахара, равное 14.</li>
-    <li>На третий запрос нет возможного ответа.</li>
-    <li>В четвертом запросе Тимур может получить количество как минимум 14, съев 7-ю и 8-ю конфету, таким образом потребив количество сахара, равное 14.</li>
-  </ul>
+    <p>В первом наборе входных данных примера:</p>
+    <ul>
+      <li>В первом запросе Тимур может съесть любую конфету, и он наберет нужное количество.</li>
+      <li>Во втором запросе Тимур может получить количество не менее 10, съев 7-ю и 8-ю конфету, таким образом потребив количество сахара, равное 14.</li>
+      <li>На третий запрос нет возможного ответа.</li>
+      <li>В четвертом запросе Тимур может получить количество как минимум 14, съев 7-ю и 8-ю конфету, таким образом потребив количество сахара, равное 14.</li>
+    </ul>
 
-  <p>Во втором наборе входных данных примера:</p>
-  <p>Для единственного запроса второго набора входных данных мы можем выбрать третью конфету, из которой Тимур получает количество сахара равное 3. Также можно получить тот же ответ, выбрав четвертую конфету.</p>
+    <p>Во втором наборе входных данных примера:</p>
+    <p>Для единственного запроса второго набора входных данных мы можем выбрать третью конфету, из которой Тимур получает количество сахара равное 3. Также можно получить тот же ответ, выбрав четвертую конфету.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1529,7 +1592,8 @@ int main() {
 
   <p>Если ответов может быть несколько, выведите любой.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 7 2
@@ -1547,6 +1611,7 @@ int main() {
 -1
 1 4
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1583,25 +1648,27 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите одно число — искомую сумму.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 2 3
 1 2 3
 3 2 1
 </pre>
-  <code>7</code>
-  <p>В первом примере есть три пары клеток с одинаковым цветом: в координатах (1,1) и (2,3), в координатах (1,2) и (2,2), в координатах (1,3) и (2,1). Соответствующие манхеттенские расстояния равны 3, 1 и 3, их сумма равна 7.</p>
+    <code>7</code>
+    <p>В первом примере есть три пары клеток с одинаковым цветом: в координатах (1,1) и (2,3), в координатах (1,2) и (2,2), в координатах (1,3) и (2,1). Соответствующие манхеттенские расстояния равны 3, 1 и 3, их сумма равна 7.</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3 4
 1 1 2 2
 2 1 1 2
 2 2 1 1
 </pre>
-  <code>76</code>
+    <code>76</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 4 4
 1 1 2 3
@@ -1609,7 +1676,8 @@ int main() {
 3 1 2 1
 1 1 2 1
 </pre>
-  <code>129</code>
+    <code>129</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1665,7 +1733,8 @@ int main() {
 
   <p>Все dᵢ<sup>min</sup> и dᵢ<sup>max</sup> считаются независимо друг от друга. Другими словами, для каждого i, dᵢ<sup>min</sup> — это просто минимальное значение среди всех возможных dᵢ.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 3
@@ -1691,9 +1760,10 @@ int main() {
 12 2 3 15
 23 13 3 15
 </pre>
-  <p>В первом наборе входных данных, для получения d₁<sup>min</sup> = 5 можно выбрать, например, d=[5,10,6]. Тогда b = [2+5,3+10,5+6] = [7,13,11] = [7,11,13].</p>
+    <p>В первом наборе входных данных, для получения d₁<sup>min</sup> = 5 можно выбрать, например, d=[5,10,6]. Тогда b = [2+5,3+10,5+6] = [7,13,11] = [7,11,13].</p>
 
-  <p>Для d₂<sup>min</sup> = 4 можно выбрать d = [9,4,8]. Тогда b = [2+9,3+4,5+8] = [11,7,13] = [7,11,13].</p>
+    <p>Для d₂<sup>min</sup> = 4 можно выбрать d = [9,4,8]. Тогда b = [2+9,3+4,5+8] = [11,7,13] = [7,11,13].</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1737,7 +1807,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите через пробел три целых числа — количество очков у первого, второго и третьего из друзей. Выводите очки именно в таком порядке — i-м выводите количество очков у i-го из друзей.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 1
@@ -1758,11 +1829,12 @@ bac roc lly iol iat
 2 2 6
 9 11 5
 </pre>
-  <p>В первом наборе входных данных примера:</p>
-  <ul>
-    <li>слово abc было написано первым и третьим другом — они получают по 1 очку;</li>
-    <li>слово def было написано только вторым другом — он получает 3 очка.</li>
-  </ul>
+    <p>В первом наборе входных данных примера:</p>
+    <ul>
+      <li>слово abc было написано первым и третьим другом — они получают по 1 очку;</li>
+      <li>слово def было написано только вторым другом — он получает 3 очка.</li>
+    </ul>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1799,26 +1871,29 @@ bac roc lly iol iat
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите k чисел m<sub>j</sub>, разделенных пробелом. m<sub>j</sub> — количество дел, запланированных Игорем на j-й (1 ≤ j ≤ k) день.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 2 10
 1 2
 </pre>
-  <code>0 1 1 1 0 2 0 1 1 1</code>
+    <code>0 1 1 1 0 2 0 1 1 1</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 2 6
 0 1
 </pre>
-  <code>1 2 1 2 1 2</code>
+    <code>1 2 1 2 1 2</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 3 15
 1 2 3
 </pre>
-  <code>0 1 1 2 0 2 0 2 1 1 0 3 0 1 1</code>
+    <code>0 1 1 2 0 2 0 2 1 1 0 3 0 1 1</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1836,17 +1911,23 @@ int main() {
   cin.tie(0);
 
   // ввод данных
-  int n, m;
+  int n; // число дел
+  int m; // число дней
   cin >> n >> m;
-  vector&lt;int&gt; Res(m + 1);
-  map&lt;int, int&gt; mp;
+
   pair&lt;int, int&gt; tmp;
+  map&lt;int, int&gt; mp; // список дел
+
+  // пробежим по всем делам
   for (int i = 0; i &lt; n; i++) {
+
+    // период повторения следующего дела
     cin >> tmp.first;
     tmp.first++;
     if (mp.find(tmp.first) == mp.end()) {
-      tmp.second = 1;
-      mp.insert(tmp);
+      // если в списке нет дел с таким периодом
+      tmp.second = 1; // то это будет первое дело
+      mp.insert(tmp); // добавим его в список
     } else {
       /*
       // 1й способ
@@ -1868,6 +1949,7 @@ int main() {
     }
   }
 
+  vector&lt;int&gt; Res(m + 1);
   while (mp.size() > 0) {
     tmp = *mp.begin();
     mp.erase(mp.begin());
