--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp15.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp15.html
@@ -59,9 +59,12 @@
   <h4>Вещественный бинарный поиск</h4>
   <p>Рассмотрим задачу, нахождения корня у функции f(x) = 0. Пусть известно, что функция непрерывна, но искать ответ по-честному тяжело. Пусть известно, что при значении left и right функция f(x) принимает разные знаки. Тогда мы можем прибегнуть к вещественному бинарному поиску.</p>
 <pre>
-double left = 0;
-double right = 1e6;
-double mid, eps = 0.000001;
+double left = 0; // левая граница
+double right = 1e6; // правая граница
+double mid; // середина
+double eps = 0.000001; // точность
+
+// вещественный бинарный поиск
 while (right - left > eps) {
   mid = (left + right) / 2;
   if (f(mid)) {
@@ -70,6 +73,7 @@ while (right - left > eps) {
     rightn = mid;
   }
 }
+
 cout &lt;&lt; fixed &lt;&lt; setprecision(8) &lt;&lt; left;
 </pre>
   <p>В качестве ответа можно вывести любое число в диапазоне от left до right. Поскольку ответ проверяется с некоторой точностью, мы можем добиться того, чтобы весь диапазон был близок к результату членов жюри. Если от вас требуют точность ответа 4 знака после запятой, переменную eps можно сделать с запасом меньше 10⁻⁶.</p>
@@ -135,21 +139,24 @@ cout &lt;&lt; fixed &lt;&lt; setprecission(8) &lt;&lt; left;
   <h4>Выходные данные</h4>
   <p>Выведите кубический корень от X. Допустимая погрешность - 6 знаков.</p>
 
-  <h4>Пример 1</h4>
-  <code>3</code>
-  <code>1.44224957030740830177251154964</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>3</code>
+    <code>1.44224957030740830177251154964</code>
 
-  <h4>Пример 2</h4>
-  <code>1</code>
-  <code>1</code>
+    <h4>Пример 2</h4>
+    <code>1</code>
+    <code>1</code>
 
-  <h4>Пример 3</h4>
-  <code>1000</code>
-  <code>10</code>
+    <h4>Пример 3</h4>
+    <code>1000</code>
+    <code>10</code>
 
-  <h4>Пример 4</h4>
-  <code>27</code>
-  <code>3</code>
+    <h4>Пример 4</h4>
+    <code>27</code>
+    <code>3</code>
+  </details>
 </article>
 
 
@@ -169,9 +176,11 @@ cout &lt;&lt; fixed &lt;&lt; setprecission(8) &lt;&lt; left;
   <h4>Выходные данные</h4>
   <p>Вывести число x - решение данного уравнения. Гарантируется что существует решение уравнения. Ответ вывести с точностью до 6 знаков после запятой.</p>
 
-  <h4>Пример</h4>
-  <code>2 2</code>
-  <code>1.414214</code>
+  <details>
+    <summary>Пример</summary>
+    <code>2 2</code>
+    <code>1.414214</code>
+  </details>
 </article>
 
 
@@ -191,13 +200,16 @@ cout &lt;&lt; fixed &lt;&lt; setprecission(8) &lt;&lt; left;
   <h4>Выходные данные</h4>
   <p>Выведите одно число — искомый x с точностью не менее 6 знаков после запятой.</p>
 
-  <h4>Пример 1</h4>
-  <code>2.0000000000</code>
-  <code>1.000000000000000</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>2.0000000000</code>
+    <code>1.000000000000000</code>
 
-  <h4>Пример 2</h4>
-  <code>18.0000000000</code>
-  <code>4.000000000000000</code>
+    <h4>Пример 2</h4>
+    <code>18.0000000000</code>
+    <code>4.000000000000000</code>
+  </details>
 </article>
 
 
@@ -217,13 +229,16 @@ cout &lt;&lt; fixed &lt;&lt; setprecission(8) &lt;&lt; left;
   <h4>Выходные данные</h4>
   <p>Выведите единственный корень уравнения с точностью не менее 4 знаков после десятичной точки.</p>
 
-  <h4>Пример 1</h4>
-  <code>1 -3 3 -1</code>
-  <code>1.00000062275372525455452432652</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>1 -3 3 -1</code>
+    <code>1.00000062275372525455452432652</code>
 
-  <h4>Пример 2</h4>
-  <code>-1 -6 -12 -7</code>
-  <code>-1</code>
+    <h4>Пример 2</h4>
+    <code>-1 -6 -12 -7</code>
+    <code>-1</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -291,20 +306,78 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Программа должна вывести единственное число — предполагаемый номинал загадочных резисторов. Номинал должен быть выведен с точность до 10⁻⁶.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3 11
 3 12 30
 </pre>
-  <code>6.00000000</code>
+    <code>6.00000000</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 7 110
 15 60 6 45 20 120 70
 </pre>
-  <code>30.00000000</code>
-  <p>Напомним, что при соединении двух резисторов с номиналами R₁ и R₂ общее сопротивление R вычисляется как R = R₁ + R₂ для последовательного соединения и как 1/R=1/R₁+1/R₂ для параллельного.</p>
+    <code>30.00000000</code>
+    <p>Напомним, что при соединении двух резисторов с номиналами R₁ и R₂ общее сопротивление R вычисляется как R = R₁ + R₂ для последовательного соединения и как 1/R=1/R₁+1/R₂ для параллельного.</p>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;iomanip&gt;
+
+using namespace std;
+
+int main() {
+  // ускорение ввода-вывода
+  ios_base::sync_with_stdio(false);
+  cin.tie(nullptr);
+  cout.tie(nullptr);
+
+  // условная компиляция
+#ifdef _DEBUG
+  freopen("input.txt", "rt", stdin);
+  freopen("output.txt", "wt", stdout);
+#endif
+
+  // ввод данных
+  int k; // число звеньев
+  cin >> k;
+  long double r; // общее сопротивление цепи
+  cin >> r;
+  vector&lt;long double&gt; A(k);
+  for (int i = 0; i &lt; k; i++) {
+    cin >> A[i];
+  }
+
+  // решение
+  long double left = 1e-8;
+  long double right = 1e5;
+
+  // вещественный бинарный поиск
+  while (right - left > 1e-8) {
+    long double mid = (right + left) / 2;
+    long double sum = 0; // вспомогательная сумма
+    for (int i = 0; i &lt; k; i++) {
+      sum += A[i] * mid / (A[i] + mid);
+    }
+    if (sum &lt; r) {
+      left = mid;
+    } else {
+      right = mid;
+    }
+  }
+
+  // вывод результата
+  cout &lt;&lt; fixed &lt;&lt; setprecision(8) &lt;&lt; left;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -330,19 +403,22 @@ int main() {
 
   <p>Абсолютная или относительная погрешность ответа не должна превышать 10⁻⁶.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3 50
 4 2 1
 </pre>
-  <code>2.000000000</code>
+    <code>2.000000000</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 2 90
 1 11
 </pre>
-  <code>1.909090909</code>
+    <code>1.909090909</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -366,24 +442,32 @@ int main() {
   cin.tie(0);
 
   // ввод данных
-  long long n, k;
+  long long n; // число накопителей
+  long long k; // процент рассеивания
   cin >> n >> k;
   vector&lt;long long&gt; A(n);
   for (int i = 0; i &lt; n; i++) {
-    cin >> A[i];
+    cin >> A[i]; // запас энергии
   }
 
   // решение
-  // зададим масштаб
-  long long mult = 1000000;
+  // преобразуем вещественные числа в целые
+  // используя заданный масштаб
+  long long mult = 1000000; // зададим масштаб
   for (int i = 0; i &lt; n; i++) {
     A[i] *= mult;
   }
-  double left = 0, right = 1e9, mid, sum_p, sum_m;
-  while (right - left > 0.000001) {
+
+  double left = 0, right = 1e9, mid; // левая, правая и середина
+  double sum_p, sum_m; // сумма положительных и отрицательных
+  double eps = 0.00001; // точность
+
+  // вещественный бинарный поиск
+  while (right - left > eps) {
     mid = (left + right) / 2;
     sum_p = 0;
     sum_m = 0;
+
     for (int i = 0; i &lt; n; i++) {
       if (A[i] > mid) {
         sum_p += A[i] - mid;
@@ -391,6 +475,7 @@ int main() {
         sum_m += mid - A[i];
       }
     }
+
     if (sum_p - sum_p * k / 100 > sum_m) {
       left = mid;
     } else {
@@ -434,22 +519,25 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите k различных чисел от 1 до n — номера леммингов, которые отправятся на уступы на высотах h, 2h, ..., kh, соответственно, при оптимальном способе организации прыжка. Если существует несколько способов выбрать леммингов, выведите любой.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 5 3 2
 1 2 3 2 1
 1 2 1 2 10
 </pre>
-  <code>5 2 4</code>
+    <code>5 2 4</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5 3 10
 3 4 3 2 1
 5 4 3 2 1
 </pre>
-  <code>4 3 1</code>
-  <p>Рассмотрим первый тестовый пример. Пятый лемминг со скоростью 10 забирается на уступ на высоте 2 за 1/5 минуты; второй лемминг со скоростью 2 забирается на уступ на высоте 4 за 2 минуты; четвертый лемминг со скоростью 2 забирается на уступ на высоте 6 за 3 минуты. Все лемминги успевают занять свои места за 3 минуты.</p>
+    <code>4 3 1</code>
+    <p>Рассмотрим первый тестовый пример. Пятый лемминг со скоростью 10 забирается на уступ на высоте 2 за 1/5 минуты; второй лемминг со скоростью 2 забирается на уступ на высоте 4 за 2 минуты; четвертый лемминг со скоростью 2 забирается на уступ на высоте 6 за 3 минуты. Все лемминги успевают занять свои места за 3 минуты.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -489,22 +577,25 @@ int main() {
 
   <p>Ваш ответ будет считаться правильным, если его абсолютная или относительная погрешность не превышает 10⁻⁶. Формально, пусть ваш ответ равен a, а ответ жюри — b. Ваш ответ будет считаться правильным, если |a-b|/max(1,b) ≤ 10⁻⁶.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3
 7 1 3
 1 2 1
 </pre>
-  <code>2.000000000000</code>
+    <code>2.000000000000</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 4
 5 10 3 2
 2 3 2 4
 </pre>
-  <code>1.400000000000</code>
-  <p>В первом примере все друзья могут встретиться в точке 5 через 2 секунды. Для этого первый друг должен идти все время со своей максимальной скоростью на юг, а второй и третий должны идти со своими максимальными скоростями на север.</p>
+    <code>1.400000000000</code>
+    <p>В первом примере все друзья могут встретиться в точке 5 через 2 секунды. Для этого первый друг должен идти все время со своей максимальной скоростью на юг, а второй и третий должны идти со своими максимальными скоростями на север.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -595,6 +686,8 @@ int main() {
 
   <p>Формально, пусть ваш ответ равен a, а ответ жюри равен b. Ваш ответ будет зачтен, если |a-b|/max(1,|b|) ≤ 10⁻⁶.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 1
@@ -621,6 +714,7 @@ int main() {
 </pre>
   <code>0.625</code>
   <p>В третьем примере оптимально построить заповедник радиуса 5/8 с центром в точке (1/2, 5/8).</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -726,7 +820,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите n строк. В i-й строке требуется вывести слово «Vanya», если последний удар по i-му монстру был нанесён Ваней, «Vova», если Вовой, либо «Both», если удар был нанесен ребятами одновременно.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4 3 2
 1
@@ -740,9 +836,9 @@ Vova
 Vanya
 Both
 </pre>
-  <p>В первом примере первый удар наносит Ваня в момент времени 1 / 3, второй удар наносит Вова в момент времени 1 / 2, третий удар наносит Ваня в момент времени 2 / 3, четвертый и пятый удар Ваня и Вова наносят одновременно в момент времени 1.</p>
+    <p>В первом примере первый удар наносит Ваня в момент времени 1 / 3, второй удар наносит Вова в момент времени 1 / 2, третий удар наносит Ваня в момент времени 2 / 3, четвертый и пятый удар Ваня и Вова наносят одновременно в момент времени 1.</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 2 1 1
 1
@@ -752,7 +848,8 @@ Both
 Both
 Both
 </pre>
-  <p>Во втором примере Ваня и Вова одновременно наносят первый и второй удар в момент времени 1.</p>
+    <p>Во втором примере Ваня и Вова одновременно наносят первый и второй удар в момент времени 1.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -790,21 +887,24 @@ Both
   <h4>Выходные данные</h4>
   <p>Выведите минимальное число r такое, что каждый населенный пункт будет обеспечен сотовой связью.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3 2
 -2 2 4
 -3 0
 </pre>
-  <code>4</code>
+    <code>4</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5 3
 1 5 10 14 17
 4 11 15
 </pre>
-  <code>3</code>
+    <code>3</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -841,12 +941,14 @@ Both
   <h4>Выходные данные</h4>
   <p>Вывести единственное число — наименьшее значение k, удовлетворяющее Васю.</p>
 
-  <h4>Пример</h4>
-  <code>68</code>
-  <code>3</code>
-  <p>В примере количество эклеров при k = 3 будет изменяться следующим образом (первым ест Вася):</p>
-  <code>68→65→59→56→51→48→44→41→37→34→31→28→26→23→21→18→17→14→13→10→9→6→6→3→3→0</code>
-  <p>Итого, Вася съест 39 эклеров, а Петя — 29.</p>
+  <details>
+    <summary>Пример</summary>
+    <code>68</code>
+    <code>3</code>
+    <p>В примере количество эклеров при k = 3 будет изменяться следующим образом (первым ест Вася):</p>
+    <code>68→65→59→56→51→48→44→41→37→34→31→28→26→23→21→18→17→14→13→10→9→6→6→3→3→0</code>
+    <p>Итого, Вася съест 39 эклеров, а Петя — 29.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -901,25 +1003,27 @@ Both
 
   <p>Ответ будет считаться правильным, если его абсолютная или относительная погрешность не превышает 10⁻⁶. Формально, пусть ваш ответ равен p, а ответ жюри равен q. Ваш ответ будет зачтен, если |p-q|max(1,|q|) ≤ 10⁻⁶.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 2
 12
 11 8
 7 5
 </pre>
-  <code>10.0000000000</code>
+    <code>10.0000000000</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3
 1
 1 4 1
 2 5 3
 </pre>
-  <code>-1</code>
+    <code>-1</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 6
 2
@@ -929,14 +1033,15 @@ Both
   <code>85.4800000000</code>
   <p>Рассмотрим первый пример.</p>
 
-  <p>Сначала масса ракеты с топливом — 22 тонны.</p>
-  <il>
-    <li>При взлёте с Земли одна тонна топлива может поднять 11 тонн груза, поэтому для подъёма 22 тонн понадобится потратить 2 тонны топлива. Останется 20 тонн ракеты с топливом.</li>
-    <li>При посадке на Марс одна тонна топлива может затормозить 5 тонн груза, поэтому для торможения 20 тонн понадобится потратить 4 тонны топлива. Останется 16 тонн ракеты с топливом.</li>
-    <li>При взлёте с Марса одна тонна топлива может поднять 8 тонн груза, поэтому для подъёма 16 тонн понадобится потратить 2 тонны топлива. Останется 14 тонн ракеты с топливом.</li>
-    <li>При посадке на Землю одна тонна топлива может затормозить 7 тонн груза, поэтому для торможения 14 тонн понадобится потратить 2 тонны топлива. Останется 12 тонн, то есть только ракета.</li>
-  </il>
-  <p>Во втором примере ракета даже не сможет взлететь с Земли.</p>
+    <p>Сначала масса ракеты с топливом — 22 тонны.</p>
+    <il>
+      <li>При взлёте с Земли одна тонна топлива может поднять 11 тонн груза, поэтому для подъёма 22 тонн понадобится потратить 2 тонны топлива. Останется 20 тонн ракеты с топливом.</li>
+      <li>При посадке на Марс одна тонна топлива может затормозить 5 тонн груза, поэтому для торможения 20 тонн понадобится потратить 4 тонны топлива. Останется 16 тонн ракеты с топливом.</li>
+      <li>При взлёте с Марса одна тонна топлива может поднять 8 тонн груза, поэтому для подъёма 16 тонн понадобится потратить 2 тонны топлива. Останется 14 тонн ракеты с топливом.</li>
+      <li>При посадке на Землю одна тонна топлива может затормозить 7 тонн груза, поэтому для торможения 14 тонн понадобится потратить 2 тонны топлива. Останется 12 тонн, то есть только ракета.</li>
+    </il>
+    <p>Во втором примере ракета даже не сможет взлететь с Земли.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -983,7 +1088,8 @@ Both
 
   <p>Ваш ответ будет считаться правильным, если его абсолютная или относительная ошибка не превосходит 10⁻⁶. Формально, пусть ваш ответ равен a, а ответ жюри равен b. Ваш ответ будет зачтен, если |a-b|max(1,|b|)≤10⁻⁶.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 1
@@ -1017,9 +1123,10 @@ Both
 3
 6
 </pre>
-  <p>В 1-м наборе входных данных есть только один человек, поэтому целесообразно выбрать место встречи в его позиции. Тогда он доберется до него за 3 минуты, которые нужны ему, чтобы одеться.</p>
-  <p>Во 2-м наборе входных данных есть 2 человека, которым не нужно время, чтобы одеться. Чтобы добраться до позиции 2, каждому из них потребуется по одной минуте.</p>
-  <p>В 5-м наборе входных данных 1-му человеку нужно 4 минуты, чтобы добраться до позиции 1 (4 минуты, чтобы одеться, и 0 минут на сам путь); 2-му человеку нужно 2 минуты, чтобы добраться до позиции 1 (1 минута, чтобы одеться, и 1 минута на сам путь); 3-му человеку нужно 4 минуты, чтобы добраться до позиции 1 (2 минуты, чтобы одеться, и 2 минуты на сам путь).</p>
+    <p>В 1-м наборе входных данных есть только один человек, поэтому целесообразно выбрать место встречи в его позиции. Тогда он доберется до него за 3 минуты, которые нужны ему, чтобы одеться.</p>
+    <p>Во 2-м наборе входных данных есть 2 человека, которым не нужно время, чтобы одеться. Чтобы добраться до позиции 2, каждому из них потребуется по одной минуте.</p>
+    <p>В 5-м наборе входных данных 1-му человеку нужно 4 минуты, чтобы добраться до позиции 1 (4 минуты, чтобы одеться, и 0 минут на сам путь); 2-му человеку нужно 2 минуты, чтобы добраться до позиции 1 (1 минута, чтобы одеться, и 1 минута на сам путь); 3-му человеку нужно 4 минуты, чтобы добраться до позиции 1 (2 минуты, чтобы одеться, и 2 минуты на сам путь).</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
