--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp16.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp16.html
@@ -260,13 +260,15 @@ cout &lt;&lt; DP[n][m];
   <h4>Выходные данные</h4>
   <p>Требуется вывести наибольшую длину возрастающей подпоследовательности.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 3 29 5 5 28 6
 </pre>
   <code>3</code>
-  <p>В этой задаче <strong>подпоследовательность</strong> это не идущие подряд числа, между ними могут быть другие чилса, не входящие в данную подпоследовательность.</p>
+    <p>В этой задаче <strong>подпоследовательность</strong> это не идущие подряд числа, между ними могут быть другие чилса, не входящие в данную подпоследовательность.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -334,16 +336,18 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите минимальную сумму, потратив которую можно попасть в правый нижний угол.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary></summary>
+    <h4>Пример 1</h4>
 <pre>
 3 4
 1 1 1 1
 5 2 2 100
 9 4 2 1
 </pre>
-  <code>8</code>
+    <code>8</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5 5
 1 1 1 1 1
@@ -352,7 +356,8 @@ int main() {
 2 2 2 2 1
 1 1 1 1 1
 </pre>
-  <code>11</code>
+    <code>11</code>
+  </details>
 </article>
 
 
@@ -372,13 +377,16 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите слово YES, если число N можно получить из числа 1, или NO – в противном случае.</p>
 
-  <h4>Пример 1</h4>
-  <code>1</code>
-  <code>YES</code>
+  <details>
+    <summary></summary>
+    <h4>Пример 1</h4>
+    <code>1</code>
+    <code>YES</code>
 
-  <h4>Пример 2</h4>
-  <code>5</code>
-  <code>NO</code>
+    <h4>Пример 2</h4>
+    <code>5</code>
+    <code>NO</code>
+  </details>
 </article>
 
 
@@ -404,22 +412,25 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите одно число — искомое количество дней.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4
 10 3 5 10
 </pre>
-  <code>5</code>
+    <code>5</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5
 10 2 8 3 5
 </pre>
-  <code>5</code>
-  <p>В первом примере после третьего дня будет разрушена вторая плитка, и единственным оставшимся маршрутом для гуляний будет 1 → 3 → 4. После пятого дня между первой и последней плиткой будет промежуток в две плитки, который уже невозможно перепрыгнуть.</p>
+    <code>5</code>
+    <p>В первом примере после третьего дня будет разрушена вторая плитка, и единственным оставшимся маршрутом для гуляний будет 1 → 3 → 4. После пятого дня между первой и последней плиткой будет промежуток в две плитки, который уже невозможно перепрыгнуть.</p>
 
-  <p>Во втором примере до пятого дня включительно будет доступен путь 1 → 3 → 5. На шестой день будет разрушена последняя плитка, и прогулка будет сорвана.</p>
+    <p>Во втором примере до пятого дня включительно будет доступен путь 1 → 3 → 5. На шестой день будет разрушена последняя плитка, и прогулка будет сорвана.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -454,19 +465,22 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное число – минимальное количество энергии, которую должен потратить игрок на преодоление платформ (конечно же в предположении, что cheat-коды использовать нельзя).</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3
 1 5 10
 </pre>
-  <code>9</code>
+    <code>9</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3
 1 5 2
 </pre>
-  <code>3</code>
+    <code>3</code>
+  </details>
 </article>
 
 
@@ -488,29 +502,32 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное число — ответ на задачу.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4
 1 3 1 1
 2 1 2 2
 </pre>
-  <code>5</code>
+    <code>5</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3
 1 2 5
 2 9 4
 </pre>
-  <code>7</code>
+    <code>7</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 3
 3 7 8
 1 2 5
 </pre>
-  <code>8</code>
+    <code>8</code>
+  </details>
 </article>
 
 
@@ -536,17 +553,20 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите одно число — максимально возможное количество кусочков ленточки. Гарантируется, что существует хотя бы одно корректное разрезание ленточки.</p>
 
-  <h4>Пример 1</h4>
-  <code>5 5 3 2</code>
-  <code>2</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>5 5 3 2</code>
+    <code>2</code>
 
-  <h4>Пример 2</h4>
-  <code>7 5 5 2</code>
-  <code>2</code>
+    <h4>Пример 2</h4>
+    <code>7 5 5 2</code>
+    <code>2</code>
 
-  <p>В первом тестовом примере нужно разрезать ленточку на два кусочка: один из них длины 2, второй длины 3.</p>
+    <p>В первом тестовом примере нужно разрезать ленточку на два кусочка: один из них длины 2, второй длины 3.</p>
 
-  <p>Во втором примере нужно разрезать ленточку на два кусочка: один из них длины 5, второй длины 2.</p>
+    <p>Во втором примере нужно разрезать ленточку на два кусочка: один из них длины 5, второй длины 2.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -624,9 +644,11 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите найденную последовательность или -1, если число K больше количества правильных последовательностей.</p>
 
-  <h4>Пример</h4>
-  <code>3 1</code>
-  <code>000</code>
+  <details>
+    <summary>Пример</summary>
+    <code>3 1</code>
+    <code>000</code>
+  </details>
 </article>
 
 
@@ -648,13 +670,16 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите ответ на задачу - единственное число.</p>
 
-  <h4>Пример 1</h4>
-  <code>2</code>
-  <code>4</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>2</code>
+    <code>4</code>
 
-  <h4>Пример 2</h4>
-  <code>3</code>
-  <code>7</code>
+    <h4>Пример 2</h4>
+    <code>3</code>
+    <code>7</code>
+  </details>
 </article>
 
 
@@ -674,20 +699,23 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Необходимо вывести целое число в десятичной записи – ответ на задачу.</p>
 
-  <h4>Пример 1</h4>
-  <code>2 10</code>
-  <code>90</code>
-  <p>Двузначные числа в десятичной системе счисления это все числа от 10 до 99, так как в их записи не может быть двух нулей подряд. Вего таких чисел ровно 90.</p>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>2 10</code>
+    <code>90</code>
+    <p>Двузначные числа в десятичной системе счисления это все числа от 10 до 99, так как в их записи не может быть двух нулей подряд. Вего таких чисел ровно 90.</p>
 
-  <h4>Пример 2</h4>
-  <code>4 2</code>
-  <code>5</code>
-  <p>Четырехзначные числа в двоичной системе счисления без двух нулей подряд это 1111, 1110, 1101, 1011, 1010. Таких чисел ровно 5.</p>
+    <h4>Пример 2</h4>
+    <code>4 2</code>
+    <code>5</code>
+    <p>Четырехзначные числа в двоичной системе счисления без двух нулей подряд это 1111, 1110, 1101, 1011, 1010. Таких чисел ровно 5.</p>
 
-  <h4>Пример 3</h4>
-  <code>6 3</code>
-  <code>328</code>
-  <p>В этой задаче число не начинается с 0. Т.е. 11 это двузначное число, а 01 это однозначное.</p>
+    <h4>Пример 3</h4>
+    <code>6 3</code>
+    <code>328</code>
+    <p>В этой задаче число не начинается с 0. Т.е. 11 это двузначное число, а 01 это однозначное.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -748,14 +776,16 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Вывод должен содержать одно число - число различных вариантов путей от верхнего левого угла до правого нижнего. Для каждого поля будет менее чем 2³¹ различных путей.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3 4
 2 1 1 2
 3 2 1 44
 3 1 1 0
 </pre>
-  <code>3</code>
+    <code>3</code>
+  </details>
 </article>
 
 
@@ -786,7 +816,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Вывести одно число – максимально возможное количество баллов.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 #***#*
@@ -796,7 +827,8 @@ int main() {
 *##*#*
 ******
 </pre>
-  <code>4</code>
+    <code>4</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -868,26 +900,29 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите количество различных значений сумм.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3
 1 1 2
 </pre>
-  <code>5</code>
+    <code>5</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3
 1 3 2
 </pre>
-  <code>7</code>
+    <code>7</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 5
 49 100 98 49 0
 </pre>
-  <code>10</code>
+    <code>10</code>
+  </details>
 </article>
 
 
@@ -909,23 +944,26 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите одно число - максимальное суммарное богатство гангстеров, попавших в ресторан. Если зайти не удалось никому, вывести 0.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4 10 20
 10 16 8 16
 10 11 15 1
 10 7 1 8
 </pre>
-  <code>26</code>
+    <code>26</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 2 17 100
 5 0
 50 33
 6 1
 </pre>
-  <code>0</code>
+    <code>0</code>
+  </details>
 </article>
 
 
@@ -947,25 +985,28 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное число - количество способов добраться до последней клетки. Поскольку это число может быть очень большим, выведите его по модулю 10⁹ + 7.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 8 3
 01100010
 </pre>
-  <code>3</code>
+    <code>3</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 8 3
 00000001
 </pre>
-  <code>0</code>
+    <code>0</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 8 4
 00111000
 </pre>
-  <code>4</code>
+    <code>4</code>
+  </details>
 </article>
 
