--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp17.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp17.html
@@ -228,9 +228,11 @@ cout &lt;&lt; DP[str1.size()][str2.size()];
   <h4>Выходные данные</h4>
   <p>Значение миллиардной Функции Васи в точке S.</p>
 
-  <h4>Пример</h4>
-  <code>1</code>
-  <code>10</code>
+  <details>
+    <summary>Пример</summary>
+    <code>1</code>
+    <code>10</code>
+  </details>
 </article>
 
 
@@ -250,17 +252,20 @@ cout &lt;&lt; DP[str1.size()][str2.size()];
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите количество счастливых билетов по модулю 10⁹ + 33.</p>
 
-  <h4>Пример 1</h4>
-  <code>1</code>
-  <code>10</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>1</code>
+    <code>10</code>
 
-  <h4>Пример 2</h4>
-  <code>2</code>
-  <code>670</code>
+    <h4>Пример 2</h4>
+    <code>2</code>
+    <code>670</code>
 
-  <h4>Пример 3</h4>
-  <code>3</code>
-  <code>55252</code>
+    <h4>Пример 3</h4>
+    <code>3</code>
+    <code>55252</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -332,17 +337,20 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите ответ – количество требуемых чисел по модулю 10⁹ + 7</p>
 
-  <h4>Пример 1</h4>
-  <code>1</code>
-  <code>10</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>1</code>
+    <code>10</code>
 
-  <h4>Пример 2</h4>
-  <code>2</code>
-  <code>55</code>
+    <h4>Пример 2</h4>
+    <code>2</code>
+    <code>55</code>
 
-  <h4>Пример 3</h4>
-  <code>10</code>
-  <code>92378</code>
+    <h4>Пример 3</h4>
+    <code>10</code>
+    <code>92378</code>
+  </details>
 </article>
 
 
@@ -362,9 +370,11 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите число — количество счастливых билетиков по модулю 10⁹ + 7 (т.е. остаток от деления количества счастливых билетиков на 10⁹ + 7)</p>
 
-  <h4>Пример</h4>
-  <code>1</code>
-  <code>10</code>
+  <details>
+    <summary>Пример</summary>
+    <code>1</code>
+    <code>10</code>
+  </details>
 </article>
 
 
@@ -386,17 +396,20 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите число плохих лотерейных билетов. Так как ответ может быть слишком большим, найдите его по модулю 1000000123.</p>
 
-  <h4>Пример 1</h4>
-  <code>1</code>
-  <code>1</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>1</code>
+    <code>1</code>
 
-  <h4>Пример 2</h4>
-  <code>2</code>
-  <code>7</code>
+    <h4>Пример 2</h4>
+    <code>2</code>
+    <code>7</code>
 
-  <h4>Пример 3</h4>
-  <code>3</code>
-  <code>79</code>
+    <h4>Пример 3</h4>
+    <code>3</code>
+    <code>79</code>
+  </details>
 </article>
 
 
@@ -416,17 +429,20 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите количество n-значных 3-простых чисел, вычисленное по модулю 10⁹ + 9.</p>
 
-  <h4>Пример 1</h4>
-  <code>3</code>
-  <code>143</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>3</code>
+    <code>143</code>
 
-  <h4>Пример 2</h4>
-  <code>4</code>
-  <code>204</code>
+    <h4>Пример 2</h4>
+    <code>4</code>
+    <code>204</code>
 
-  <h4>Пример 3</h4>
-  <code>5</code>
-  <code>374</code>
+    <h4>Пример 3</h4>
+    <code>5</code>
+    <code>374</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -521,21 +537,24 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное число — количество способов получить из числа n единицу по модулю (10⁹ + 7) (т. е. вывести остаток от деления количества способов получить единицу на 10⁹ + 7).</p>
 
-  <h4>Пример 1</h4>
-  <code>1</code>
-  <code>1</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>1</code>
+    <code>1</code>
 
-  <h4>Пример 2</h4>
-  <code>9</code>
-  <code>2</code>
+    <h4>Пример 2</h4>
+    <code>9</code>
+    <code>2</code>
 
-  <h4>Пример 3</h4>
-  <code>30</code>
-  <code>13</code>
+    <h4>Пример 3</h4>
+    <code>30</code>
+    <code>13</code>
 
-  <h4>Пример 4</h4>
-  <code>4</code>
-  <code>2</code>
+    <h4>Пример 4</h4>
+    <code>4</code>
+    <code>2</code>
+  </details>
 </article>
 
 
@@ -564,13 +583,16 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите число – количество рекурсивно палиндромных разбиений числа N. Так как это число может быть очень большим, выведите остаток от деления количества разбиений на 10⁹ + 7.</p>
 
-  <h4>Пример 1</h4>
-  <code>7</code>
-  <code>6</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>7</code>
+    <code>6</code>
 
-  <h4>Пример 2</h4>
-  <code>20</code>
-  <code>60</code>
+    <h4>Пример 2</h4>
+    <code>20</code>
+    <code>60</code>
+  </details>
 </article>
 
 
@@ -596,15 +618,18 @@ int main() {
 
   <p>Выведите ответ по модулю 1000000007(10⁹ + 7).</p>
 
-  <h4>Пример 1</h4>
-  <code>3 3 7</code>
-  <code>4</code>
-  <p>В первом тесте существуют следующие комбинации попаданий Ирой в мишень, при которых она набирает очков больше, чем Игорь. [2,3,3] сумма очков: 8; [3,2,3] сумма очков: 8;
-  [3,3,2] сумма очков: 8; [3,3,3] сумма очков: 9;</p>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>3 3 7</code>
+    <code>4</code>
+    <p>В первом тесте существуют следующие комбинации попаданий Ирой в мишень, при которых она набирает очков больше, чем Игорь. [2,3,3] сумма очков: 8; [3,2,3] сумма очков: 8;
+    [3,3,2] сумма очков: 8; [3,3,3] сумма очков: 9;</p>
 
-  <h4>Пример 2</h4>
-  <code>5 5 6</code>
-  <code>3119</code>
+    <h4>Пример 2</h4>
+    <code>5 5 6</code>
+    <code>3119</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -682,13 +707,16 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В первой строке выведите количество перестановок длины n, имеющих ровно t инверсий. Ответ следует выводить по модулю 10⁹ + 7.</p>
 
-  <h4>Пример 1</h4>
-  <code>3 0</code>
-  <code>1</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>3 0</code>
+    <code>1</code>
 
-  <h4>Пример 2</h4>
-  <code>3 1</code>
-  <code>2</code>
+    <h4>Пример 2</h4>
+    <code>3 1</code>
+    <code>2</code>
+  </details>
 </article>
 
 
@@ -710,20 +738,23 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите количество красивых расстановок войск по модулю 100000000 (10⁸), то есть количество таких расстановок, где подряд стоит не более k₁ пехотинцев и не более k₂ всадников.</p>
 
-  <h4>Пример 1</h4>
-  <code>2 1 1 10</code>
-  <code>1</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>2 1 1 10</code>
+    <code>1</code>
 
-  <h4>Пример 2</h4>
-  <code>2 3 1 2</code>
-  <code>5</code>
+    <h4>Пример 2</h4>
+    <code>2 3 1 2</code>
+    <code>5</code>
 
-  <h4>Пример 3</h4>
-  <code>2 4 1 1</code>
-  <code>0</code>
-  <p>Обозначим пехотинца как 1, а всадника как 2.</p>
-  <p>В первом примере единственное красивое построение: 121</p>
-  <p>Во втором примере существует 5 красивых построений: 12122, 12212, 21212, 21221, 22121</p>
+    <h4>Пример 3</h4>
+    <code>2 4 1 1</code>
+    <code>0</code>
+    <p>Обозначим пехотинца как 1, а всадника как 2.</p>
+    <p>В первом примере единственное красивое построение: 121</p>
+    <p>Во втором примере существует 5 красивых построений: 12122, 12212, 21212, 21221, 22121</p>
+  </details>
 </article>
 
 
@@ -749,23 +780,26 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное число — максимальное количество тугриков, которые Лаврентий может заработать.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 10 2 2 1
 7 3 2 100
 12 3 1 10
 </pre>
-  <code>241</code>
+    <code>241</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 100 1 25 50
 15 5 20 10
 </pre>
-  <code>200</code>
-  <p>Чтобы получить наибольшее количество тугриков в первом примере, нужно испечь 2 булочки с начинкой 1, 4 булочки с начинкой 2 и одну булочку без начинки.</p>
+    <code>200</code>
+    <p>Чтобы получить наибольшее количество тугриков в первом примере, нужно испечь 2 булочки с начинкой 1, 4 булочки с начинкой 2 и одну булочку без начинки.</p>
 
-  <p>Во втором примере имеет смысл испечь только 4 булочки без начинки.</p>
+    <p>Во втором примере имеет смысл испечь только 4 булочки без начинки.</p>
+  </details>
 </article>
 
 
@@ -792,7 +826,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В первую строку выведите искомое наименьшее количество концевых нулей в произведении чисел вдоль пути. Во вторую выведите сам путь.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 1 2 3
@@ -803,6 +838,7 @@ int main() {
 0
 DDRR
 </pre>
+  </details>
 </article>
 
 
@@ -838,7 +874,8 @@ DDRR
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите q строк, i-я должна содержать ответ на i-й запрос.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 2 1
@@ -871,13 +908,14 @@ DDRR
 4
 2993004
 </pre>
-  <p>В первом наборе входных данных только один запрос. Нам надо найти сумму площадей всех прямоугольников, которые вмещают прямоугольник 1x1 и сами вмещаются в прямоугольник 3x4.</p>
+    <p>В первом наборе входных данных только один запрос. Нам надо найти сумму площадей всех прямоугольников, которые вмещают прямоугольник 1x1 и сами вмещаются в прямоугольник 3x4.</p>
 
-  <p>Нам подходит только прямоугольник 2x3, так как 1 &lt; 2 (сравниваем высоты) и 1 &lt; 3 (сравниваем ширины), то 1x1 помещается в него. Аналогично, 2 &lt; 3 (сравниваем высоты) и 3 &lt; 4 (сравниваем ширины), то есть он помещается в 3x4.</p>
+    <p>Нам подходит только прямоугольник 2x3, так как 1 &lt; 2 (сравниваем высоты) и 1 &lt; 3 (сравниваем ширины), то 1x1 помещается в него. Аналогично, 2 &lt; 3 (сравниваем высоты) и 3 &lt; 4 (сравниваем ширины), то есть он помещается в 3x4.</p>
 
-  <p>Прямоугольник 3x2 слишком высок, чтобы поместиться в 3x4 rectangle.</p>
+    <p>Прямоугольник 3x2 слишком высок, чтобы поместиться в 3x4 rectangle.</p>
 
-  <p>Суммарная площадь в ответа равна 2⋅3 = 6.</p>
+    <p>Суммарная площадь в ответа равна 2⋅3 = 6.</p>
+  </details>
 </article>
 
 
@@ -905,7 +943,8 @@ DDRR
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число — сумму номеров всех банок, которые упадут.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 10
 9
@@ -931,19 +970,20 @@ DDRR
 63145186
 58116199242129511
 </pre>
-  <p>Первый набор входных данных изображен в условии. Сумма номеров, которые упадут, равна</p>
-  <code>1²+2²+3²+5²+6²+9²=1+4+9+25+36+81=156.</code>
+    <p>Первый набор входных данных изображен в условии. Сумма номеров, которые упадут, равна</p>
+    <code>1²+2²+3²+5²+6²+9²=1+4+9+25+36+81=156.</code>
 
-  <p>Во втором наборе входных данных упадет только банка с номером 1², поэтому ответ равен</p>
-  <code>1²=1.</code>
+    <p>Во втором наборе входных данных упадет только банка с номером 1², поэтому ответ равен</p>
+    <code>1²=1.</code>
 
-  <p>В третьем наборе входных данных упадут банки с номерами 1² и 2², поэтому ответ равен</p>
-  <code>1²+2²=1+4=5.</code>
+    <p>В третьем наборе входных данных упадут банки с номерами 1² и 2², поэтому ответ равен</p>
+    <code>1²+2²=1+4=5.</code>
 
-  <p>В четвертом наборе входных данных упадут банки с номерами 1² и 3², поэтому ответ равен</p>
-  <code>1²+3²=1+9=10.</code>
+    <p>В четвертом наборе входных данных упадут банки с номерами 1² и 3², поэтому ответ равен</p>
+    <code>1²+3²=1+9=10.</code>
 
-  <p>В пятом наборе входных данных упадут банки с номерами 1², 2² и 4², поэтому ответ равен</p>
-  <code>1²+2²+4²=1+4+16=21.</code>
+    <p>В пятом наборе входных данных упадут банки с номерами 1², 2² и 4², поэтому ответ равен</p>
+    <code>1²+2²+4²=1+4+16=21.</code>
+  </details>
 </article>
 
