--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp18.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp18.html
@@ -174,9 +174,11 @@ for (int i = 0; i &lt; (1 &lt;&lt; n); i++) {
   <h4>Выходные данные</h4>
   <p>Выведите число 2ⁿ, то есть число, у которого n-й бит равен 1, а остальные — нули.</p>
 
-  <h4>Пример</h4>
-  <code>2</code>
-  <code>4</code>
+  <details>
+    <summary>Пример</summary>
+    <code>2</code>
+    <code>4</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -229,9 +231,11 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите число, которое получается из числа A установкой значения i-го бита = 0.</p>
 
-  <h4>Пример</h4>
-  <code>5 2</code>
-  <code>1</code>
+  <details>
+    <summary>Пример</summary>
+    <code>5 2</code>
+    <code>1</code>
+  </details>
 </article>
 
 
@@ -251,13 +255,16 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите значение i-го бита числа A, то есть 0 или 1.</p>
 
-  <h4>Пример 1</h4>
-  <code>5 1</code>
-  <code>0</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>5 1</code>
+    <code>0</code>
 
-  <h4>Пример 2</h4>
-  <code>5 2</code>
-  <code>1</code>
+    <h4>Пример 2</h4>
+    <code>5 2</code>
+    <code>1</code>
+  </details>
 
   <details>
     <summary>Решение. Первый способ</summary>
@@ -337,9 +344,11 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите число, которое получается из числа A инвертированием i-го бита.</p>
 
-  <h4>Пример</h4>
-  <code>5 2</code>
-  <code>1</code>
+  <details>
+    <summary>Пример</summary>
+    <code>5 2</code>
+    <code>1</code>
+  </details>
 </article>
 
 
@@ -359,9 +368,11 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите число A в битовой форме: 8 бит, старшие биты слева, младшие — справа</p>
 
-  <h4>Пример</h4>
-  <code>1</code>
-  <code>00000001</code>
+  <details>
+    <summary>Пример</summary>
+    <code>1</code>
+    <code>00000001</code>
+  </details>
 </article>
 
 
@@ -392,7 +403,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого теста выведите f(n).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 3 4 2
@@ -404,6 +416,7 @@ int main() {
 4
 76
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -469,29 +482,32 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное целое число — искомый максимальный xor отрезка последовательных элементов.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 5
 1 2 1 1 2
 </pre>
-  <code>3</code>
+    <code>3</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3
 1 2 7
 </pre>
-  <code>7</code>
+    <code>7</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 4
 4 2 4 8
 </pre>
-  <code>14</code>
-  <p>В первом примере одним из оптимальных отрезков является отрезок, состоящий из первого и второго элемента массива, если считать что элементы массива нумеруются начиная с единицы.</p>
+    <code>14</code>
+    <p>В первом примере одним из оптимальных отрезков является отрезок, состоящий из первого и второго элемента массива, если считать что элементы массива нумеруются начиная с единицы.</p>
 
-  <p>Во втором примере оптимальный отрезок всего один, в нем содержится ровно один элемента массива (элемент номер три).</p>
+    <p>Во втором примере оптимальный отрезок всего один, в нем содержится ровно один элемента массива (элемент номер три).</p>
+  </details>
 </article>
 
 
@@ -519,22 +535,25 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите одно целое число — величину максимальной &-суммы среди всех подотрезков последовательности a.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 1
 5
 </pre>
-  <code>5</code>
+    <code>5</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 2
 1000 7
 </pre>
-  <code>1000</code>
-  <p>Последовательность из первого примера имеет только один подотрезок, который состоит ровно из одного элемента.</p>
+    <code>1000</code>
+    <p>Последовательность из первого примера имеет только один подотрезок, который состоит ровно из одного элемента.</p>
 
-  <p>Последовательность из второго примера имеет три подотрезка: [1000], [7] и [1000,7]. Значения &-сумм этих подотрезков равны 1000, 7 и 0, соответственно.</p>
+    <p>Последовательность из второго примера имеет три подотрезка: [1000], [7] и [1000,7]. Значения &-сумм этих подотрезков равны 1000, 7 и 0, соответственно.</p>
+  </details>
 </article>
 
 
@@ -555,19 +574,22 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное число — наименьшую возможную разницу в суммарном весе гирь на левой и правой чашах весов. На каждой стороне может стоять любое количество гирь.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3
 1 2 3
 </pre>
-  <code>0</code>
+    <code>0</code>
 
-  <h4>Пример 1</h4>
+    <h4>Пример 1</h4>
 <pre>
 5
 1 2 3 3 10
 </pre>
-  <code>1</code>
+    <code>1</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -647,19 +669,22 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В первой строке выведите через пробел номера двух карточек, XOR между числами на которых минимален. Если решений несколько, выведите любое из них</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 6
 4 7 10 5 2 8
 </pre>
-  <code>1 4</code>
+    <code>1 4</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5
 1 2 3 4 3
 </pre>
-  <code>3 5</code>
+    <code>3 5</code>
+  </details>
 </article>
 
 
@@ -688,23 +713,26 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное целое число — количество возможных пар слов, побитовое И которых равняется строке s, по модулю 10⁹ + 7.</p>
 
-  <h4>Пример 1</h4>
-  <code>z</code>
-  <code>3</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>z</code>
+    <code>3</code>
 
-  <h4>Пример 2</h4>
-  <code>V_V</code>
-  <code>9</code>
+    <h4>Пример 2</h4>
+    <code>V_V</code>
+    <code>9</code>
 
-  <h4>Пример 3</h4>
-  <code>Codeforces</code>
-  <code>130653412</code>
-  <p>В первом примере возможны 3 варианта:</p>
-  <ol>
-    <li>z&_ = 61&63 = 61 = z</li>
-    <li>_&z = 63&61 = 61 = z</li>
-    <li>z&z = 61&61 = 61 = z</li>
-  </ol>
+    <h4>Пример 3</h4>
+    <code>Codeforces</code>
+    <code>130653412</code>
+    <p>В первом примере возможны 3 варианта:</p>
+    <ol>
+      <li>z&_ = 61&63 = 61 = z</li>
+      <li>_&z = 63&61 = 61 = z</li>
+      <li>z&z = 61&61 = 61 = z</li>
+    </ol>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -796,16 +824,18 @@ int main() {
 
   <p>Если существует более одного возможного ответа, вы можете вывести любой.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3 2
 0 0
 0 0
 0 0
 </pre>
-  <code>NIE</code>
+    <code>NIE</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 2 3
 7 7 7
@@ -815,9 +845,10 @@ int main() {
 TAK
 1 3
 </pre>
-  <p>В первом примере все числа в матрице равны 0, поэтому невозможно выбрать в каждой строке таблицы по одному числу так, чтобы их побитовое исключающее ИЛИ было строго больше нуля.</p>
+    <p>В первом примере все числа в матрице равны 0, поэтому невозможно выбрать в каждой строке таблицы по одному числу так, чтобы их побитовое исключающее ИЛИ было строго больше нуля.</p>
 
-  <p>Во втором примере выбранные числа 7 (первое число в первой строке) и 10 (третье число во второй строке), 7 XOR 10 = 13, 13 больше чем 0, поэтому ответ найден.</p>
+    <p>Во втором примере выбранные числа 7 (первое число в первой строке) и 10 (третье число во второй строке), 7 XOR 10 = 13, 13 больше чем 0, поэтому ответ найден.</p>
+  </details>
 </article>
 
 
@@ -841,20 +872,23 @@ TAK
   <h4>Выходные данные</h4>
   <p>Выведите максимальное побитовое «И» после удаления ровно одного элемента.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3
 1 2 3
 </pre>
-  <code>2</code>
+    <code>2</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 7
 123 211 1390 121 984 184 911
 </pre>
-  <code>8</code>
-  <p>Побитовое «И» — это бинарная операция, действие которой эквивалентно применению логического «И» к каждой паре битов, которые стоят на одинаковых позициях в двоичных представлениях операндов. Другими словами, если оба соответствующих бита операндов равны 1, результирующий двоичный разряд равен 1; если же хотя бы один бит из пары равен 0, результирующий двоичный разряд равен 0.</p>
+    <code>8</code>
+    <p>Побитовое «И» — это бинарная операция, действие которой эквивалентно применению логического «И» к каждой паре битов, которые стоят на одинаковых позициях в двоичных представлениях операндов. Другими словами, если оба соответствующих бита операндов равны 1, результирующий двоичный разряд равен 1; если же хотя бы один бит из пары равен 0, результирующий двоичный разряд равен 0.</p>
+  </details>
 </article>
 
 
@@ -886,24 +920,27 @@ TAK
   <h4>Выходные данные</h4>
   <p>Выведите количество возможных способов поменять местами два бита в a так, чтобы побитовое ИЛИ изменилось.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 5
 01011
 11001
 </pre>
-  <code>4</code>
+    <code>4</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 6
 011000
 010011
 </pre>
-  <code>6</code>
-  <p>В первом примере вы можете поменять местами биты с такими индексами: (1,4), (2,3), (3,4) и (3,5).</p>
+    <code>6</code>
+    <p>В первом примере вы можете поменять местами биты с такими индексами: (1,4), (2,3), (3,4) и (3,5).</p>
 
-  <p>Во втором примере вы можете поменять местами биты с такими индексами: (1,2), (1,3), (2,4), (3,4), (3,5) и (3,6).</p>
+    <p>Во втором примере вы можете поменять местами биты с такими индексами: (1,2), (1,3), (2,4), (3,4), (3,5) и (3,6).</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -990,7 +1027,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных единственное число — максимальную длину хорошей подпоследовательности.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 2
@@ -1005,8 +1043,9 @@ int main() {
 3
 6
 </pre>
-  <p>В первом наборе входных данных в качестве подпоследовательности мы можем выбрать оба элемента массива, так как 1 XOR 1 &lt; 2 XOR 0.</p>
-  <p>Во втором наборе входных данных мы можем взять элементы с индексами 1, 2 и 4 (в 0-нумерации). Для них выполняется: 2 XOR 2 &lt; 4 XOR 1 и 4 XOR 4 &lt; 1 XOR 2.</p>
+    <p>В первом наборе входных данных в качестве подпоследовательности мы можем выбрать оба элемента массива, так как 1 XOR 1 &lt; 2 XOR 0.</p>
+    <p>Во втором наборе входных данных мы можем взять элементы с индексами 1, 2 и 4 (в 0-нумерации). Для них выполняется: 2 XOR 2 &lt; 4 XOR 1 и 4 XOR 4 &lt; 1 XOR 2.</p>
+  </details>
 </article>
 
 
@@ -1036,7 +1075,9 @@ int main() {
 
   <p>Если минимальных наборов тестов несколько, выведите любой.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3 5
 2 2 1
@@ -1048,7 +1089,7 @@ int main() {
 1 2 3
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3 3
 3 1 2 3
@@ -1060,7 +1101,7 @@ int main() {
 1
 </pre>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 3 3
 2 1 2
@@ -1072,7 +1113,7 @@ int main() {
 1 2
 </pre>
 
-  <h4>Пример 4</h4>
+    <h4>Пример 4</h4>
 <pre>
 3 3
 2 2 3
@@ -1083,6 +1124,7 @@ int main() {
 2
 1 2
 </pre>
+  </details>
 </article>
 
 
@@ -1104,12 +1146,14 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите число – максимально возможное значение A<sub>i1</sub> XOR A<sub>i2</sub> XOR ... XOR A<sub>ik</sub></p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 11 9 5
 </pre>
-  <code>14</code>
+    <code>14</code>
+  </details>
 </article>
 
 
@@ -1146,7 +1190,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число — максимальное значение функции f(a,b), если вы можете переупорядочить элементы массива b произвольным образом.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 5
@@ -1164,6 +1209,7 @@ int main() {
 0
 7
 </pre>
+  </details>
 </article>
 
 
@@ -1183,14 +1229,16 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите ответ на задачу по модулю 10⁹ + 7.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 001
 101
 100
 </pre>
-  <code>8</code>
+    <code>8</code>
+  </details>
 </article>
 
 
@@ -1229,7 +1277,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное целое число — количество различных кошмаров.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 10
 ftl
@@ -1243,8 +1292,9 @@ gorillasilverback
 abcdefg
 ijklmnopqrstuvwxyz
 </pre>
-  <code>5</code>
+    <code>5</code>
 
-  <p>В первом тесте кошмары образуются парами ⟨1,3⟩, ⟨2,5⟩, ⟨3,4⟩, ⟨6,7⟩, ⟨9,10⟩.</p>
+    <p>В первом тесте кошмары образуются парами ⟨1,3⟩, ⟨2,5⟩, ⟨3,4⟩, ⟨6,7⟩, ⟨9,10⟩.</p>
+  </details>
 </article>
 
