--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp19.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp19.html
@@ -285,7 +285,8 @@ for (int i = 0; i &lt; m; i++) {
   <h4>Выходные данные</h4>
   <p>Вывести N чисел: k-ое число означает количество светофоров на k-ом перекрестке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7 10
 5 1
@@ -299,7 +300,8 @@ for (int i = 0; i &lt; m; i++) {
 2 1
 5 3
 </pre>
-  <code>3 3 2 2 5 2 3</code>
+    <code>3 3 2 2 5 2 3</code>
+  </details>
 </article>
 
 
@@ -319,7 +321,8 @@ for (int i = 0; i &lt; m; i++) {
   <h4>Выходные данные</h4>
   <p>Необходимо вывести число, определяющее количество дорог на планете «Snowflake».</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 0 1 0 0 0
@@ -328,7 +331,8 @@ for (int i = 0; i &lt; m; i++) {
 0 1 0 0 0
 0 0 0 0 0
 </pre>
-  <code>3</code>
+    <code>3</code>
+  </details>
 </article>
 
 
@@ -348,7 +352,8 @@ for (int i = 0; i &lt; m; i++) {
   <h4>Выходные данные</h4>
   <p>Вывести количество "плохих" мостов.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 0 1 0 0 0 1 1
@@ -361,7 +366,8 @@ for (int i = 0; i &lt; m; i++) {
 
 1 1 1 1 1 3 3
 </pre>
-  <code>4</code>
+    <code>4</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -436,22 +442,25 @@ int main() {
 
   <p>Каждую букву можно выводить в любом регистре: строчную или заглавную.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 5
 2 4 5 1 3
 </pre>
-  <code>YES</code>
+    <code>YES</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5
 5 5 5 5 1
 </pre>
-  <code>NO</code>
-  <p>В первом примере самолету 2 нравится самолет 4, самолету 4 нравится самолет 1, а самолету 1 нравится самолет 2, поэтому это любовный треугольник.</p>
+    <code>NO</code>
+    <p>В первом примере самолету 2 нравится самолет 4, самолету 4 нравится самолет 1, а самолету 1 нравится самолет 2, поэтому это любовный треугольник.</p>
 
-  <p>Во втором примере любовных треугольников нет.</p>
+    <p>Во втором примере любовных треугольников нет.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -514,7 +523,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите список смежности заданного графа: вывод должен состоять из N строк, в i-й строке должны быть перечислены номера вершин (в возрастающем порядке) с которыми смежна вершина номер i.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4
 0 1 0 1
@@ -529,7 +540,7 @@ int main() {
 1 3
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 6
 0 0 1 1 0 0
@@ -547,6 +558,7 @@ int main() {
 2 6
 2 5
 </pre>
+  </details>
 </article>
 
 
@@ -566,7 +578,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите матрицу смежности графа: на пересечении i-й строки и j-го столбца должна стоять единица, если существует ребро из вершины с номером i в вершину с номером j, и ноль в противном случае.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4 4
 1 2
@@ -581,7 +595,7 @@ int main() {
 1 0 1 0
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 6 6
 1 3
@@ -598,6 +612,7 @@ int main() {
 1 0 1 0 0 0
 0 1 0 0 0 1
 0 1 0 0 1 0
+  </details>
 </pre>
 
   <details>
@@ -657,7 +672,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Вам необходимо отвечать на запросы по одному в каждой из q строк, в i-й строке ответ на i-й запрос - есть ли данное ребро в графе. Если оно есть - выводить "YES", иначе выводить "NO" (Вывод без кавычек)</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5 5
 1 2
@@ -681,6 +697,7 @@ NO
 NO
 YES
 </pre>
+  </details>
 </article>
 
 
@@ -714,34 +731,37 @@ YES
 
   <p>Вы можете выводить каждую букву в любом регистре (строчную или заглавную).</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 5 3
 1 1 1 1 1
 1 1 1 1 1
 </pre>
-  <code>YES</code>
+    <code>YES</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5 4
 1 0 0 0 1
 0 1 1 1 1
 </pre>
-  <code>YES</code>
+    <code>YES</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 5 2
 0 1 1 1 1
 1 1 1 1 1
 </pre>
   <code>NO</code>
-  <p>В первом примере все станции открыты, поэтому Бобу следует просто доехать до станции номер 3.</p>
+    <p>В первом примере все станции открыты, поэтому Бобу следует просто доехать до станции номер 3.</p>
 
-  <p>Во втором примере Бобу надо доехать до станции 5, после чего пересесть на второй путь и доехать до станции 4.</p>
+    <p>Во втором примере Бобу надо доехать до станции 5, после чего пересесть на второй путь и доехать до станции 4.</p>
 
-  <p>В третьем примере Боб не может сесть на поезд, следующий в сторону дома Алисы.</p>
+    <p>В третьем примере Боб не может сесть на поезд, следующий в сторону дома Алисы.</p>
+  </details>
 </article>
 
 
@@ -765,25 +785,27 @@ YES
   <h4>Выходные данные</h4>
   <p>Выведите единственное число — количество групп шестиклассников, которые будут выгнаны из класса.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3 3
 1 2
 2 3
 3 1
 </pre>
-  <code>0</code>
+    <code>0</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 6 3
 1 2
 2 3
 3 4
 </pre>
-  <code>2</code>
+    <code>2</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 6 5
 1 4
@@ -792,13 +814,14 @@ YES
 5 4
 6 4
 </pre>
-  <code>1</code>
+    <code>1</code>
 
-  <p>В первом примере Ане с Машей не выгонят ни одной группы шестиклассников — в изначальной позиции все шестиклассники привязаны к двум другим шестиклассникам, и Ане не удастся сделать ни одного выговора.</p>
+    <p>В первом примере Ане с Машей не выгонят ни одной группы шестиклассников — в изначальной позиции все шестиклассники привязаны к двум другим шестиклассникам, и Ане не удастся сделать ни одного выговора.</p>
 
-  <p>Во втором примере четыре шестиклассника связаны в цепочку, а еще два бегают отдельно. Сначала Аня с Машей выгонят двух крайних шестиклассников из цепочки (1 и 4), а затем — двух оставшихся из цепочки (2 и 3). При этом бегающие отдельно от остальных шестиклассники останутся в классе.</p>
+    <p>Во втором примере четыре шестиклассника связаны в цепочку, а еще два бегают отдельно. Сначала Аня с Машей выгонят двух крайних шестиклассников из цепочки (1 и 4), а затем — двух оставшихся из цепочки (2 и 3). При этом бегающие отдельно от остальных шестиклассники останутся в классе.</p>
 
-  <p>В третьем примере Аня с Машей сразу же выгонят всех шестиклассников, кроме четвертого, и на этом процесс закончится. Правильный ответ — один.</p>
+    <p>В третьем примере Аня с Машей сразу же выгонят всех шестиклассников, кроме четвертого, и на этом процесс закончится. Правильный ответ — один.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -893,16 +916,18 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственную строку выведите название топологии сети, к которой относится заданный граф. Если ответом является шина, выведите «bus topology» (без кавычек), если ответом является кольцо, выведите «ring topology» (без кавычек), если ответом является звезда, выведите «star topology» (без кавычек). Если ни один из этих типов не подходит, выведите «unknown topology» (без кавычек).</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4 3
 1 2
 2 3
 3 4
 </pre>
-  <code>bus topology</code>
+    <code>bus topology</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 4 4
 1 2
@@ -910,18 +935,18 @@ int main() {
 3 4
 4 1
 </pre>
-  <code>ring topology</code>
+    <code>ring topology</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 4 3
 1 2
 1 3
 1 4
 </pre>
-  <code>star topology</code>
+    <code>star topology</code>
 
-  <h4>Пример 4</h4>
+    <h4>Пример 4</h4>
 <pre>
 4 4
 1 2
@@ -929,7 +954,8 @@ int main() {
 3 1
 1 4
 </pre>
-  <code>unknown topology</code>
+    <code>unknown topology</code>
+  </details>
 </article>
 
 
@@ -949,21 +975,24 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В первой строке выведите общее количество дорог, которое будет построено в соответствии с требованиями к дорожной сети. Далее выведите сами дороги. Описание каждой дороги выводите в отдельной строке в формате «x y» (без кавычек), где x и y — номера городов, соединяемых дорогой (x≠y). Считайте, что города Берляндии пронумерованы от 1 до n в порядке возрастания значимости, а города Бирляндии — от n+1 до 2n, также в порядке возрастания значимости. Строки, содержащие информацию о дорогах, можно выводить в любом порядке. В случае, если решения не существует, выведите «-1» (без кавычек). Если решений несколько, выведите любое из них.</p>
 
-  <h4>Пример 1</h4>
-  <code>1</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>1</code>
 <pre>
 1
 1 2
 </pre>
 
-  <h4>Пример 2</h4>
-  <code>2</code>
+    <h4>Пример 2</h4>
+    <code>2</code>
 <pre>
 3
 1 2
 2 4
 3 4
 </pre>
+  </details>
 </article>
 
 
@@ -985,7 +1014,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите число – количество различных маршрутов, удовлетворяющих условию задачи.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4 4
 1 2
@@ -993,9 +1024,9 @@ int main() {
 3 4
 4 1
 </pre>
-  <code>1</code>
+    <code>1</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 4 6
 1 2
@@ -1005,7 +1036,8 @@ int main() {
 1 3
 2 4
 </pre>
-  <code>3</code>
+    <code>3</code>
+  </details>
 </article>
 
 
@@ -1039,7 +1071,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите 4 целых числа через пробел – количеств очков за дороги, которые получил каждый из игроков.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 1 1
@@ -1059,7 +1092,8 @@ int main() {
 3 4
 1 2
 </pre>
-  <code>5 5 9 20 </code>
+    <code>5 5 9 20 </code>
+  </details>
 </article>
 
 
@@ -1095,7 +1129,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных на отдельной строке выведите значения x и y, в этом порядке, разделенные пробелом.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 21 20
@@ -1141,6 +1176,7 @@ int main() {
 2 2
 2 3
 </pre>
-  <p>Первый набор входных данных изображен в условии. Обратите внимание, что вывод 3 5 является неправильным, так как сначала должно быть выведено x, а затем y.</p>
+    <p>Первый набор входных данных изображен в условии. Обратите внимание, что вывод 3 5 является неправильным, так как сначала должно быть выведено x, а затем y.</p>
+  </details>
 </article>
 
