--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp20.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp20.html
@@ -324,7 +324,8 @@ void bfs_bipartite(
   <h4>Выходные данные</h4>
   <p>Выведите длину кратчайшего пути. Если пути не существует, выведите одно число -1.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 0 1 0 0 1
@@ -334,7 +335,8 @@ void bfs_bipartite(
 1 0 0 0 0
 3 5
 </pre>
-  <code>3</code>
+    <code>3</code>
+  </details>
 </article>
 
 
@@ -354,7 +356,9 @@ void bfs_bipartite(
   <h4>Выходные данные</h4>
   <p>Если пути между a и b нет, выведите единственное число -1. Иначе выведите в первой строке l - длину кратчайшего пути между этими двумя вершинами в рёбрах, а во второй строке выведите l + 1 число — вершины этого пути.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 6
 001000
@@ -365,9 +369,9 @@ void bfs_bipartite(
 000010
 1 2
 </pre>
-  <code>-1</code>
+    <code>-1</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 6
 010011
@@ -382,6 +386,7 @@ void bfs_bipartite(
 1
 3 4
 </pre>
+  </details>
 </article>
 
 
@@ -404,7 +409,9 @@ void bfs_bipartite(
   <h4>Выходные данные</h4>
   <p>На каждый запрос вам необходимо вывести в отдельной строке "YES", если ребро (a,b) лежит на каком-нибудь кратчайшем пути между вершинами u и v и "NO" иначе.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 6 5
 1 2
@@ -421,7 +428,7 @@ YES
 NO
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 6 6
 1 2
@@ -441,6 +448,7 @@ NO
 YES
 YES
 NO
+  </details>
 </pre>
 
   <details>
@@ -529,7 +537,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>На каждый запрос вам необходимо вывести в отдельной строке "YES", если вершина k лежит на каком-нибудь кратчайшем пути между вершинами u и v и "NO" иначе.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 6 5
 1 2
@@ -546,7 +556,7 @@ YES
 NO
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 6 6
 1 2
@@ -567,6 +577,7 @@ YES
 YES
 NO
 </pre>
+  </details>
 </article>
 
 
@@ -600,7 +611,8 @@ NO
   <h4>Выходные данные</h4>
   <p>Выведите единственное целое число — минимальное количество групп, на которые можно разделить всех сотрудников.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 -1
@@ -609,13 +621,14 @@ NO
 1
 -1
 </pre>
-  <code>3</code>
-  <p>В первом примере достаточно трех групп:</p>
-  <ol>
-    <li>Сотрудник 1</li>
-    <li>Сотрудники 2 и 4</li>
-    <li>Сотрудники 3 и 5</li>
-  </ol>
+    <code>3</code>
+    <p>В первом примере достаточно трех групп:</p>
+    <ol>
+      <li>Сотрудник 1</li>
+      <li>Сотрудники 2 и 4</li>
+      <li>Сотрудники 3 и 5</li>
+    </ol>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -720,24 +733,27 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого школьника a от 1 до n выведите номер школьника, которому поставят две дырки, если преподаватель начнёт ставить дырки со школьника a.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 3
 2 3 2
 </pre>
-  <code>2 2 3</code>
+    <code>2 2 3</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3
 1 2 3
 </pre>
-  <code>1 2 3</code>
-  <p>В первом примере, если a=1, то преподаватель подойдёт к школьникам 1, 2, 3, 2, тем самым вторую дырку получит школьник 2.</p>
+    <code>1 2 3</code>
+    <p>В первом примере, если a=1, то преподаватель подойдёт к школьникам 1, 2, 3, 2, тем самым вторую дырку получит школьник 2.</p>
 
-  <p>В первом примере, если a=2, то преподаватель подойдёт к школьникам 2, 3, 2 и школьник 2 получит вторую дырку в бейдж. Если a=3, то учитель подойдёт к школьникам 3, 2, 3, тем самым школьник 3 получит вторую дырку в бейджик.</p>
+    <p>В первом примере, если a=2, то преподаватель подойдёт к школьникам 2, 3, 2 и школьник 2 получит вторую дырку в бейдж. Если a=3, то учитель подойдёт к школьникам 3, 2, 3, тем самым школьник 3 получит вторую дырку в бейджик.</p>
 
-  <p>Во втором примере с какого бы школьника не начал преподаватель, этот же школьник и будет тем, кто получит вторую дырку в бейджике.</p>
+    <p>Во втором примере с какого бы школьника не начал преподаватель, этот же школьник и будет тем, кто получит вторую дырку в бейджике.</p>
+  </details>
 </article>
 
 
@@ -770,7 +786,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого тестового случая выведите YES, если построить граф возможно, и NO в противном случае. Вы можете выводить буквы в любом регистре (верхнем или нижнем).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 1 0 3
@@ -786,11 +803,12 @@ YES
 NO
 NO
 </pre>
-  <p>В первом тестовом случае диаметр графа равен 0.</p>
+    <p>В первом тестовом случае диаметр графа равен 0.</p>
 
-  <p>Во втором случае диаметр графа может быть только 2.</p>
+    <p>Во втором случае диаметр графа может быть только 2.</p>
 
-  <p>В третьем случае диаметр графа может быть только 1.</p>
+    <p>В третьем случае диаметр графа может быть только 1.</p>
+  </details>
 </article>
 
 
@@ -816,22 +834,25 @@ NO
   <h4>Выходные данные</h4>
   <p>Если я могу дойти до ячейки t по данной транспортной системе, выведите "YES". В противном случае, выведите "NO".</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 8 4
 1 2 1 2 1 2 1
 </pre>
-  <code>YES</code>
+    <code>YES</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 8 5
 1 2 1 2 1 1 1
 </pre>
-  <code>NO</code>
-  <p>В первом примере можно дойти до t, посетив следующие ячейки: 1, 2, 4.</p>
+    <code>NO</code>
+    <p>В первом примере можно дойти до t, посетив следующие ячейки: 1, 2, 4.</p>
 
-  <p>Во втором примере можно посетить лишь ячейки 1, 2, 4, 6, 7, 8; значит, мы не можем попасть в требуемую ячейку 5.</p>
+    <p>Во втором примере можно посетить лишь ячейки 1, 2, 4, 6, 7, 8; значит, мы не можем попасть в требуемую ячейку 5.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -904,7 +925,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите целое число — наименьший вес по всем путям между a и b. Если между a и b не существует пути, то выведите «-1» (без кавычек)</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3 3
 1 2 5
@@ -912,9 +935,9 @@ int main() {
 2 3 5
 1 2
 </pre>
-  <code>5</code>
+    <code>5</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5 3
 3 5 6
@@ -922,12 +945,13 @@ int main() {
 2 4 6
 1 3
 </pre>
-  <code>-1</code>
-  <p>Побитовый OR двух чисел вычисляется следующим образом: cначала оба числа переводятся в двоичную систему счисления, затем одно записывается под другим. i-й бит результата будет равен единице, если i-й бит первого числа равен единице и/или i-й бит второго числа равен единице.</p>
+    <code>-1</code>
+    <p>Побитовый OR двух чисел вычисляется следующим образом: cначала оба числа переводятся в двоичную систему счисления, затем одно записывается под другим. i-й бит результата будет равен единице, если i-й бит первого числа равен единице и/или i-й бит второго числа равен единице.</p>
 
-  <p>Например, 10 OR 6 = 1010₂ OR 0110₂ = 1110₂ = 14.</p>
+    <p>Например, 10 OR 6 = 1010₂ OR 0110₂ = 1110₂ = 14.</p>
 
-  <p>В большинстве языков программирования побитовый OR уже встроен. В языках C++, Python эта операция обозначается как |, в Pascal — это операция or, в Visual Basic — это операция Or.</p>
+    <p>В большинстве языков программирования побитовый OR уже встроен. В языках C++, Python эта операция обозначается как |, в Pascal — это операция or, в Visual Basic — это операция Or.</p>
+  </details>
 </article>
 
 
@@ -956,7 +980,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите n чисел, i-е из которых — минимальное количество монет на перевозку товаров при проведении ярмарки в городе i. Разделяйте числа пробелами.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 5 5 4 3
 1 2 4 3 2
@@ -966,9 +992,9 @@ int main() {
 4 1
 4 5
 </pre>
-  <code>2 2 2 2 3</code>
+    <code>2 2 2 2 3</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 7 6 3 2
 1 2 3 3 2 2 1
@@ -979,18 +1005,19 @@ int main() {
 5 6
 6 7
 </pre>
-  <code>1 1 1 2 2 1 1</code>
-  <p>Рассмотрим первый пример.</p>
+    <code>1 1 1 2 2 1 1</code>
+    <p>Рассмотрим первый пример.</p>
 
-  <p>Чтобы провести ярмарку в городе 1, можно привезти товары из городов 1 (0 монет), 2 (1 монета) и 4 (1 монета). Суммарное количество монет равно 2.</p>
+    <p>Чтобы провести ярмарку в городе 1, можно привезти товары из городов 1 (0 монет), 2 (1 монета) и 4 (1 монета). Суммарное количество монет равно 2.</p>
 
-  <p>Город 2: Товары из городов 2 (0), 1 (1), 3 (1). Сумма 2.</p>
+    <p>Город 2: Товары из городов 2 (0), 1 (1), 3 (1). Сумма 2.</p>
 
-  <p>Город 3: Товары из городов 3 (0), 2 (1), 4 (1). Сумма 2.</p>
+    <p>Город 3: Товары из городов 3 (0), 2 (1), 4 (1). Сумма 2.</p>
 
-  <p>Город 4: Товары из городов 4 (0), 1 (1), 5 (1). Сумма 2.</p>
+    <p>Город 4: Товары из городов 4 (0), 1 (1), 5 (1). Сумма 2.</p>
 
-  <p>Город 5: Товары из городов 5 (0), 4 (1), 3 (2). Сумма 3.</p>
+    <p>Город 5: Товары из городов 5 (0), 4 (1), 3 (2). Сумма 3.</p>
+  </details>
 </article>
 
 
@@ -1020,26 +1047,29 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите в единственной строке ответ на задачу: строку «YES» (без кавычек), если разложить пасьянс возможно, строку «NO» (без кавычек) в противном случае.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4
 2S 2S 2C 2C
 </pre>
-  <code>YES</code>
+    <code>YES</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 2
 3S 2C
 </pre>
-  <code>NO</code>
-  <p>В первом примере можно действовать так:</p>
-  <ul>
-    <li>переложить 4-ую стопку на 1-ую;</li>
-    <li>переложить 3-ую стопку на 2-ую;</li>
-    <li>переложить 2-ую стопку на 1-ую.</li>
-  </ul>
-  <p>Во втором примере разложить пасьянс никак нельзя.</p>
+    <code>NO</code>
+    <p>В первом примере можно действовать так:</p>
+    <ul>
+      <li>переложить 4-ую стопку на 1-ую;</li>
+      <li>переложить 3-ую стопку на 2-ую;</li>
+      <li>переложить 2-ую стопку на 1-ую.</li>
+    </ul>
+    <p>Во втором примере разложить пасьянс никак нельзя.</p>
+  </details>
 </article>
 
 
@@ -1065,7 +1095,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите n чисел. Числа разделяйте пробелами, i-ое из них должно быть равно удалению i-ой станции от кольцевой. Для станций на кольцевой выводите число 0.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4
 1 3
@@ -1073,9 +1105,9 @@ int main() {
 4 2
 1 2
 </pre>
-  <code>0 0 0 0</code>
+    <code>0 0 0 0</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 6
 1 2
@@ -1085,7 +1117,8 @@ int main() {
 1 3
 3 5
 </pre>
-  <code>0 0 0 1 1 2</code>
+    <code>0 0 0 1 1 2</code>
+  </details>
 </article>
 
 
@@ -1113,7 +1146,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите число — минимальное количество операций, необходимое Игорю, чтобы вернуть все монетки в банк.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 5
 2 2 2 2
@@ -1122,9 +1157,9 @@ int main() {
 1 3
 1 4
 </pre>
-  <code>4</code>
+    <code>4</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5
 3 2 3 2
@@ -1133,7 +1168,8 @@ int main() {
 2 2 3
 4 5
 </pre>
-  <code>6</code>
+    <code>6</code>
+  </details>
 </article>
 
 
@@ -1181,7 +1217,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите два целых числа, разделенных пробелом: количество своих и количество чужих бочонков «пива», которое потребуются Игорю.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 8
 4
@@ -1196,9 +1234,9 @@ int main() {
 4 3
 4 5
 </pre>
-  <code>2 1</code>
+    <code>2 1</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 6
 5
@@ -1218,7 +1256,8 @@ int main() {
 3 4
 6 1
 </pre>
-  <code>2 3</code>
+    <code>2 3</code>
+  </details>
 </article>
 
 
@@ -1266,7 +1305,8 @@ int main() {
 
   <p>Вы можете выводить ответ в любом регистре (например, строки «yEs», «yes», «Yes» и «YES» будут распознаны как положительный ответ).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 6 3
@@ -1301,18 +1341,19 @@ YES
 NO
 </pre>
 
-  <p>Первый пример разобран в условии.</p>
+    <p>Первый пример разобран в условии.</p>
 
-  <p>Во втором примере можно менять соседние буквы местами, так что можем отсортировать строку например с помощью сортировки пузырьком.</p>
+    <p>Во втором примере можно менять соседние буквы местами, так что можем отсортировать строку например с помощью сортировки пузырьком.</p>
 
-  <p>В третьем примере можно показать, что из строки s невозможно получить строку t меняя местами буквы на расстоянии 6 или 7.</p>
+    <p>В третьем примере можно показать, что из строки s невозможно получить строку t меняя местами буквы на расстоянии 6 или 7.</p>
 
-  <p>В четвертом примере подходит например следующая последовательность преобразований:</p>
-  <code>«accio» → «aocic» → «cocia» → «iocca» → «aocci» → «aicco» → «cicao».</code>
+    <p>В четвертом примере подходит например следующая последовательность преобразований:</p>
+    <code>«accio» → «aocic» → «cocia» → «iocca» → «aocci» → «aicco» → «cicao».</code>
 
-  <p>В пятом примере можно показать, что невозможно получить из строки s строку t.</p>
+    <p>В пятом примере можно показать, что невозможно получить из строки s строку t.</p>
 
-  <p>В шестом примере достаточно поменять местами две крайние буквы.</p>
+    <p>В шестом примере достаточно поменять местами две крайние буквы.</p>
+  </details>
 </article>
 
 
@@ -1361,7 +1402,8 @@ NO
 
   <p>Вы можете выводить ответ в любом регистре (например, строки «yEs», «yes», «Yes» и «YES» будут распознаны как положительный ответ).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 6 3
@@ -1395,22 +1437,23 @@ NO
 YES
 NO
 </pre>
-  <p>Первый пример разобран в условии.</p>
+    <p>Первый пример разобран в условии.</p>
 
-  <p>Во втором примере можно действовать следующим образом:</p>
-  <ol>
-    <li>Поменять местами буквы на позициях 2 и 5 (расстояние 3), тогда получим заклинание «aaacbba».</li>
-    <li>Поменять местами буквы на позициях 4 и 7 (расстояние 3), тогда получим заклинание «aaaabbc».</li>
-  </ol>
+    <p>Во втором примере можно действовать следующим образом:</p>
+    <ol>
+      <li>Поменять местами буквы на позициях 2 и 5 (расстояние 3), тогда получим заклинание «aaacbba».</li>
+      <li>Поменять местами буквы на позициях 4 и 7 (расстояние 3), тогда получим заклинание «aaaabbc».</li>
+    </ol>
 
-  <p>В третьем примере можно показать, что из строки s невозможно получить строку t меняя местами буквы на расстоянии 3 или 4.</p>
+    <p>В третьем примере можно показать, что из строки s невозможно получить строку t меняя местами буквы на расстоянии 3 или 4.</p>
 
-  <p>В четвертом примере подходит например следующая последовательность преобразований:</p>
-  <code>«accio» → «aocic» → «cocia» → «iocca» → «aocci» → «aicco» → «cicao».</code>
+    <p>В четвертом примере подходит например следующая последовательность преобразований:</p>
+    <code>«accio» → «aocic» → «cocia» → «iocca» → «aocci» → «aicco» → «cicao».</code>
 
-  <p>В пятом примере можно показать, что невозможно получить из строки s строку t.</p>
+    <p>В пятом примере можно показать, что невозможно получить из строки s строку t.</p>
 
-  <p>В шестом примере достаточно поменять местами две крайние буквы.</p>
+    <p>В шестом примере достаточно поменять местами две крайние буквы.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
