--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp21.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp21.html
@@ -283,14 +283,16 @@ void cycle_output(vector&lt;int&gt;& Res,
   <h4>Выходные данные</h4>
   <p>Выведите сообщение YES, если граф является деревом, и NO в противном случае.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 0 1 0
 1 0 1
 0 1 0
 </pre>
-  <code>YES</code>
+    <code>YES</code>
+  </details>
 </article>
 
 
@@ -310,7 +312,8 @@ void cycle_output(vector&lt;int&gt;& Res,
   <h4>Выходные данные</h4>
   <p>В первой строчке выходного файла выведите количество компонент связности. Далее выведите сами компоненты связности в следующем формате: в первой строке количество вершин в компоненте, во второй - сами вершины в произвольном порядке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 001000
@@ -331,6 +334,7 @@ void cycle_output(vector&lt;int&gt;& Res,
 2
 5 6
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -426,31 +430,34 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Нужно вывести слово «Yes», если Иван Иванович уверен в своем выигрыше и «No» в противном случае.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3 1
 1 2
 1 3
 0
 </pre>
-  <code>Yes</code>
+    <code>Yes</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3 2
 2 3
 0
 </pre>
-  <code>No</code>
+    <code>No</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 4 2
 3 1
 2 3
 0
 </pre>
-  <code>No</code>
+    <code>No</code>
+  </details>
 </article>
 
 
@@ -472,16 +479,18 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите «YES», если в графе есть цикл, иначе выведите «NO». (без кавычек)</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4 3
 1 2
 2 3
 3 4
 </pre>
-  <code>NO</code>
+    <code>NO</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 4 4
 1 2
@@ -489,7 +498,8 @@ int main() {
 3 4
 2 4
 </pre>
-  <code>YES</code>
+    <code>YES</code>
+  </details>
 </article>
 
 
@@ -519,7 +529,9 @@ int main() {
 
   <p>Если же существуют два непересекающихся вершинных покрытия, то выведите их описания. Каждое описание состоит из двух строк. Первая строка должна содержать единственное число k — количество вершин в данном вершинном покрытии, а вторая строка должна содержать k чисел — индексы вершин в покрытии. Обратите внимание, что поскольку m ≥ 1, никакое вершинное покрытие не может быть пустым.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4 2
 1 2
@@ -532,7 +544,7 @@ int main() {
 1 3
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3 3
 1 2
@@ -542,9 +554,10 @@ int main() {
 <pre>
 -1
 </pre>
-  <p>В первом примере можно отдать Арию вершину номер 2, а Пари вершины с номерами 1 и 3. Вершину 4 можно оставить себе (а можно тоже кому-нибудь отдать).</p>
+    <p>В первом примере можно отдать Арию вершину номер 2, а Пари вершины с номерами 1 и 3. Вершину 4 можно оставить себе (а можно тоже кому-нибудь отдать).</p>
 
-  <p>Во втором примере не существует способа раздать вершины так, чтобы удовлетворить и Пари, и Ария.</p>
+    <p>Во втором примере не существует способа раздать вершины так, чтобы удовлетворить и Пари, и Ария.</p>
+  </details>
 </article>
 
 
@@ -564,14 +577,16 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите количество циклов длины 3.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 0 1 1
 1 0 1
 1 1 0
 </pre>
-  <code>1</code>
+    <code>1</code>
+  </details>
 </article>
 
 
@@ -597,7 +612,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого из m запросов выведите в отдельной строке число 1, если вершина a является предком вершины b, и 0 в противном случае.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 0 1 1 2 2 3
@@ -615,6 +631,7 @@ int main() {
 0
 0
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -707,7 +724,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Единственное целое число, равное количеству звездочек, которые получит Товарищ майор.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 10 4
 1 2
@@ -715,7 +733,8 @@ int main() {
 0 2
 0 1
 </pre>
-  <code>1</code>
+    <code>1</code>
+  </details>
 </article>
 
 
@@ -753,7 +772,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное число — максимальное количество людей, которых Бобер сможет пригласить на вечеринку. Если группу людей, удовлетворяющую всем требованиям, выбрать невозможно, выведите 0.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 9
 8
@@ -769,8 +789,9 @@ int main() {
 1 6
 7 9
 </pre>
-  <code>3</code>
-  <p>Под условия задачи подходят две группы людей: 1,2,3 и 4,5, при этом ответом будет размер наибольшей из этих групп. Группа 6,7,8,9 не подходит, так как в ней есть люди 7 и 9, которые не нравятся друг другу. Группа 1,2,3,4,5 также не подходит, так как не все ее члены связаны цепью общих друзей (например, люди 2 и 5 не связаны).</p>
+    <code>3</code>
+    <p>Под условия задачи подходят две группы людей: 1,2,3 и 4,5, при этом ответом будет размер наибольшей из этих групп. Группа 6,7,8,9 не подходит, так как в ней есть люди 7 и 9, которые не нравятся друг другу. Группа 1,2,3,4,5 также не подходит, так как не все ее члены связаны цепью общих друзей (например, люди 2 и 5 не связаны).</p>
+  </details>
 </article>
 
 
@@ -798,7 +819,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите «NO», если граф не является Ктулху, и «FHTAGN!» в противном случае.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 6 6
 6 3
@@ -808,9 +831,9 @@ int main() {
 1 4
 5 4
 </pre>
-  <code>FHTAGN!</code>
+    <code>FHTAGN!</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 6 5
 5 6
@@ -819,12 +842,13 @@ int main() {
 5 1
 1 2
 </pre>
-  <code>NO</code>
-  <p>Простым циклом назовем множество из v вершин, которые можно пронумеровать так, что будут существовать ребра только между вершинами с номерами 1 и 2, 2 и 3, ..., v-1 и v, v и 1.</p>
+    <code>NO</code>
+    <p>Простым циклом назовем множество из v вершин, которые можно пронумеровать так, что будут существовать ребра только между вершинами с номерами 1 и 2, 2 и 3, ..., v-1 и v, v и 1.</p>
 
-  <p>Дерево — связный неориентированный граф из n вершин и n-1 ребер (n > 0).</p>
+    <p>Дерево — связный неориентированный граф из n вершин и n-1 ребер (n > 0).</p>
 
-  <p>Корневое дерево — дерево, в котором выделена одна вершина, корень.</p>
+    <p>Корневое дерево — дерево, в котором выделена одна вершина, корень.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -931,7 +955,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите n целых чисел. i-е из них должно быть равно количеству пользователей, которые узнают новость, если пользователь i начнет ее распространять.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7 5
 3 2 5 4
@@ -940,7 +965,8 @@ int main() {
 1 1
 2 6 7
 </pre>
-  <code>4 4 1 4 4 2 2</code>
+    <code>4 4 1 4 4 2 2</code>
+  </details>
 </article>
 
 
@@ -970,7 +996,9 @@ int main() {
 
   <p>На следующих t строках выведите по три числа: tankᵢ, tapᵢ, и diameterᵢ, где tankᵢ ≠ tapᵢ (1 ≤ i ≤ t). Здесь tankᵢ и tapᵢ — номера корпусов, где будут установлены бак и слив, соответственно, а diameterᵢ — максимально возможный объем воды, который можно пропустить. Все эти t строк должны быть упорядочены в порядке возрастания tankᵢ.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3 2
 1 2 10
@@ -981,7 +1009,7 @@ int main() {
 1 3 10
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3 3
 1 2 20
@@ -992,7 +1020,7 @@ int main() {
 0
 </pre>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 4 2
 1 2 60
@@ -1003,6 +1031,7 @@ int main() {
 1 2 60
 3 4 50
 </pre>
+  </details>
 </article>
 
 
@@ -1032,7 +1061,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В выходной файл выведите единственное число: остаток от деления количества способов укрепления мостов на число 10⁹+7.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 5 4
 1 2
@@ -1040,15 +1071,16 @@ int main() {
 1 3
 4 5
 </pre>
-  <code>3</code>
+    <code>3</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 2 1
 1 2
 </pre>
-  <code>1</code>
-  <p>В первом примере существует три способа укрепления мостов: укрепить мосты с номерами {1,2,4}, либо {1,3,4}, либо {2,3,4}.</p>
+    <code>1</code>
+    <p>В первом примере существует три способа укрепления мостов: укрепить мосты с номерами {1,2,4}, либо {1,3,4}, либо {2,3,4}.</p>
+  </details>
 </article>
 
 
@@ -1085,7 +1117,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное число — максимальное количество людей, которых Бобер сможет пригласить на вечеринку. Если группу людей, удовлетворяющую всем требованиям, выбрать невозможно, выведите 0.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 9
 8
@@ -1101,8 +1134,9 @@ int main() {
 1 6
 7 9
 </pre>
-  <code>3</code>
-  <p>Под условия задачи подходят две группы людей: 1,2,3 и 4,5, при этом ответом будет размер наибольшей из этих групп. Группа 6,7,8,9 не подходит, так как в ней есть люди 7 и 9, которые не нравятся друг другу. Группа 1,2,3,4,5 также не подходит, так как не все ее члены связаны цепью общих друзей (например, люди 2 и 5 не связаны).</p>
+    <code>3</code>
+    <p>Под условия задачи подходят две группы людей: 1,2,3 и 4,5, при этом ответом будет размер наибольшей из этих групп. Группа 6,7,8,9 не подходит, так как в ней есть люди 7 и 9, которые не нравятся друг другу. Группа 1,2,3,4,5 также не подходит, так как не все ее члены связаны цепью общих друзей (например, люди 2 и 5 не связаны).</p>
+  </details>
 </article>
 
 
@@ -1128,7 +1162,9 @@ int main() {
 
   <p>Если профессор понял что-то неправильно, и ответа не существует, выведете «No».</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4
 a
@@ -1141,7 +1177,7 @@ Yes
 1 0 3 2 4 5 6 7 8 9
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 4
 a
@@ -1152,5 +1188,6 @@ ac
 <pre>
 No
 </pre>
+  </details>
 </article>
 
