--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp22.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp22.html
@@ -229,14 +229,16 @@ void dijkstra_optimized_save_path(
   <h4>Входные данные</h4>
   <p>В первой строке входных данных находится натуральное число N, не большее 250. Всего на дороге расположено N+1 станций, пронумерованных от 0 до N. В следующих строках записано N * (N + 1) / 2 чисел, задающих стоимости проезда между станциями: сначала стоимость проезда от станции 0 до станций 1, 2, 3, …, N, затем от станции 1 до станций 2, 3, ... , N, ... , от станции N - 1 до станции N. Все стоимости проезда – неотрицательные целые числа, не превосходящие 10000.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 7 10 20
 4 8
 2
 </pre>
-  <code>12</code>
+    <code>12</code>
+  </details>
 </article>
 
 
@@ -256,7 +258,8 @@ void dijkstra_optimized_save_path(
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите одно число - суммарную стоимость маршрута или -1, если добраться невозможно.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 1 10 2 15
@@ -266,7 +269,8 @@ void dijkstra_optimized_save_path(
 4 2
 4 3
 </pre>
-  <code>3</code>
+    <code>3</code>
+  </details>
 </article>
 
 
@@ -286,7 +290,8 @@ void dijkstra_optimized_save_path(
   <h4>Выходные данные</h4>
   <p>Вам, в единственной строке необходимо вывести сколько денег заплатят преподаватели.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4 5
 1 2 6
@@ -296,7 +301,8 @@ void dijkstra_optimized_save_path(
 3 4 6
 2 3
 </pre>
-  <code>8</code>
+    <code>8</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -379,7 +385,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственной строке вывести q чисел - минимальный уровень злости уровень злости, который будет у Дениса при посещении соответствующего магазина.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 11 33
 345 42 933 271 998 643 256 848 839 249 803
@@ -419,8 +426,9 @@ int main() {
 3
 6 7 2
 </pre>
-  <code>643 256 42</code>
-  <p>Нельзя повторно посещать район.</p>
+    <code>643 256 42</code>
+    <p>Нельзя повторно посещать район.</p>
+  </details>
 </article>
 
 
@@ -442,7 +450,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите число -1 если пути нет или сам кратчайший путь, если он существует.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5 6
 1 2 2
@@ -452,7 +461,8 @@ int main() {
 4 3 3
 3 5 1
 </pre>
-  <code>1 4 3 5</code>
+    <code>1 4 3 5</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -559,7 +569,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите минимальное время, когда Дима и Влад могут оказаться в деревне v. Если они не смогут с помощью указанных автобусных рейсов добраться из d в v, выведите -1.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3 1 3 4
 1 0 2 5
@@ -567,7 +578,8 @@ int main() {
 2 3 3 5
 1 1 3 10
 </pre>
-  <code>5</code>
+    <code>5</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -662,7 +674,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите минимальное количество дней ожидания посылки.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5 5 1 5
 1 2 1
@@ -671,8 +684,9 @@ int main() {
 4 5 4
 1 5 5
 </pre>
-  <code>4</code>
-  <p>В первом примере ответ 4 дня, так как посылка, пройдя по пути 1 - 2 - 3 - 4 - 5, прибудет к вечеру четвертого дня недели и Домин заберет её утром пятого дня. А если она будет отправлена напрямую, то она прибудет к вечеру пятого дня, и Домин сможет забрать её утром шестого дня, то есть ждать её придется 5 дней.</p>
+    <code>4</code>
+    <p>В первом примере ответ 4 дня, так как посылка, пройдя по пути 1 - 2 - 3 - 4 - 5, прибудет к вечеру четвертого дня недели и Домин заберет её утром пятого дня. А если она будет отправлена напрямую, то она прибудет к вечеру пятого дня, и Домин сможет забрать её утром шестого дня, то есть ждать её придется 5 дней.</p>
+  </details>
 </article>
 
 
@@ -704,7 +718,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите одно вещественное число с точностью до 4 знаков после запятой — минимальное расстояние, которое Игорю придется пройти под дождем.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 2 2
 10 10
@@ -712,9 +728,9 @@ int main() {
 8 8 1
 5 5 2
 </pre>
-  <code>5.31370850</code>
+    <code>5.31370850</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 2 2
 10 10
@@ -724,9 +740,9 @@ int main() {
 4 6 2
 4 2 2
 </pre>
-  <code>0.00000000</code>
+    <code>0.00000000</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 2 2
 10 10
@@ -734,13 +750,14 @@ int main() {
 8 8 1
 6 6 2
 </pre>
-  <code>5.48528137</code>
-  <p>Гарантируется, что</p>
-  <ul>
-    <li>не существует двух деревьев, стволы которых расположены в одной точке;</li>
-    <li>не существует дерева, расположенного внутри остановки;</li>
-    <li>Игорь находится вне остановки.</li>
-  </ul>
+    <code>5.48528137</code>
+    <p>Гарантируется, что</p>
+    <ul>
+      <li>не существует двух деревьев, стволы которых расположены в одной точке;</li>
+      <li>не существует дерева, расположенного внутри остановки;</li>
+      <li>Игорь находится вне остановки.</li>
+    </ul>
+  </details>
 </article>
 
 
@@ -769,7 +786,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное число — сколько Самых Секретных Ракетных Шахт находится в Берляндии.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4 6 1
 1 2 1
@@ -780,9 +799,9 @@ int main() {
 1 4 2
 2
 </pre>
-  <code>3</code>
+    <code>3</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5 6 3
 3 1 1
@@ -793,10 +812,11 @@ int main() {
 4 5 8
 4
 </pre>
-  <code>3</code>
-  <p>В первом примере шахты расположены в городах 3 и 4, а также на дороге (1, 3) на расстоянии 2 от города 1 (соответственно, на расстоянии 1 от города 3).</p>
+    <code>3</code>
+    <p>В первом примере шахты расположены в городах 3 и 4, а также на дороге (1, 3) на расстоянии 2 от города 1 (соответственно, на расстоянии 1 от города 3).</p>
 
-  <p>Во втором примере одна из шахт расположена точно на середине дороги (1, 2), а еще две — на дороге (4, 5) на удалении 3 от города 4 в сторону города 5 и на удалении 3 от города 5 в сторону города 4.</p>
+    <p>Во втором примере одна из шахт расположена точно на середине дороги (1, 2), а еще две — на дороге (4, 5) на удалении 3 от города 4 в сторону города 5 и на удалении 3 от города 5 в сторону города 4.</p>
+  </details>
 </article>
 
 
@@ -822,7 +842,8 @@ int main() {
 
   <p>Пожалуйста, не используйте спецификатор %lld для чтения или записи 64-битных чисел на С++. Рекомендуется использовать потоки cin, cout или спецификатор %I64d.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4 4
 1 3
@@ -835,8 +856,9 @@ int main() {
 1 2
 7 7
 </pre>
-  <code>9</code>
-  <p>Оптимальный путь - поехать из перекрестка 1 к 2 (через 4), потом из 2 в 3. На это потратится 7+2=9 бурлей.</p>
+    <code>9</code>
+    <p>Оптимальный путь - поехать из перекрестка 1 к 2 (через 4), потом из 2 в 3. На это потратится 7+2=9 бурлей.</p>
+  </details>
 </article>
 
 
@@ -869,7 +891,9 @@ int main() {
 
   <p>Иначе в первой строке выведите «YES», а во второй — два целых числа через пробел: минимальный уровень доступа, обладая которым, можно добраться до помещения с номером n не более, чем за время T, и минимальное время, которое для этого необходимо.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4 4
 1 2 5 2
@@ -883,7 +907,7 @@ YES
 3 10
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 4 4
 1 2 5 2
@@ -897,7 +921,7 @@ YES
 5 9
 </pre>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 4 4
 1 2 5 2
@@ -909,6 +933,7 @@ YES
 <pre>
 NO
 </pre>
+  </details>
 </article>
 
 
@@ -936,15 +961,17 @@ NO
   <h4>Выходные данные</h4>
   <p>Выведите одно целое число — минимальное количество минут, которое потребуется Игорю, либо «-1» (без кавычек), если это невозможно.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 2 2 1 2
 1 2 10
 1 2 20
 </pre>
-  <code>10</code>
+    <code>10</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5 7 1 5
 1 2 10
@@ -955,14 +982,15 @@ NO
 1 5 50
 3 5 25
 </pre>
-  <code>40</code>
+    <code>40</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 3 1 1 3
 1 2 20
 </pre>
-  <code>-1</code>
+    <code>-1</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1051,7 +1079,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите k целых чисел qᵢ (1 ≤ i ≤ k). qᵢ должно равняться сумме кратчайших расстояний между всеми парами городов после постройки дорог с номерами от 1 до i. Дороги нумеруются начиная с 1 в том порядке, в котором они даны во входных данных. Каждая пара городов учитывается в сумме один раз, т. е. имеются в виду неупорядоченные пары.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 2
 0 5
@@ -1059,9 +1089,9 @@ int main() {
 1
 1 2 3
 </pre>
-  <code>3</code>
+    <code>3</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3
 0 4 5
@@ -1071,7 +1101,8 @@ int main() {
 2 3 8
 1 2 1
 </pre>
-  <code>17 12</code>
+    <code>17 12</code>
+  </details>
 </article>
 
 
@@ -1104,24 +1135,26 @@ int main() {
 
   <p>Пожалуйста, не используйте спецификатор %lld для чтения или записи 64-х битовых чисел на C++. Рекомендуется использовать потоки cin, cout или спецификатор %I64d.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 1
 0
 1
 </pre>
-  <code>0</code>
+    <code>0</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 2
 0 5
 4 0
 1 2
 </pre>
-  <code>9 0</code>
+    <code>9 0</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 4
 0 3 1 1
@@ -1130,7 +1163,8 @@ int main() {
 1 1 1 0
 4 1 2 3
 </pre>
-  <code>17 23 404 0</code>
+    <code>17 23 404 0</code>
+  </details>
 </article>
 
 
@@ -1158,7 +1192,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное целое число, обозначающее максимальное количество железнодорожных путей, которые можно закрыть.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 5 5 3
 1 2 1
@@ -1170,9 +1206,9 @@ int main() {
 4 5
 5 5
 </pre>
-  <code>2</code>
+    <code>2</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 2 2 3
 1 2 2
@@ -1181,7 +1217,8 @@ int main() {
 2 2
 2 3
 </pre>
-  <code>2</code>
+    <code>2</code>
+  </details>
 </article>
 
 
@@ -1209,7 +1246,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное число — наименьшее количество времени, которое понадобится Джеку, чтобы попасть с планеты 1 на планету n. Если Джек не сможет попасть на планету n ни за какое время, выведите число -1.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4 6
 1 2 2
@@ -1223,9 +1262,9 @@ int main() {
 2 3 4
 0
 </pre>
-  <code>7</code>
+    <code>7</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3 1
 1 2 3
@@ -1233,10 +1272,11 @@ int main() {
 1 3
 0
 </pre>
-  <code>-1</code>
-  <p>В первом примере у Джека три выбора, куда переместиться с планеты 1. Если он переместится сразу на планету 4, то потратит 8 секунд. Если он переместится на планету 3, то потратит 3 секунды, но, поскольку в моменты времени 3 и 4 на планету 3 прибывают другие путешественники, то он сможет отправиться на планету 4 только в момент времени 5, затратив в сумме 8 секунд. Если же Джек переместится на планету 2, а потом на планету 4, то потратит в сумме всего лишь 2 + 5 = 7 секунд.</p>
+    <code>-1</code>
+    <p>В первом примере у Джека три выбора, куда переместиться с планеты 1. Если он переместится сразу на планету 4, то потратит 8 секунд. Если он переместится на планету 3, то потратит 3 секунды, но, поскольку в моменты времени 3 и 4 на планету 3 прибывают другие путешественники, то он сможет отправиться на планету 4 только в момент времени 5, затратив в сумме 8 секунд. Если же Джек переместится на планету 2, а потом на планету 4, то потратит в сумме всего лишь 2 + 5 = 7 секунд.</p>
 
-  <p>Во втором примере с планеты 1 на планету 3 нельзя попасть, перемещаясь через звездные врата.</p>
+    <p>Во втором примере с планеты 1 на планету 3 нельзя попасть, перемещаясь через звездные врата.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1257,86 +1297,71 @@ vector&lt;int&gt; times[maxn];
 
 int dist[maxn];
 
-struct compar
-{
-    bool operator ()(int v1, int v2) const
-    {
-        if (dist[v1] != dist[v2])
-        {
-            return dist[v1] &lt; dist[v2];
-        }
-        else
-        {
-            return v1 &lt; v2;
-        }
+struct compar {
+  bool operator ()(int v1, int v2) const {
+    if (dist[v1] != dist[v2]) {
+      return dist[v1] &lt; dist[v2];
+    } else {
+      return v1 &lt; v2;
     }
+  }
 };
 
-int main()
-{
-    ios_base::sync_with_stdio(false); cin.tie(NULL);
+int main() {
+  ios_base::sync_with_stdio(false); cin.tie(NULL);
 
-    int n, m; cin >> n >> m;
+  int n, m; cin >> n >> m;
 
-    for (int i = 0; i &lt; m; i++)
-    {
-        int a, b, c; cin >> a >> b >> c;
-        edges[a-1].push_back(make_pair(b-1, c));
-        edges[b-1].push_back(make_pair(a-1, c));
+  for (int i = 0; i &lt; m; i++) {
+    int a, b, c; cin >> a >> b >> c;
+    edges[a-1].push_back(make_pair(b-1, c));
+    edges[b-1].push_back(make_pair(a-1, c));
+  }
+
+  for (int i = 0; i &lt; n; i++) {
+    int k; cin >> k;
+
+    times[i].resize(k);
+    for (int j = 0; j &lt; k; j++) {
+      cin >> times[i][j];
     }
-    for (int i = 0; i &lt; n; i++)
-    {
-        int k; cin >> k;
+  }
 
-        times[i].resize(k);
-        for (int j = 0; j &lt; k; j++)
-        {
-            cin >> times[i][j];
-        }
-    }
+  fill_n(dist+1, n-1, INT_MAX);
 
-    fill_n(dist+1, n-1, INT_MAX);
+  set&lt;int, compar&gt; q;
+  for (int i = 0; i &lt; n; i++) {
+    q.insert(i);
+  }
 
-    set&lt;int, compar&gt; q;
-    for (int i = 0; i &lt; n; i++)
-    {
-        q.insert(i);
-    }
-
-    while (!q.empty())
-    {
-        int v = *q.begin(); q.erase(q.begin());
-        if (v == n-1 || dist[v] == INT_MAX)
-        {
-            break;
-        }
-
-        vector&lt;int&gt;::const_iterator ti(
-            lower_bound(times[v].begin(), times[v].end(), dist[v]));
-        while (ti != times[v].end() && dist[v] == *ti)
-        {
-            dist[v]++;
-            ++ti;
-        }
-
-        for (int i = 0; i &lt; (int)edges[v].size(); i++)
-        {
-            const pair&lt;int, int&gt;& p = edges[v][i];
-
-            set&lt;int, compar&gt;::iterator qi(q.find(p.first));
-            if (qi != q.end())
-            {
-                if (dist[v] + p.second &lt; dist[p.first])
-                {
-                    q.erase(qi);
-                    dist[p.first] = dist[v] + p.second;
-                    q.insert(p.first);
-                }
-            }
-        }
+  while (!q.empty()) {
+    int v = *q.begin(); q.erase(q.begin());
+    if (v == n-1 || dist[v] == INT_MAX) {
+      break;
     }
 
-    cout &lt;&lt; (dist[n-1] &lt; INT_MAX ? dist[n-1] : -1) &lt;&lt; '\n';
+    vector&lt;int&gt;::const_iterator ti(
+      lower_bound(times[v].begin(), times[v].end(), dist[v]));
+    while (ti != times[v].end() && dist[v] == *ti) {
+      dist[v]++;
+      ++ti;
+    }
+
+    for (int i = 0; i &lt; (int)edges[v].size(); i++) {
+      const pair&lt;int, int&gt;& p = edges[v][i];
+
+      set&lt;int, compar&gt;::iterator qi(q.find(p.first));
+      if (qi != q.end()) {
+        if (dist[v] + p.second &lt; dist[p.first]) {
+          q.erase(qi);
+          dist[p.first] = dist[v] + p.second;
+          q.insert(p.first);
+        }
+      }
+    }
+  }
+
+  cout &lt;&lt; (dist[n-1] &lt; INT_MAX ? dist[n-1] : -1) &lt;&lt; '\n';
 }
 </pre>
   </details>
