--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp23.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp23.html
@@ -268,16 +268,18 @@ for (int i = 0; i &lt;= n; i++) {
   <h4>Выходные данные</h4>
   <p>Выведите, чему будет равна радость Фомы Дора, когда он увидит торт, то есть количество клеток с шоколадками, расположенных в одной строке или в одном столбце.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3
 .CC
 C..
 C.C
 </pre>
-  <code>4</code>
+    <code>4</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 4
 CC..
@@ -285,17 +287,18 @@ C..C
 .CC.
 .CC.
 </pre>
-  <code>9</code>
-  <p>Пронумеруем строки сверху вниз, а столбцы слева направо. Тогда в одной строке расположены:</p>
-  <ol>
-    <li>(1, 2) и (1, 3)</li>
-    <li>(3, 1) и (3, 3)</li>
-  </ol>
-  <p>В одном столбце расположены следующие клетки с шоколадками:</p>
-  <ol>
-    <li>(2, 1) и (3, 1)</li>
-    <li>(1, 3) и (3, 3)</li>
-  </ol>
+    <code>9</code>
+    <p>Пронумеруем строки сверху вниз, а столбцы слева направо. Тогда в одной строке расположены:</p>
+    <ol>
+      <li>(1, 2) и (1, 3)</li>
+      <li>(3, 1) и (3, 3)</li>
+    </ol>
+    <p>В одном столбце расположены следующие клетки с шоколадками:</p>
+    <ol>
+      <li>(2, 1) и (3, 1)</li>
+      <li>(1, 3) и (3, 3)</li>
+    </ol>
+  </details>
 </article>
 
 
@@ -317,9 +320,11 @@ C..C
   <h4>Выходные данные</h4>
   <p>Выведите одно целое число — максимальное количество кабинетов, которые можно занумеровать различными счастливыми номерами длины не более n.</p>
 
-  <h4>Пример</h4>
-  <code>2</code>
-  <code>6</code>
+  <details>
+    <summary>Пример</summary>
+    <code>2</code>
+    <code>6</code>
+  </details>
 </article>
 
 
@@ -340,13 +345,16 @@ C..C
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите число – количество способов выстроить детей так, чтобы Влад и Азик не стояли рядом. Ответ следует выводить по модулю 10⁹+7.</p>
 
-  <h4>Пример 1</h4>
-  <code>2</code>
-  <code>0</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>2</code>
+    <code>0</code>
 
-  <h4>Пример 2</h4>
-  <code>3</code>
-  <code>2</code>
+    <h4>Пример 2</h4>
+    <code>3</code>
+    <code>2</code>
+  </details>
 </article>
 
 
@@ -369,13 +377,16 @@ C..C
   <h4>Система оценки</h4>
   <p>В этой задаче 20 тестов, каждый оценивается в 5 баллов. Тесты из условия оцениваются в 0 баллов.</p>
 
-  <h4>Пример 1</h4>
-  <code>2</code>
-  <code>10</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>2</code>
+    <code>10</code>
 
-  <h4>Пример 2</h4>
-  <code>4</code>
-  <code>2710</code>
+    <h4>Пример 2</h4>
+    <code>4</code>
+    <code>2710</code>
+  </details>
 </article>
 
 
@@ -399,16 +410,19 @@ C..C
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите число - количество способов, которыми ладья могла совершить описанное путешествие.</p>
 
-  <h4>Пример 1</h4>
-  <code>2</code>
-  <code>8</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>2</code>
+    <code>8</code>
 
-  <h4>Пример 2</h4>
-  <code>3</code>
-  <code>72</code>
-  <p>В первом примере на доске 4 клетки. Начально можно поставить ладью в любую из них, то есть у нас 4 комбинации. Чтобы сделать полный оборот за 4 хода и вернуться в начальную клетку, ладья может пойти по часовой стрелке или против, то есть всего два варианта. Значит всего способов 4 * 2 = 8.</p>
-  <p>Во втором примере на доске 9 клеток. Начально ладью можно поставить 9ю способами. Рассмотрим как она может пойти. По горизонтали на любую из 2 клеток, потом по вертикали на любую из 2 клеток, затем вернуться на начальную клетку одним способом. То есть имеем (n-1) * (n - 1) * 1 * 1 комбинаций. Ладья также может начать с движения по вертикали. Это еще (n-1) * (n-1) * 1 * 1 комбинаций. Всего получим 9 * 2 * 2 + 9 * 2 * 2 = 72 комбинации. Мы вывели формулу для доски размером 3 на 3.</p>
-  <code>P = 2 * (n * n * (n-1) * (n-1)) = 2 * n² * (n-1)²</code>
+    <h4>Пример 2</h4>
+    <code>3</code>
+    <code>72</code>
+    <p>В первом примере на доске 4 клетки. Начально можно поставить ладью в любую из них, то есть у нас 4 комбинации. Чтобы сделать полный оборот за 4 хода и вернуться в начальную клетку, ладья может пойти по часовой стрелке или против, то есть всего два варианта. Значит всего способов 4 * 2 = 8.</p>
+    <p>Во втором примере на доске 9 клеток. Начально ладью можно поставить 9ю способами. Рассмотрим как она может пойти. По горизонтали на любую из 2 клеток, потом по вертикали на любую из 2 клеток, затем вернуться на начальную клетку одним способом. То есть имеем (n-1) * (n - 1) * 1 * 1 комбинаций. Ладья также может начать с движения по вертикали. Это еще (n-1) * (n-1) * 1 * 1 комбинаций. Всего получим 9 * 2 * 2 + 9 * 2 * 2 = 72 комбинации. Мы вывели формулу для доски размером 3 на 3.</p>
+    <code>P = 2 * (n * n * (n-1) * (n-1)) = 2 * n² * (n-1)²</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -461,26 +475,29 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите число – ответ на задачу.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 10
 1 2 3
 </pre>
- <code>10</code>
+    <code>10</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5
 1 2 3
 </pre>
- <code>5</code>
+    <code>5</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 100
 2 3 5
 </pre>
- <code>74</code>
+    <code>74</code>
+  </details>
 </article>
 
 
@@ -500,17 +517,20 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Вывести число сочетаний из n по k (C<sub>n</sub><sup>k</sup>) по модулю 10⁹ + 7.</p>
 
-  <h4>Пример 1</h4>
-  <code>4 1</code>
-  <code>4</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>4 1</code>
+    <code>4</code>
 
-  <h4>Пример 2</h4>
-  <code>4 2</code>
-  <code>6</code>
+    <h4>Пример 2</h4>
+    <code>4 2</code>
+    <code>6</code>
 
-  <h4>Пример 3</h4>
-  <code>8 3</code>
-  <code>56</code>
+    <h4>Пример 3</h4>
+    <code>8 3</code>
+    <code>56</code>
+  </details>
 </article>
 
 
@@ -529,17 +549,20 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Вывести число сочетаний из n по k (C<sub>n</sub><sup>k</sup>).</p>
 
-  <h4>Пример 1</h4>
-  <code>4 1</code>
-  <code>4</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>4 1</code>
+    <code>4</code>
 
-  <h4>Пример 2</h4>
-  <code>4 2</code>
-  <code>6</code>
+    <h4>Пример 2</h4>
+    <code>4 2</code>
+    <code>6</code>
 
-  <h4>Пример 3</h4>
-  <code>8 3</code>
-  <code>56</code>
+    <h4>Пример 3</h4>
+    <code>8 3</code>
+    <code>56</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -623,13 +646,16 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите число – количество способов.</p>
 
-  <h4>Пример 1</h4>
-  <code>1</code>
-  <code>1</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>1</code>
+    <code>1</code>
 
-  <h4>Пример 2</h4>
-  <code>2</code>
-  <code>2</code>
+    <h4>Пример 2</h4>
+    <code>2</code>
+    <code>2</code>
+  </details>
 </article>
 
 
@@ -667,13 +693,16 @@ int main() {
   <h4>Выходгные денная</h4>
   <p>В единственной строке вывести число - ответ назадачу для заданного N</p>
 
-  <h4>Пример 1</h4>
-  <code>2</code>
-  <code>4</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>2</code>
+    <code>4</code>
 
-  <h4>Пример 2</h4>
-  <code>2</code>
-  <code>15</code>
+    <h4>Пример 2</h4>
+    <code>2</code>
+    <code>15</code>
+  </details>
 </article>
 
 
@@ -693,18 +722,21 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите число – количество различных флагов</p>
 
-  <h4>Пример 1</h4>
-  <code>1 1</code>
-  <code>1</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>1 1</code>
+    <code>1</code>
 
-  <h4>Пример 2</h4>
-  <code>2 1</code>
-  <code>2</code>
+    <h4>Пример 2</h4>
+    <code>2 1</code>
+    <code>2</code>
 
 
-  <h4>Пример 3</h4>
-  <code>6 2</code>
-  <code>15</code>
+    <h4>Пример 3</h4>
+    <code>6 2</code>
+    <code>15</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -763,15 +795,17 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное целое число — остаток от деления на 1000000007 (10⁹ + 7) количества различных имен, которые могли бы получиться на месте номер 1 после применений описанных действий.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 2 3
 AAB
 BAA
 </pre>
-  <code>4</code>
+    <code>4</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 4 5
 ABABA
@@ -779,8 +813,9 @@ BCGDG
 AAAAA
 YABSA
 </pre>
-  <code>216</code>
-  <p>В первом примере Вася на месте имени номер 1 может получить следующие: «AAB», «AAA», «BAA» и «BAB».</p>
+    <code>216</code>
+    <p>В первом примере Вася на месте имени номер 1 может получить следующие: «AAB», «AAA», «BAA» и «BAB».</p>
+  </details>
 </article>
 
 
@@ -804,14 +839,17 @@ YABSA
   <h4>Выходные данные</h4>
   <p>Выведите единственное число — остаток от деления количества вариантов раздачи монет, устраивающих Таню на 10⁹ + 7.</p>
 
-  <h4>Пример 1</h4>
-  <code>1</code>
-  <code>20</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>1</code>
+    <code>20</code>
 
-  <h4>Пример 2</h4>
-  <code>2</code>
-  <code>680</code>
-  <p>20 способов для для n = 1 (наверху каждого треугольника сидит гном с индексом 0, в правой нижней вершине - с индексом 1, в левой нижней - с индексом 2):</p>
+    <h4>Пример 2</h4>
+    <code>2</code>
+    <code>680</code>
+    <p>20 способов для для n = 1 (наверху каждого треугольника сидит гном с индексом 0, в правой нижней вершине - с индексом 1, в левой нижней - с индексом 2):</p>
+  </details>
 </article>
 
 
@@ -835,13 +873,16 @@ YABSA
 
   <p>Пожалуйста, не используйте спецификатор %lld для чтения или записи 64-битных чисел на С++. Рекомендуется использовать потоки cin, cout или спецификатор %I64d.</p>
 
-  <h4>Пример 1</h4>
-  <code>5 2 5</code>
-  <code>10</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>5 2 5</code>
+    <code>10</code>
 
-  <h4>Пример 2</h4>
-  <code>4 3 5</code>
-  <code>3</code>
+    <h4>Пример 2</h4>
+    <code>4 3 5</code>
+    <code>3</code>
+  </details>
 </article>
 
 
@@ -867,30 +908,33 @@ YABSA
   <h4>Выходные данные</h4>
   <p>Выведите одно целое число — количество массивов, удовлетворяющих всем вышеописанным условиям, взятое по модулю 998244353.</p>
 
-  <h4>Пример 1</h4>
-  <code>3 4</code>
-  <code>6</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>3 4</code>
+    <code>6</code>
 
-  <h4>Пример 2</h4>
-  <code>3 5</code>
-  <code>10</code>
+    <h4>Пример 2</h4>
+    <code>3 5</code>
+    <code>10</code>
 
-  <h4>Пример 3</h4>
-  <code>42 1337</code>
-  <code>806066790</code>
+    <h4>Пример 3</h4>
+    <code>42 1337</code>
+    <code>806066790</code>
 
-  <h4>Пример 4</h4>
-  <code>100000 200000</code>
-  <code>707899035</code>
-  <p>Массивы из первого примера:</p>
-  <ul>
-    <li>[1,2,1];</li>
-    <li>[1,3,1];</li>
-    <li>[1,4,1];</li>
-    <li>[2,3,2];</li>
-    <li>[2,4,2];</li>
-    <li>[3,4,3];</li>
-  </ul>
+    <h4>Пример 4</h4>
+    <code>100000 200000</code>
+    <code>707899035</code>
+    <p>Массивы из первого примера:</p>
+    <ul>
+      <li>[1,2,1];</li>
+      <li>[1,3,1];</li>
+      <li>[1,4,1];</li>
+      <li>[2,3,2];</li>
+      <li>[2,4,2];</li>
+      <li>[3,4,3];</li>
+    </ul>
+  </details>
 </article>
 
 
@@ -910,22 +954,25 @@ YABSA
   <h4>Выходные данные</h4>
   <p>Выведите одно число — количество прямоугольных треугольников на поле. Пожалуйста, не используйте спецификатор %lld для чтения или записи 64-х битовых чисел на С++. Рекомендуется использовать поток cout (также вы можете использовать спецификатор %I64d).</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 2 2
 **
 *.
 </pre>
-  <code>1</code>
+    <code>1</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3 4
 *..*
 .**.
 *.**
 </pre>
-  <code>9</code>
+    <code>9</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1009,7 +1056,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Вывести одно число – максимально возможное количество баллов.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 #***#*
@@ -1019,7 +1067,8 @@ int main() {
 *##*#*
 ******
 </pre>
-  <code>4</code>
+    <code>4</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1100,24 +1149,27 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите одно число – количество массивов a и b, удовлетворяющих условиям, описанным выше по модулю 10⁹+7.</p>
 
-  <h4>Пример 1</h4>
-  <code>2 2</code>
-  <code>5</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>2 2</code>
+    <code>5</code>
 
-  <h4>Пример 2</h4>
-  <code>10 1</code>
-  <code>55</code>
+    <h4>Пример 2</h4>
+    <code>10 1</code>
+    <code>55</code>
 
-  <h4>Пример 3</h4>
-  <code>723 9</code>
-  <code>157557417</code>
-  <p>В первом тесте существуют 5 подходящих вариантов:</p>
-  <ul>
-    <li>a=[1,1],b=[2,2];</li>
-    <li>a=[1,2],b=[2,2];</li>
-    <li>a=[2,2],b=[2,2];</li>
-    <li>a=[1,1],b=[2,1];</li>
-    <li>a=[1,1],b=[1,1].</li>
-  </ul>
+    <h4>Пример 3</h4>
+    <code>723 9</code>
+    <code>157557417</code>
+    <p>В первом тесте существуют 5 подходящих вариантов:</p>
+    <ul>
+      <li>a=[1,1],b=[2,2];</li>
+      <li>a=[1,2],b=[2,2];</li>
+      <li>a=[2,2],b=[2,2];</li>
+      <li>a=[1,1],b=[2,1];</li>
+      <li>a=[1,1],b=[1,1].</li>
+    </ul>
+  </details>
 </article>
 
