--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp4.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp4.html
@@ -74,6 +74,22 @@ vector&lt;int&gt; V3(n, 5);
   <p>Все элементы в vector&lt;int&gt; изначально заполнены 0.</p>
   <p>Имя вектора задается по правилам переменных.</p>
 
+  <p>Вектор это динамический массив, длину которого можно изменять во время выполнения программы.</p>
+  <p>Создадим вектор целых чисел, изначально пустой</p>
+  <code>vector&lt;int&gt; A;</code>
+  <p>Создадим вектор целых чисел, содержащий n элементов, изначально равных нулю</p>
+  <code>vector&lt;int&gt; A(n);</code>
+  <p>Создадим вектор целых чисел, содержащий 10 элементов, изначально равных 5</p>
+  <code>vector&lt;int&gt; A(10, 5);</code>
+  <p>Создадим двумерный вектор целых чисел, изначально пустой</p>
+  <code>vector&lt;vector&lt;int&gt; &gt; A;</code>
+  <p>Создадим двумерный вектор целых чисел, содержащий n пустых векторов</p>
+  <code>vector&lt;vector&lt;int&gt; &gt; A(n);</code>
+  <p>Создадим двумерный вектор целых чисел, содержащий n векторов, по m элементов, изначально равных нулю</p>
+  <code>vector&lt;vector&lt;int&gt; &gt; A(n, vector&lt;int&gt; (m));</code>
+  <p>Создадим трехерный вектор целых чисел, содержащий n векторов, по m векторов</p>
+  <code>vector&lt;vector&lt;vector&lt;int&gt; &gt; &gt; A(n, vector&lt;vector&lt;int&gt; &gt; (m));</code>
+
   <p>Метод в С++ — это функция, которая принадлежит классу. Она может выполнять какие-либо действия над данными (свойствами) класса.</p>
 <pre>
     4   1     3   2
@@ -263,12 +279,14 @@ for (int i = 0; i &lt; n; i++) {
 
   <p>Дана последовательность чисел, завершающаяся нулем. Вывести четные числа в прямом порядке, нечетные - в обратном.</p>
 
-  <h4>Пример</h4>
-  <code>13 2 4 21 45 67 23 46 20 1 0</code>
+  <details>
+    <summary>Пример</summary>
+    <code>13 2 4 21 45 67 23 46 20 1 0</code>
 <pre>
 2 4 46 20
 1 23 67 45 21 13
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -331,6 +349,8 @@ for (int i = C.size() - 1; i >= 0; i--) {
   <h4>Выходные данные</h4>
   <p>Выведите одно целое число — сколько тостов сможет сделать каждый из друзей.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
   <code>3 4 5 10 8 100 3 1</code>
   <code>2</code>
@@ -343,6 +363,7 @@ for (int i = C.size() - 1; i >= 0; i--) {
   <h4>Пример 3</h4>
   <code>10 1000 1000 25 23 1 50 1</code>
   <code>0</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -417,7 +438,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора тестовых данных выведите ответ на него — количество способов распределить ровно n конфет между девочками так, как описано в условии задачи. Если не существует способа, удовлетворяющего всем условиям, выведите 0.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 7
@@ -435,12 +457,13 @@ int main() {
 999999999
 381621773
 </pre>
-  <p>Для первого набора тестовых данных возможные 3 способа распределения конфет — это:</p>
-  <ol>
-    <li>a=6, b=1;</li>
-    <li>a=5, b=2;</li>
-    <li>a=4, b=3.</li>
-  </ol>
+    <p>Для первого набора тестовых данных возможные 3 способа распределения конфет — это:</p>
+    <ol>
+      <li>a=6, b=1;</li>
+      <li>a=5, b=2;</li>
+      <li>a=4, b=3.</li>
+    </ol>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -508,7 +531,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных в отдельной строке выведите единственное число — минимальное количество операций, которое нужно совершить над последовательностью, чтобы она стала строго возрастающей. Если строго возрастающую последовательность невозможно получить, то выведите «-1».</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7
 3
@@ -536,9 +560,10 @@ int main() {
 0
 </pre>
 
-  <p>Первый набор входных данных разобран в условии.</p>
-  <p>Во втором наборе входных данных получить строго возрастающую последовательность невозможно.</p>
-  <p>В третьем наборе входных данных последовательность уже является строго возрастающей.</p>
+    <p>Первый набор входных данных разобран в условии.</p>
+    <p>Во втором наборе входных данных получить строго возрастающую последовательность невозможно.</p>
+    <p>В третьем наборе входных данных последовательность уже является строго возрастающей.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -621,37 +646,40 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственную строку выходных данных выведите выведите целое число S — минимальное количество бурлей, которое придётся потратить.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 5
 0 1 2 3 4
 </pre>
-  <code>10</code>
-  <p>В первом примере, если прибавить первому гражданину 4 бурля, второму 3, третьему 2 и четвёртому 1, то у всех граждан благосостояние станет равным 4.</p>
+    <code>10</code>
+    <p>В первом примере, если прибавить первому гражданину 4 бурля, второму 3, третьему 2 и четвёртому 1, то у всех граждан благосостояние станет равным 4.</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5
 1 1 0 1 1
 </pre>
-  <code>1</code>
-  <p>Во втором примере достаточно дать третьему гражданину один бурль.</p>
+    <code>1</code>
+    <p>Во втором примере достаточно дать третьему гражданину один бурль.</p>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 3
 1 3 1
 </pre>
-  <code>4</code>
-  <p>В третьем примере нужно отдать по два бурля первому и третьему гражданам, чтобы благосостояние всех граждан стало равным 3.</p>
+    <code>4</code>
+    <p>В третьем примере нужно отдать по два бурля первому и третьему гражданам, чтобы благосостояние всех граждан стало равным 3.</p>
 
-  <h4>Пример 4</h4>
+    <h4>Пример 4</h4>
 <pre>
 1
 12
 </pre>
-  <code>0</code>
-  <p>В четвёртом примере можно никому ничего не давать, так как у всех граждан уже по 12 бурлей.</p>
+    <code>0</code>
+    <p>В четвёртом примере можно никому ничего не давать, так как у всех граждан уже по 12 бурлей.</p>
+  </details>
 
   <details>
     <summary>Решенине</summary>
@@ -718,21 +746,24 @@ int main() {
   <p>Выведите одно целое число — минимальное количество задач, которое необходимо решить студентам, чтобы сформировать ровно n/2
   команд.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 6
 5 10 2 3 14 5
 </pre>
-  <code>5</code>
-  <p>В первом тестовом примере оптимальными будут команды: (3,4), (1,6) и (2,5), где числа в скобках являются номерами студентов. Тогда для того, чтобы сформировать первую команду, третий студент должен решить 1 задачу, чтобы сформировать вторую команду, никто не должен решать задачи, и чтобы сформировать третью команду, второй студент должен решить 4 задачи, таким образом ответ равен 1+4=5.</p>
+    <code>5</code>
+    <p>В первом тестовом примере оптимальными будут команды: (3,4), (1,6) и (2,5), где числа в скобках являются номерами студентов. Тогда для того, чтобы сформировать первую команду, третий студент должен решить 1 задачу, чтобы сформировать вторую команду, никто не должен решать задачи, и чтобы сформировать третью команду, второй студент должен решить 4 задачи, таким образом ответ равен 1+4=5.</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 2
 1 100
 </pre>
-  <code>99</code>
-  <p>Во втором тестовом примере первый студент должен решить 99 задач, чтобы сформировать команду со вторым.</p>
+    <code>99</code>
+    <p>Во втором тестовом примере первый студент должен решить 99 задач, чтобы сформировать команду со вторым.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -788,7 +819,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите ответ — минимальное количество ходов, которое нужно сделать, чтобы получить значение a, которое без остатка делилось бы на b.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 10 4
@@ -804,6 +836,7 @@ int main() {
 333
 0
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -866,7 +899,8 @@ int main() {
   <p>Для каждого набора тестовых данных выведите одно целое число — минимальное количество ходов, за которое можно сделать заданный массив a
   хорошим, или -1, если это сделать невозможно.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 4
@@ -884,9 +918,10 @@ int main() {
 -1
 0
 </pre>
-  <p>В первом наборе тестовых данных в первый ход можно поменять местами элементы на позициях 0 и 1, а во второй ход поменять местами элементы на позициях 2 и 3.</p>
-  <p>Во втором наборе тестовых данных в первый ход надо поменять местами элементы на позициях 0 и 1.</p>
-  <p>В третьем наборе тестовых данных нельзя сделать массив хорошим.</p>
+    <p>В первом наборе тестовых данных в первый ход можно поменять местами элементы на позициях 0 и 1, а во второй ход поменять местами элементы на позициях 2 и 3.</p>
+    <p>Во втором наборе тестовых данных в первый ход надо поменять местами элементы на позициях 0 и 1.</p>
+    <p>В третьем наборе тестовых данных нельзя сделать массив хорошим.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -966,7 +1001,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите t ответов на наборы входных данных. Каждый ответ должен начинаться с целого числа k — минимального количества слагаемых. Далее должны следовать k слагаемых, каждое из которых является круглым числом, а их сумма равна n. Слагаемые можно выводить в любом порядке. Если ответов несколько, то выведите любой из них.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 5009
@@ -987,6 +1023,7 @@ int main() {
 1
 10
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1071,7 +1108,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора тестовых данных выведите ответ на него: как много цифр суммарно нажал наш герой.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 22
@@ -1085,6 +1123,7 @@ int main() {
 1
 66
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1152,29 +1191,32 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите одно целое число — минимальное количество удалённых точек.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3 1
 2 1 4
 </pre>
-  <code>1</code>
-  <p>В первом тестовом примере выгодно удалить точку с координатой 4. Оставшиеся точки будут иметь координаты 1 и 2, поэтому диаметр оставшегося мультимножества будет равен 2 - 1 = 1.</p>
+    <code>1</code>
+    <p>В первом тестовом примере выгодно удалить точку с координатой 4. Оставшиеся точки будут иметь координаты 1 и 2, поэтому диаметр оставшегося мультимножества будет равен 2 - 1 = 1.</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3 0
 7 7 7
 </pre>
-  <code>0</code>
-  <p>Во втором тестовом примере диаметр равен 0, поэтому удалять точки не потребуется.</p>
+    <code>0</code>
+    <p>Во втором тестовом примере диаметр равен 0, поэтому удалять точки не потребуется.</p>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 6 3
 1 3 4 6 9 10
 </pre>
-  <code>3</code>
-  <p>В третьем тестовом примере выгодно удалить точки с координатами 1, 9 и 10. Оставшиеся точки будут иметь координаты 3, 4 и 6, поэтому диаметр будет равен 6 - 3 = 3.</p>
+    <code>3</code>
+    <p>В третьем тестовом примере выгодно удалить точки с координатами 1, 9 и 10. Оставшиеся точки будут иметь координаты 3, 4 и 6, поэтому диаметр будет равен 6 - 3 = 3.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1236,7 +1278,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число: -1, если нельзя добраться до (n,m) при заданных ограничениях, в ином случае — минимальное количество шагов.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 1 1
@@ -1258,6 +1301,7 @@ int main() {
   <p>2-й набор: нужно сделать один шаг вниз, чтобы достичь (2,1).</p>
   <p>3-й набор: невозможно достичь (1,3), не сделав подряд два шага вправо или не покидая пределы сетки.</p>
   <p>4-й набор: оптимальная последовательность шагов выглядит например так: (1,1)→(1,2)→(2,2)→(2,1)→(3,1)→(3,2)→(4,2). Можно доказать, что это оптимальное решение. Таким образом, ответ равен 6.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1329,22 +1373,25 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственно целое число — количество квартир, в которых горит свет хотя бы в одном окне, то есть, по мнению Виталия, там кто-то не спит.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 2 2
 0 0 0 1
 1 0 1 1
 </pre>
-  <code>3</code>
-  <p>В первом тестовом примере дом двухэтажный, по две квартиры на каждом этаже, то есть всего в нем 4 квартиры. Свет не горит только на втором этаже в левой квартире, так как в обеих комнатах этой квартиры свет выключен.</p>
+    <code>3</code>
+    <p>В первом тестовом примере дом двухэтажный, по две квартиры на каждом этаже, то есть всего в нем 4 квартиры. Свет не горит только на втором этаже в левой квартире, так как в обеих комнатах этой квартиры свет выключен.</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 1 3
 1 1 0 1 0 0
 </pre>
-  <code>2</code>
-  <p>Во втором тестовом примере дом одноэтажный, и на первом этаже есть три квартиры. Свет горит в самой левой квартире (в обоих окнах) и в средней квартире (в одном окне). В правой же квартире свет не горит.</p>
+    <code>2</code>
+    <p>Во втором тестовом примере дом одноэтажный, и на первом этаже есть три квартиры. Свет горит в самой левой квартире (в обоих окнах) и в средней квартире (в одном окне). В правой же квартире свет не горит.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1402,33 +1449,35 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное целое число — максимальное расстояние между минимальным и максимальным элементами в массиве Николая, которое может быть получено с помощью ровно одного обмена местами двух элементов массива.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 5
 4 5 1 3 2
 </pre>
-  <code>3</code>
-  <p>В первом примере оптимального ответа можно добиться поменяв местами 1 и 2.</p>
+    <code>3</code>
+    <p>В первом примере оптимального ответа можно добиться поменяв местами 1 и 2.</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 7
 1 6 5 3 4 7 2
 </pre>
-  <code>6</code>
-  <p>Во втором примере минимальный и максимальный элементы будут находиться в разных концах массива, если поменять местами 7 и 2.</p>
+    <code>6</code>
+    <p>Во втором примере минимальный и максимальный элементы будут находиться в разных концах массива, если поменять местами 7 и 2.</p>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 6
 6 5 4 3 2 1
 </pre>
-  <code>5</code>
-  <p>В третьем примере расстояние между минимальным и максимальным элементов уже максимально возможное, поэтому нужно сделать какой-нибудь ничего не значащий обмен, например 5 и 2.</p>
+    <code>5</code>
+    <p>В третьем примере расстояние между минимальным и максимальным элементов уже максимально возможное, поэтому нужно сделать какой-нибудь ничего не значащий обмен, например 5 и 2.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
-
 
     <div>
       <a href="https://codeforces.com/contest/676/problem/A" target="_blank">Задача 676A</a>
@@ -1495,7 +1544,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно число — максимальную сумму по всем возможным размещениям слона.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 4 4
@@ -1521,6 +1571,7 @@ int main() {
 5
 3
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1623,6 +1674,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите n целых чисел через пробел: i-е число должно обозначать количество кубиков в i-м столбике после переключения гравитации.</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 4
@@ -1648,6 +1701,7 @@ int main() {
 ###    ###
 </pre>
   <p>Во втором тестовом примере переключение гравитации не меняет высоты столбиков.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
