--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp6.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp6.html
@@ -250,9 +250,11 @@ int main() {
 
   <p>Даны два натуральных числа a и b, не равные нулю одновременно. Вычислить НОД(a, b) — наибольший общий делитель a и b.</p>
 
-  <h4>Пример</h4>
-  <code>9 12</code>
-  <code>3</code>
+  <details>
+    <summary>Пример</summary>
+    <code>9 12</code>
+    <code>3</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -305,12 +307,14 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите заданную последовательность в обратном порядке.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 1 2 3
 </pre>
-  <code>3 2 1</code>
+    <code>3 2 1</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -358,9 +362,11 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите значение заданного в условии выражения.</p>
 
-  <h4>Пример</h4>
-  <code>3 2 3</code>
-  <code>2744</code>
+  <details>
+    <summary>Пример</summary>
+    <code>3 2 3</code>
+    <code>2744</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -408,9 +414,11 @@ int main() {
 
   <p>Дано число n (n ≤ 20). Выведите n!</p>
 
-  <h4>Пример</h4>
-  <code>4</code>
-  <code>24</code>
+  <details>
+    <summary>Пример</summary>
+    <code>4</code>
+    <code>24</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -459,13 +467,16 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Требуется вывести количество квадратов.</p>
 
-  <h4>Пример 1</h4>
-  <code>15 3</code>
-  <code>5</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>15 3</code>
+    <code>5</code>
 
-  <h4>Пример 2</h4>
-  <code>12 8</code>
-  <code>3</code>
+    <h4>Пример 2</h4>
+    <code>12 8</code>
+    <code>3</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -521,29 +532,32 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите максимальную длину отсортированного массива, который можно получить, используя сортировку Таноса. Элементы итогового массива должны быть отсортированы в порядке неубывания.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4
 1 2 2 4
 </pre>
-  <code>4</code>
-  <p>В первом примере массив уже отсортирован, и можно обойтись без щелчков.</p>
+    <code>4</code>
+    <p>В первом примере массив уже отсортирован, и можно обойтись без щелчков.</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 8
 11 12 1 2 13 14 3 4
 </pre>
-  <code>2</code>
-  <p>Во втором примере входной массив содержит отсортированный подмассив из 4 элементов, но увы, удалять элементы из разных частей массива за один щелчок нельзя. Можно удалять только все элементы из первой или из второй половины массива, поэтому потребуется два щелчка, чтобы получить отсортированный массив длины 2.</p>
+    <code>2</code>
+    <p>Во втором примере входной массив содержит отсортированный подмассив из 4 элементов, но увы, удалять элементы из разных частей массива за один щелчок нельзя. Можно удалять только все элементы из первой или из второй половины массива, поэтому потребуется два щелчка, чтобы получить отсортированный массив длины 2.</p>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 4
 7 6 5 4
 </pre>
-  <code>1</code>
-  <p>В третьем примере массив отсортирован в порядке убывания, и спасти от уничтожения получится только один элемент.</p>
+    <code>1</code>
+    <p>В третьем примере массив отсортирован в порядке убывания, и спасти от уничтожения получится только один элемент.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -619,21 +633,24 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное целое число — минимальное количество чисел, которое нужно добавить Пете в массив, чтобы его медиана стала равна x.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3 10
 10 20 30
 </pre>
-  <code>1</code>
-  <p>В первом примере в массив (10, 20, 30) достаточно добавить число 9. В получившемся массиве (9, 10, 20, 30) медианой будет элемент на позиции ⌊(4 + 1) / 2⌋, то есть 10</p>
+    <code>1</code>
+    <p>В первом примере в массив (10, 20, 30) достаточно добавить число 9. В получившемся массиве (9, 10, 20, 30) медианой будет элемент на позиции ⌊(4 + 1) / 2⌋, то есть 10</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3 4
 1 2 3
 </pre>
-  <code>4</code>
-  <p>Во втором примере в массив нужно добавить числа 4, 5, 5, 5. В получившемся массиве медиана равна 4</p>
+    <code>4</code>
+    <p>Во втором примере в массив нужно добавить числа 4, 5, 5, 5. В получившемся массиве медиана равна 4</p>
+  </details>
 
   <details>
     <summary>Еще примеры</summary>
@@ -813,25 +830,28 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Если выиграет Семен, выведите «0» (без кавычек), иначе выведите «1» (без кавычек).</p>
 
-  <h4>Пример 1</h4>
-  <code>3 5 9</code>
-  <code>0</code>
-  <p>Наибольшим общим делителем двух неотрицательных целых чисел a и b называется такое наибольшее положительное целое число k, что a делится на k без остатка, и, аналогично, b делится на k без остатка. Обозначим через gcd(a, b) операцию вычисления наибольшего общего делителя чисел a и b. В частности, gcd(x, 0) = gcd(0, x) = x.</p>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>3 5 9</code>
+    <code>0</code>
+    <p>Наибольшим общим делителем двух неотрицательных целых чисел a и b называется такое наибольшее положительное целое число k, что a делится на k без остатка, и, аналогично, b делится на k без остатка. Обозначим через gcd(a, b) операцию вычисления наибольшего общего делителя чисел a и b. В частности, gcd(x, 0) = gcd(0, x) = x.</p>
 
-  <p>В первом примере игра будет идти следующим образом:</p>
-  <ul>
-    <li>Семен должен взять из кучки gcd(3, 9) = 3 камня. После его хода в кучке остается 6 камней.</li>
-    <li>Антисемен должен взять из кучки gcd(5, 6) = 1 камень. После его хода в кучке остается 5 камней.</li>
-    <li>Семен должен взять из кучки gcd(3, 5) = 1 камень. После его хода в кучке остается 4 камня.</li>
-    <li>Антисемен должен взять из кучки gcd(5, 4) = 1 камня. После его хода в кучке остается 3 камня.</li>
-    <li>Семен должен взять из кучки gcd(3, 3) = 3 камня. После его хода в кучке остается 0 камней.</li>
-    <li>Антисемен должен взять из кучки gcd(5, 0) = 5 камня. Так как 0 &lt; 5, это сделать невозможно, и Антисемен проигрывает.</li>
-  </ul>
+    <p>В первом примере игра будет идти следующим образом:</p>
+    <ul>
+      <li>Семен должен взять из кучки gcd(3, 9) = 3 камня. После его хода в кучке остается 6 камней.</li>
+      <li>Антисемен должен взять из кучки gcd(5, 6) = 1 камень. После его хода в кучке остается 5 камней.</li>
+      <li>Семен должен взять из кучки gcd(3, 5) = 1 камень. После его хода в кучке остается 4 камня.</li>
+      <li>Антисемен должен взять из кучки gcd(5, 4) = 1 камня. После его хода в кучке остается 3 камня.</li>
+      <li>Семен должен взять из кучки gcd(3, 3) = 3 камня. После его хода в кучке остается 0 камней.</li>
+      <li>Антисемен должен взять из кучки gcd(5, 0) = 5 камня. Так как 0 &lt; 5, это сделать невозможно, и Антисемен проигрывает.</li>
+    </ul>
 
-  <h4>Пример 2</h4>
-  <code>1 1 100</code>
-  <code>1</code>
-  <p>Во втором примере каждый игрок на каждом ходу берет из кучки по одному камню. Так как n четное, последний камень возьмет Антисемен, а Семен после этого не сможет сделать ход.</p>
+    <h4>Пример 2</h4>
+    <code>1 1 100</code>
+    <code>1</code>
+    <p>Во втором примере каждый игрок на каждом ходу берет из кучки по одному камню. Так как n четное, последний камень возьмет Антисемен, а Семен после этого не сможет сделать ход.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -892,23 +912,26 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное число — ответ на задачу.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 7 3
 5 10
 2 5
 3 6
 </pre>
-  <code>62</code>
+    <code>62</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3 3
 1 3
 2 2
 3 1
 </pre>
-  <code>7</code>
+    <code>7</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -990,7 +1013,9 @@ int main() {
 
   <p>Если существует несколько оптимальных решений, выведите любое из них. Использовать все дни на учебу необязательно.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4 10
 4 3 1 2
@@ -999,9 +1024,9 @@ int main() {
 4
 1 2 3 4
 </pre>
-  <p>В первом тесте Amr может научиться играть на всех 4 инструментах.</p>
+    <p>В первом тесте Amr может научиться играть на всех 4 инструментах.</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5 6
 4 3 1 1 2
@@ -1010,8 +1035,8 @@ int main() {
 3
 1 3 4
 </pre>
-  <p>Во втором тесте другие возможные варианты: {2, 3, 5} или {3, 4, 5}.</p>
-  <h4>Пример 3</h4>
+    <p>Во втором тесте другие возможные варианты: {2, 3, 5} или {3, 4, 5}.</p>
+    <h4>Пример 3</h4>
 <pre>
 1 3
 4
@@ -1019,7 +1044,8 @@ int main() {
 <pre>
 0
 </pre>
-  <p>В третьем тесте у Amr недостаточно времени для того, чтобы научиться играть на единственном данном инструменте.</p>
+    <p>В третьем тесте у Amr недостаточно времени для того, чтобы научиться играть на единственном данном инструменте.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1098,7 +1124,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите финальную таблицу результатов: n строк, каждая строка должна содержать номер соответствующего гнома и итоговую максимальную величину его гриба ровно с двумя знаками после точки. Ответ будет считаться правильным, если он абсолютно точный.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 2 3 3 50
 2 4
@@ -1108,9 +1136,9 @@ int main() {
 1 15.00
 2 15.00
 </pre>
-  <p>Первый пример: Обоим участникам удобнее сначала использовать скорость 2, а потом скорость 4, так как 2·3·0.5 + 4·3 > 4·3·0.5 + 2·3.</p>
+    <p>Первый пример: Обоим участникам удобнее сначала использовать скорость 2, а потом скорость 4, так как 2·3·0.5 + 4·3 > 4·3·0.5 + 2·3.</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 4 1 1 1
 544 397
@@ -1124,6 +1152,7 @@ int main() {
 2 379.99
 3 379.99
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1212,19 +1241,22 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Если возможно осуществить z-сортировку массива a выведите n целых чисел aᵢ — элементы массива после z-сортировки. В противном случае выведите одно слово "Impossible".</p>
 
+  <details>
+    <summary>Примеры</summary>
   <h4>Пример 1</h4>
 <pre>
 4
 1 2 2 1
 </pre>
-  <code>1 2 1 2</code>
+    <code>1 2 1 2</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5
 1 3 2 2 5
 </pre>
-  <code>1 5 2 3 2</code>
+    <code>1 5 2 3 2</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1316,7 +1348,8 @@ int main() {
 
   <p>Если возможных ответов несколько, выведите любой из них.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 2
@@ -1343,13 +1376,14 @@ int main() {
 1 2 1
 1 3 1
 </pre>
-  <p>Пояснение к четвертому набору данных в примере:</p>
-  <ol>
-    <li>Выбирается отрезок a[2…4] и сдивгается на 2 влево: [2,5,1,4,3]⟶[2,4,5,1,3]</li>
-    <li>Выбирается отрезок a[1…5] и сдвигается на 3 влево: [2,4,5,1,3]⟶[1,3,2,4,5]</li>
-    <li>Выбирается отрезок a[1…2] и сдвигается на 1 влево: [1,3,2,4,5]⟶[3,1,2,4,5]</li>
-    <li>Выбирается отрезок a[1…3] и сдвигается на 1 влево: [3,1,2,4,5]⟶[1,2,3,4,5]</li>
-  </ol>
+    <p>Пояснение к четвертому набору данных в примере:</p>
+    <ol>
+      <li>Выбирается отрезок a[2…4] и сдивгается на 2 влево: [2,5,1,4,3]⟶[2,4,5,1,3]</li>
+      <li>Выбирается отрезок a[1…5] и сдвигается на 3 влево: [2,4,5,1,3]⟶[1,3,2,4,5]</li>
+      <li>Выбирается отрезок a[1…2] и сдвигается на 1 влево: [1,3,2,4,5]⟶[3,1,2,4,5]</li>
+      <li>Выбирается отрезок a[1…3] и сдвигается на 1 влево: [3,1,2,4,5]⟶[1,2,3,4,5]</li>
+    </ol>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1448,7 +1482,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В первую строку выведите ответ на задачу — максимальное количество клиентов, которое Валера сможет успешно обслужить. Во вторую строку выведите номера этих клиентов в произвольном порядке. Все номера должны быть различны. Если ответов несколько, выведите любой из них. Клиенты нумеруются, начиная с 1, в том порядке, в котором они заданы во входных данных.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3 10
 2 3
@@ -1461,7 +1497,7 @@ int main() {
 3 2
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3 6
 6 6
@@ -1473,6 +1509,7 @@ int main() {
 1
 2
 </pre>
+  </details>
 
   <details>
     <summary>Мое решение</summary>
@@ -1562,7 +1599,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В первой строке выведите единственное число k — минимальное количество операций, необходимых для уничтожения всех бомб. В следующих строках выведите описания этих k операций в формате, указанном в условии. Если существует несколько последовательностей, разрешается вывести любую. Гарантируется, что существует решение, где k ≤ 10⁶.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 2
 1 1
@@ -1584,7 +1623,7 @@ int main() {
 3
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3
 5 0
@@ -1606,6 +1645,7 @@ int main() {
 1 5 D
 3
 </pre>
+  </details>
 
   <details>
     <summary>Мое решение</summary>
@@ -2018,14 +2058,17 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное число k.</p>
 
-  <h4>Пример 1</h4>
-  <code>5</code>
-  <code>3</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>5</code>
+    <code>3</code>
 
-  <h4>Пример 2</h4>
-  <code>1</code>
-  <code>0</code>
-  <p>Из пары (1,1) можно за три хода получить пару, содержащую 5: (1,1) → (1,2) → (3,2) → (5,2).</p>
+    <h4>Пример 2</h4>
+    <code>1</code>
+    <code>0</code>
+    <p>Из пары (1,1) можно за три хода получить пару, содержащую 5: (1,1) → (1,2) → (3,2) → (5,2).</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -2107,7 +2150,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число — минимальное количество чисел, которое необходимо добавить в массив, чтобы он стал плотным.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 4
@@ -2131,11 +2175,12 @@ int main() {
 0
 3
 </pre>
-  <p>Первый набор входных данных разобран в условии.</p>
-  <p>Во втором наборе входных данных можно вставить один элемент, a=[1,2,3].</p>
-  <p>В третьем наборе входных данных можно вставить два элемента, a=[6,4,2,1].</p>
-  <p>В четвертом наборе входных данных можно вставить один элемент, a=[1,2,4,2].</p>
-  <p>В пятом наборе входных данных массив a уже плотный.</p>
+    <p>Первый набор входных данных разобран в условии.</p>
+    <p>Во втором наборе входных данных можно вставить один элемент, a=[1,2,3].</p>
+    <p>В третьем наборе входных данных можно вставить два элемента, a=[6,4,2,1].</p>
+    <p>В четвертом наборе входных данных можно вставить один элемент, a=[1,2,4,2].</p>
+    <p>В пятом наборе входных данных массив a уже плотный.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -2223,7 +2268,8 @@ int main() {
   </ul>
   <p>Матрицу следуют выводить в виде n строк, где каждая строка содержит n целых чисел.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 1
@@ -2238,7 +2284,8 @@ int main() {
 1 8 5
 </pre>
 
-  <p>Требуется заполнить квадратную матрицу n x n так, чтобы соседние элементы не были соседними числами. Представим матрицу в виде шахматной доски, где белые поля чередуются с черными. У каждой белой клетки все соседи черные и у каждой черной клетки все соседи белые.</p>
+    <p>Требуется заполнить квадратную матрицу n x n так, чтобы соседние элементы не были соседними числами. Представим матрицу в виде шахматной доски, где белые поля чередуются с черными. У каждой белой клетки все соседи черные и у каждой черной клетки все соседи белые.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -2383,7 +2430,8 @@ int main() {
 
   <p>Вы можете выводить ответ в любом регистре (например, строки «yEs», «yes», «Yes» и «YES» будут распознаны как положительный ответ).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 11
 6 4
@@ -2415,6 +2463,7 @@ NO
   <p>Во втором тесте мы можем выполнить следующие операции: {9}→{6,3}→{4,2,3}. Куча, которая разделяется, выделена красным цветом перед каждой операцией.</p>
   <p>В третьем тесте мы не можем выполнить ни одной операции.</p>
   <p>В четвертом тесте мы не можем получить кучу большего размера, чем у нас изначально.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -2499,7 +2548,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных, выведите максимальное значение mex(A) + mex(B).</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 4
 6
@@ -2517,10 +2567,11 @@ int main() {
 4
 0
 </pre>
-  <p>В первом наборе входных данных A={0,1,2},B={0,1,5} является возможным выбором разделения.</p>
-  <p>Во втором наборе входных данных A={0,1,2},B=∅ является возможным выбором разделения.</p>
-  <p>В третьем наборе входных данных A={0,1,2},B={0} является возможным выбором разделения.</p>
-  <p>В четвертом наборе входных данных A={1,3,5},B={2,4,6} является возможным выбором разделения.</p>
+    <p>В первом наборе входных данных A={0,1,2},B={0,1,5} является возможным выбором разделения.</p>
+    <p>Во втором наборе входных данных A={0,1,2},B=∅ является возможным выбором разделения.</p>
+    <p>В третьем наборе входных данных A={0,1,2},B={0} является возможным выбором разделения.</p>
+    <p>В четвертом наборе входных данных A={1,3,5},B={2,4,6} является возможным выбором разделения.</p>
+  </details>
 
   <details>
     <summary>Мое решение</summary>
