--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp7.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp7.html
@@ -451,19 +451,22 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите 2 пару индексов i и j через пробел, что i &lt; j, и a[j] - a[i] максимальное. Если ответов несколько выведите такой, где j наименьшее. Если и таких несколько, то такой где i наименьший.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 6
 3 4 1 3 5 7
 </pre>
-  <code>3 6</code>
+    <code>3 6</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 6
 3 4 7 3 5 1
 </pre>
-  <code>1 3</code>
+    <code>1 3</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -537,12 +540,14 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите два числа в возрастающем порядке — номера ячеек, которые нужно ограбить, чтобы суммарно украсть как можно более дорогие ценности, не вызвав при этом лишних подозрений. Если вариантов несколько выберите тот, в котором меньший номер вскрываемой ячейки был как можно ближе к единице, чтобы в экстренном случае покинуть банк как можно скорее. Если и таких вариантов несколько, выберите тот, в котором и больший номер вскрываемой ячейки был как можно меньше.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6 2
 2 4 3 1 4 4
 </pre>
-  <code>2 5</code>
+    <code>2 5</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -602,19 +607,22 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите одно число — самую большую сумму k подряд идущих элементов этого массива.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 5 2
 1 2 1 3 2
 </pre>
-  <code>5</code>
+    <code>5</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3 1
 3 2 1
 </pre>
-  <code>3</code>
+    <code>3</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -722,13 +730,16 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите слово, которое должно получиться у Андрея в результате. Если существует несколько возможных таких слов, выведите любое.</p>
 
-  <h4>Пример 1</h4>
-  <code>abccabd</code>
-  <code>abcccba</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>abccabd</code>
+    <code>abcccba</code>
 
-  <h4>Пример 2</h4>
-  <code>wasitadogoracatiate</code>
-  <code>wasitadogogodatisaw</code>
+    <h4>Пример 2</h4>
+    <code>wasitadogoracatiate</code>
+    <code>wasitadogogodatisaw</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -789,33 +800,36 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное число — сколько очков получит игрок, выложивший данную линию.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3
 1 3 5
 </pre>
-  <code>9</code>
+    <code>9</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3
 2 2 2
 </pre>
-  <code>6</code>
+    <code>6</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 3
 1 2 3
 </pre>
-  <code>12</code>
+    <code>12</code>
 
-  <h4>Пример 4</h4>
+    <h4>Пример 4</h4>
 <pre>
 3
 1 1 2
 </pre>
-  <code>-1</code>
+    <code>-1</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -890,13 +904,16 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное целое число - красивость подарка.</p>
 
-  <h4>Пример 1</h4>
-  <code>877</code>
-  <code>2</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>877</code>
+    <code>2</code>
 
-  <h4>Пример 2</h4>
-  <code>32520</code>
-  <code>1</code>
+    <h4>Пример 2</h4>
+    <code>32520</code>
+    <code>1</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -961,19 +978,22 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное целое число — минимальное количество применений бетонного осла, необходимое для уничтожения всех червей.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 7 2
 1 3 4 6 10 11 12
 </pre>
-  <code>3</code>
+    <code>3</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 7 2
 1 3 4 8 10 11 12
 </pre>
-  <code>4</code>
+    <code>4</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1038,12 +1058,14 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Одно целое число, задающее количество искомых подпоследовательностей в массиве A.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6 3
 2 4 6 2 4 8
 </pre>
-  <code>1</code>
+    <code>1</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1112,19 +1134,22 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите число – количество пар чисел, произведение которых делится на 14.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 2
 2 7
 </pre>
-  <code>1</code>
+    <code>1</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5
 1 14 5 7 2
 </pre>
-  <code>5</code>
+    <code>5</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1214,13 +1239,16 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите ответ на задачу – двапалиндром, полученный из исходной строки минимальным количеством изменений символов. Если существует несколько вариантов ответа, вывести любой.</p>
 
-  <h4>Пример 1</h4>
-  <code>abcacbbd</code>
-  <code>abbaabba</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>abcacbbd</code>
+    <code>abbaabba</code>
 
-  <h4>Пример 2</h4>
-  <code>abccba</code>
-  <code>abaaba</code>
+    <h4>Пример 2</h4>
+    <code>abccba</code>
+    <code>abaaba</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1287,26 +1315,29 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственную строку нужно вывести одно целое число — длину самой длиной непрерывной пилообразной подпоследовательности.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3
 1 2 3
 </pre>
-  <code>2</code>
+    <code>2</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 12
 5 7 6 3 4 2 7 1 8 9 4 5
 </pre>
-  <code>7</code>
+    <code>7</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 5
 1 -2 3 -4 5
 </pre>
-  <code>5</code>
+    <code>5</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1403,21 +1434,24 @@ int main() {
 
   <p>Учтите, что ответ на задачу может быть довольно большим, поэтому необходимо использовать 64-битный целый тип для вычислений. Пожалуйста, не используйте спецификатор %lld для чтения или записи 64-битных чисел на С++. Рекомендуется использовать потоки cin, cout или спецификатор %I64d.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 5
 -3 3 0 0 3
 </pre>
-  <code>3</code>
-  <p>В первом примере пары противоположных клиентов: (1,2), (1,5) и (3,4).</p>
+    <code>3</code>
+    <p>В первом примере пары противоположных клиентов: (1,2), (1,5) и (3,4).</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3
 0 0 0
 </pre>
-  <code>3</code>
-  <p>Во втором примере любая пара клиентов — противоположна.</p>
+    <code>3</code>
+    <p>Во втором примере любая пара клиентов — противоположна.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1497,13 +1531,16 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите «YES» если ситуация опасная. В противном случае выведите «NO».</p>
 
-  <h4>Пример 1</h4>
-  <code>001001</code>
-  <code>NO</code>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>001001</code>
+    <code>NO</code>
 
-  <h4>Пример 2</h4>
-  <code>1000000001</code>
-  <code>YES</code>
+    <h4>Пример 2</h4>
+    <code>1000000001</code>
+    <code>YES</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1587,19 +1624,22 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите значение медианы профессора Р. для заданного ряда чисел.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 5
 1 1 1 1 1
 </pre>
-  <code>1</code>
+    <code>1</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3
 1 2 3
 </pre>
-  <code>2</code>
+    <code>2</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1698,12 +1738,14 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите отсортированный по невозрастанию введенный массив.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 2 1 3
 </pre>
-  <code>3 2 1 </code>
+    <code>3 2 1 </code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1757,26 +1799,29 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите одно целое число — максимальное количество рамок, которые Николай сможет собрать для своих будущих картин.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 5
 2 4 3 2 3
 </pre>
-  <code>1</code>
+    <code>1</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 13
 2 2 4 4 4 4 6 6 6 7 7 9 9
 </pre>
-  <code>3</code>
+    <code>3</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 4
 3 3 3 5
 </pre>
-  <code>0</code>
+    <code>0</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1851,32 +1896,35 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите «YES» без кавычек, если из букв в кучке можно составить имена «Новогодних Дедов», и «NO» без кавычек в противном случае.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 SANTACLAUS
 DEDMOROZ
 SANTAMOROZDEDCLAUS
 </pre>
-  <code>YES</code>
-  <p>В первом примере: из букв, записанных в последней строке можно составить имена, записанные в первых двух, и не останется лишних букв.</p>
+    <code>YES</code>
+    <p>В первом примере: из букв, записанных в последней строке можно составить имена, записанные в первых двух, и не останется лишних букв.</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 PAPAINOEL
 JOULUPUKKI
 JOULNAPAOILELUPUKKI
 </pre>
-  <code>NO</code>
-  <p>Во втором примере: в кучке не хватает буквы «P» и лишняя буква «L».</p>
+    <code>NO</code>
+    <p>Во втором примере: в кучке не хватает буквы «P» и лишняя буква «L».</p>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 BABBONATALE
 FATHERCHRISTMAS
 BABCHRISTMASBONATALLEFATHER
 </pre>
-  <code>NO</code>
-  <p>В третьем примере: лишняя буква «L».</p>
+    <code>NO</code>
+    <p>В третьем примере: лишняя буква «L».</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1963,7 +2011,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите единственное целое число — максимальное количество человек, которые могут занять место.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 10
 3 10
@@ -1987,7 +2036,7 @@ int main() {
 1 2
 -1
 </pre>
-<code>
+<pre>
 1
 3
 5
@@ -1998,9 +2047,7 @@ int main() {
 1
 2
 1
-</code>
-
-  <details>
+</pre>
     <summary>Примечание к примеру</summary>
     <p><strong>В первом наборе</strong> входных данных все люди хотят занять место 5, поэтому только 1 человек сможет занять место.</p>
 
@@ -2156,9 +2203,8 @@ int main() {
 66 119 -1 84 -1 49 97 -2 84 103 10 -2 33 22 112 -1 38 118 65
 </pre>
     <code>83</code>
-  </details>
 
-  <h4>Тест</h4>
+    <h4>Тест</h4>
 <pre>
 2
 6 6
@@ -2166,9 +2212,9 @@ int main() {
 8 10
 2  9 -1 -1 -1 -2 -2 -2
 </pre>
-  <code>5 6</code>
+    <code>5 6</code>
 
-  <h4>Тест</h4>
+    <h4>Тест</h4>
 <pre>
 2
 7 5
@@ -2176,7 +2222,8 @@ int main() {
 8 6
 3 -1 -1 -1 -2 -2 -2 -2
 </pre>
-  <code>5 6</code>
+    <code>5 6</code>
+  </details>
 
   <details>
     <summary>Решение за O(n)</summary>
@@ -2372,37 +2419,40 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное целое число — максимальное количество людей, которые смогут спрятаться в убежищах и думать, что им удастся спастись.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 2 2 1 5
 45 55
 40 60
 </pre>
-  <code>2</code>
+    <code>2</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 2 2 1 5
 45 54
 40 60
 </pre>
-  <code>1</code>
+    <code>1</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 2 2 2 5
 45 35
 40 60
 </pre>
-  <code>2</code>
+    <code>2</code>
 
-  <h4>Пример 4</h4>
+    <h4>Пример 4</h4>
 <pre>
 3 3 1 5
 40 45 45
 45 50 50
 </pre>
-  <code>3</code>
+    <code>3</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -2489,7 +2539,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число, обозначающее минимальное количество минут, необходимое для того, чтобы Виктор овладел обоими необходимыми навыками, и -1, если невозможно овладеть двумя навыками после чтения любого количества книг.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 6
 4
@@ -2530,20 +2581,12 @@ int main() {
 -1
 8
 </pre>
-  <p>В первом тестовом случае мы можем использовать книги 2 и 3, с общим количеством потраченного времени, равным 3+4=7.</p>
+    <p>В первом тестовом случае мы можем использовать книги 2 и 3, с общим количеством потраченного времени, равным 3+4=7.</p>
 
-  <p>Во втором тестовом случае мы можем использовать книги 1 и 4, с общим количеством потраченного времени, равным 3+2=5.</p>
+    <p>Во втором тестовом случае мы можем использовать книги 1 и 4, с общим количеством потраченного времени, равным 3+2=5.</p>
 
-  <p>В третьем тестовом случае у нас есть только один вариант, и это чтение книги 1 за общее количество потраченного времени, равное 5.</p>
-
-  <h4>Решение</h4>
-  <p>Виктор может получить оба навыка только в двух случааях</p>
-  <ol>
-    <li>если прочитает две книги, одна из которых дает первый навык, но не дает второй, а другая дает второй навык, но не дает первый. Это книги с двоичным кодом '10' и '01'</li>
-    <li>если прочитает одну книгу, которая дает и первый навык и второй навык. Это книга с кодом '11'</li>
-  </ol>
-  <p>Можно не рассматривать книги, чтение которых не дает никаких навыков. Это книги с двоичным кодом '00'</p>
-  <p>Найдем все книги с кодами 01, 10, 11 и выберем из них те которые можно прочесть за минимальное время</p>
+    <p>В третьем тестовом случае у нас есть только один вариант, и это чтение книги 1 за общее количество потраченного времени, равное 5.</p>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -2552,6 +2595,14 @@ int main() {
       <a href="https://codeforces.com/contest/1829/problem/C" target="_blank">Задача 1829C</a>
       <br><a href="https://codeforces.com/contest/1829" target="_blank">Codeforces Round 871 (Div. 4) 2023-05-06</a>
     </div>
+
+    <p>Виктор может получить оба навыка только в двух случааях</p>
+    <ol>
+      <li>если прочитает две книги, одна из которых дает первый навык, но не дает второй, а другая дает второй навык, но не дает первый. Это книги с двоичным кодом '10' и '01'</li>
+      <li>если прочитает одну книгу, которая дает и первый навык и второй навык. Это книга с кодом '11'</li>
+    </ol>
+    <p>Можно не рассматривать книги, чтение которых не дает никаких навыков. Это книги с двоичным кодом '00'</p>
+    <p>Найдем все книги с кодами 01, 10, 11 и выберем из них те которые можно прочесть за минимальное время</p>
 
 <pre>
 #include &lt;iostream&gt;
