--- a/src/components/front/front-learned/pages/elem-day.html
+++ b/src/components/front/front-learned/pages/elem-day.html
@@ -2,6 +2,18 @@
 
 <ol reversed>
 
+  <li>2025.08.01 пт
+    <br>1. <strong>Книга</strong> <i>2020 Прохоренок - Язык Си. 480стр</i> прочитать 118-147стр
+  </li>
+
+  <li>2025.07.31 чт
+    <br>1. <strong>Книга</strong> <i>2020 Прохоренок - Язык Си. 480стр</i> прочитать 100-118стр
+  </li>
+
+  <li>2025.07.30 ср
+    <br>1. <strong>Книга</strong> <i>2020 Прохоренок - Язык Си. 480стр</i> прочитать 78-100стр
+  </li>
+
   <li>2025.07.29 вт
     <br>1. <strong>Книга</strong> <i>2020 Прохоренок - Язык Си. 480стр</i> прочитать 73-78стр
   </li>
