--- a/src/components/front/front-soft/pages/elem-soft-vstudio.html
+++ b/src/components/front/front-soft/pages/elem-soft-vstudio.html
@@ -37,6 +37,7 @@
   <h4>Вернуть все окна на свои места</h4>
   <p>По умолчанию окно <strong>Обозреватель решений</strong> находится слева, а код по центру. Если окна исчезли или стоят не на своих местах, то можно их вернуть к настройкам по умолчанию</p>
   <code>Окно - Сброс макета окна</code>
+  <code>Window - Reset Window Layout</code>
 
   <h4>2 пробела вместо табуляции</h4>
   <code>Средства - Параметры - Текстовый редактор - Все языки - Табуляция</code>
