--- a/src/components/alg/alg-conspect/yargu1/pages/elem-sp8.html
+++ b/src/components/alg/alg-conspect/yargu1/pages/elem-sp8.html
@@ -335,26 +335,29 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите целых чисел – элементы исходного массива a<sub>1</sub>,a<sub>2</sub>,…,a<sub>n</sub> через пробел. Гарантируется, что все a<sub>i</sub> лежат в пределах от -10<sup>9</sup> до 10<sup>9</sup></p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4
 1 3 6 10
 </pre>
-  <code>1 2 3 4</code>
+    <code>1 2 3 4</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5
 -4 -1 3 2 4
 </pre>
-  <code>-4 3 4 -1 2</code>
+    <code>-4 3 4 -1 2</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 3
 1000000000 2000000000 3000000000
 </pre>
-  <code>1000000000 1000000000 1000000000</code>
+    <code>1000000000 1000000000 1000000000</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -408,7 +411,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите Q строк с суммами соответствующих показаний датчиков напряженности.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 1
@@ -426,6 +430,7 @@ int main() {
 -1
 5
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -479,12 +484,14 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выдайте пару искомых значений индексов. Если таких пар несколько, то j  должно быть минимально возможным, а при равных j  значение i должно быть максимально возможным.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5
 -1 2 3 -2 2
 </pre>
-  <code>2 3</code>
+    <code>2 3</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -607,7 +614,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите n чисел через пробел — получившийся после всех запросов массив.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 1 4
 1 1 765
@@ -615,16 +624,17 @@ int main() {
 1 1 -69
 1 1 672
 </pre>
-  <code>1325</code>
+    <code>1325</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5 3
 1 4 -23
 4 5 397
 1 5 774
 </pre>
-  <code>751 751 751 1148 1171</code>
+    <code>751 751 751 1148 1171</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -697,7 +707,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите m целых чисел — ответы на запросы в том порядке, в котором запросы заданы во входных данных.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 ......
 4
@@ -713,7 +725,7 @@ int main() {
 4
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 #..###
 5
@@ -730,6 +742,7 @@ int main() {
 2
 0
 </pre>
+  </details>
 
   <details>
     <summary>Наивное решение - цикл в цикле</summary>
@@ -828,29 +841,32 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите единственное число — ответ на задачу.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4
 1 3 1 1
 2 1 2 2
 </pre>
-  <code>5</code>
+    <code>5</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3
 1 2 5
 2 9 4
 </pre>
-  <code>7</code>
+    <code>7</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 3
 3 7 8
 1 2 5
 </pre>
-  <code>8</code>
+    <code>8</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1029,19 +1045,22 @@ int main() {
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите состояние винчестера через k  дней в виде строки аналогично второй строке входных данных.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Пример</summary>
+    <h4>Пример 1</h4>
 <pre>
 11 2
 *.....**...
 </pre>
-  <code>***.******.</code>
+    <code>***.******.</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 15 1
 ....***.**....*
 </pre>
-  <code>...********..**</code>
+    <code>...********..**</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1137,22 +1156,25 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите n целых чисел, разделенных пробелами, — результат шифрования сообщения.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 4 3 2
 1 1 1 1
 1 1 1
 </pre>
-  <code>0 1 1 0</code>
-  <p>В первом примере шифрование проводится в два этапа: после первого этапа a = (0, 0, 0, 1) (вычисления производятся по модулю 2), после второго — a = (0, 1, 1, 0), что и будет ответом.</p>
+    <code>0 1 1 0</code>
+    <p>В первом примере шифрование проводится в два этапа: после первого этапа a = (0, 0, 0, 1) (вычисления производятся по модулю 2), после второго — a = (0, 1, 1, 0), что и будет ответом.</p>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 3 1 5
 1 2 3
 4
 </pre>
-  <code>0 1 2</code>
+    <code>0 1 2</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1283,7 +1305,9 @@ int main() {
 
   <p>Пожалуйста, не используйте спецификатор %lld для чтения или записи 64-х битовых чисел на C++. Рекомендуется использовать потоки cin, cout или спецификатор %I64d.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3 3 3
 1 2 3
@@ -1294,18 +1318,18 @@ int main() {
 1 3
 2 3
 </pre>
-  <code>9 18 17</code>
+    <code>9 18 17</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 1 1 1
 1
 1 1 1
 1 1
 </pre>
-  <code>2</code>
+    <code>2</code>
 
-  <h4>Пример 3</h4>
+    <h4>Пример 3</h4>
 <pre>
 4 3 6
 1 2 3 4
@@ -1319,7 +1343,8 @@ int main() {
 1 3
 2 3
 </pre>
-  <code>5 18 31 20</code>
+    <code>5 18 31 20</code>
+  </details>
 
   <details>
     <summary>Решение с TL</summary>
@@ -1484,7 +1509,9 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите для каждого эксперимента в отдельной строке количество простых чисел.</p>
 
-  <h4>Пример 1</h4>
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
 <pre>
 3
 2 10
@@ -1497,7 +1524,7 @@ int main() {
 165
 </pre>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 1
 1 10000000
@@ -1505,6 +1532,7 @@ int main() {
 <pre>
 664579
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1586,7 +1614,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите одно целое число — минимальное количество проходов, за которое Pekora может уменьшить все S<sub>i</sub> до 1.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 3
 7
@@ -1601,20 +1630,21 @@ int main() {
 3
 0
 </pre>
-  <p>Для первого набора входных данных, ниже приведена оптимальная последовательность проходов, которые Pekora может использовать. (Жирным выделены позиции батутов, куда прыгает Pekora в очередной проход).</p>
+    <p>Для первого набора входных данных, ниже приведена оптимальная последовательность проходов, которые Pekora может использовать. (Жирным выделены позиции батутов, куда прыгает Pekora в очередной проход).</p>
 <pre>
 [1,4,2,2,2,2,2]
 [1,4,1,2,1,2,1]
 [1,3,1,2,1,1,1]
 [1,2,1,2,1,1,1]
 </pre>
-  <p>Для второго набора входных данных оптимальная последовательность проходов приведена ниже.</p>
+    <p>Для второго набора входных данных оптимальная последовательность проходов приведена ниже.</p>
 <pre>
 [2,3]
 [1,3]
 [1,2]
 </pre>
-  <p>Для третьего набора входных данных, все S<sub>i</sub> уже равны 1.</p>
+    <p>Для третьего набора входных данных, все S<sub>i</sub> уже равны 1.</p>
+  </details>
 
   <details>
     <summary>Решение с TL</summary>
@@ -1763,7 +1793,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выведите m строк. В j-й из них должно находиться минимальное количество урона от падения, который вы можете получить во время выполнения j-го квеста.</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 7 6
 10 8 9 6 8 12 7
@@ -1782,6 +1813,7 @@ int main() {
 3
 1
 </pre>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1863,6 +1895,8 @@ int main() {
 
   <p>Пожалуйста, не используйте спецификатор %lld для чтения или записи 64-х битовых чисел на С++. Рекомендуется использовать потоки cin, cout или спецификатор %I64d.</p>
 
+  <details>
+    <summary></summary>
   <h4>Пример 1</h4>
 <pre>
 3 3
@@ -1871,9 +1905,9 @@ int main() {
 2 3
 1 3
 </pre>
-  <code>25</code>
+    <code>25</code>
 
-  <h4>Пример 2</h4>
+    <h4>Пример 2</h4>
 <pre>
 5 3
 5 2 4 1 3
@@ -1881,7 +1915,8 @@ int main() {
 2 3
 2 3
 </pre>
-  <code>33</code>
+    <code>33</code>
+  </details>
 
   <details>
     <summary>Решение</summary>
@@ -1971,7 +2006,8 @@ int main() {
   <h4>Выходные данные</h4>
   <p>Выходной файл дожжен содержать k строчек. Первая строка содержит число различных цветов на интервале l<sub>1</sub>…r<sub>1</sub>; вторая – число различных цветов на интервале l<sub>2</sub>…r<sub>2</sub> и так далее</p>
 
-  <h4>Пример</h4>
+  <details>
+    <summary>Пример</summary>
 <pre>
 5 3
 1 2 3 2 1
@@ -1984,6 +2020,7 @@ int main() {
 3
 2
 </pre>
+  </details>
 
   <details>
     <summary>Решение с TL</summary>
