--- a/src/components/alg/alg-conspect/yargu2/pages/elem-sp1.html
+++ b/src/components/alg/alg-conspect/yargu2/pages/elem-sp1.html
@@ -101,7 +101,7 @@
       <br><a href="https://codeforces.com/contest/732" target="_blank">Codeforces Round 377 (Div. 2) 2016-10-17</a>
     </div>
 
-    <p>Мы будем использовать бинарный поиск для проверки возможности сдачи всех экзаменов к определенному дню mid. Для каждого предмета находим последний день, когда можно сдать экзамен по этому предмету</p>
+    <p>Мы будем использовать <strong>бинарный поиск по ответу</strong> для проверки возможности сдачи всех экзаменов к определенному дню mid. Для каждого предмета находим последний день, когда можно сдать экзамен по этому предмету</p>
 <pre>
 #include &lt;iostream&gt;
 #include &lt;vector&gt;
