--- a/src/components/alg/alg-conspect/yargu3/pages/elem-250629-CentrRus2021q.html
+++ b/src/components/alg/alg-conspect/yargu3/pages/elem-250629-CentrRus2021q.html
@@ -38,6 +38,31 @@
   <div><i>Ограничение по времени 1с
   <br>Ограничение по памяти 256мб</i></div>
 
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int a, b, c, d; // число прямоугольников
+  cin >> a >> b >> c >> d;
+
+  // решение
+  // a + i*b комплексное число
+  // сумма комплексных чисел
+  // (a + i*b) + (c + i*d) = (a + c) + i*(b + d)
+  // (a + i*b) + (c + i*d) = (a*c - b*d) + i*(a*d + c*b)
+  int real = a * c - b * d;
+  int img = a * d + c * b;
+
+  // вывод результата
+  cout &lt;&lt; real &lt;&lt; ' ' &lt;&lt; img;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -49,6 +74,60 @@
   <div><i>Ограничение по времени 1с
   <br>Ограничение по памяти 256мб</i></div>
 
+  <p>Закончив обучение в магистратуре и поступив в аспирантуру, Игорь не смог забросить олимпиады. Он решил вести тренировки по спортивному программированию в своём любимом вузе.</p>
+
+  <p>Игорю разрешили проводить тренировки по воскресеньям в новом кабинете. Чтобы организовать первую тренировку, Игорь сделал опрос в беседе 'кто придет на тренировку?' с двумя вариантами ответа: 'к 10 часам', 'к 12 часам', причём каждый участник мог выбрать оба варианта. По итогам опроса оказалось, что за 10 часов было дано A голосов, за 12 часов B голосов, посмотрев на таблицу ответов, Игорь увидел, что C студентов проголосовало и за 10, и за 12 часов, поскольку они могут в любое время.</p>
+
+  <p>В любимом вузе Игоря строго-настрого соблюдаются санитарно-профилактические нормы, и на занятии не должно присутствовать больше, чем D студентов в одном помещении.</p>
+
+  <p>Помогите Игорю определить, сможет ли он провести тренировку, если распределит студентов с учетом их пожеланий, или он не сможет разместить студентов в кабинете, и первую тренировку придется отменить.</p>
+
+  <h4>Входные данные</h4>
+  <p>На вход дано четыре целых числа A, B, C, D (0 ≤ A, B, C, D ≤ 10⁵, C ≤ A и C ≤ B) — количество проголосовавших за 10 часов, количество за 12 часов, количество проголосовавших за 10 и 12 часов и то, сколько может находиться студентов в одном помещении одновременно.</p>
+
+  <h3>Выходные данные</h3>
+  <p>Выведите 'Yes', если получится провести тренировку, и 'No', если провести тренировку нельзя.</p>
+
+  <h4>Пример 1</h4>
+  <code>15 15 10 20</code>
+  <code>Yes</code>
+
+  <h4>Пример 2</h4>
+  <code>15 15 10 10</code>
+  <code>Yes</code>
+
+  <h4>Пример 3</h4>
+  <code>15 15 10 10</code>
+  <code>No</code>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int a, b, c, d;
+  cin >> a >> b >> c >> d;
+
+  // решение
+  string res = "No";
+  // оставшиеся места на 10 часов
+  int rest10 = d - (a - c);
+  // оставшиеся места на 12 часов
+  int rest12 = d - (b - c);
+  // если оставшихся мест больше чем оставшихся студентов
+  if (rest10 >= 0 && rest12 >= 0 && rest10 + rest12 >= c) {
+    res = "Yes";
+  }
+
+  // вывод результата
+  cout &lt;&lt; res;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -60,6 +139,57 @@
   <div><i>Ограничение по времени 1с
   <br>Ограничение по памяти 256мб</i></div>
 
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;string&gt;
+#include &lt;algorithm&gt;
+
+using namespace std;
+
+int main() {
+  // условная компиляция
+#ifdef _DEBUG
+  freopen("input.txt", "rt", stdin);
+  freopen("output.txt", "wt", stdout);
+#endif
+
+  // ввод данных
+  int n; // число разрядов двоичного числа
+  string a; // первое двоичное число
+  string b; // второе двоичное число
+  cin >> n >> a >> b;
+
+  // решение
+  string res;
+
+  // заполняем строку
+  for (int i = 0; i &lt; n; i++) {
+    int bitA = a[i] - '0';
+    int bitB = b[i] - '0';
+    int bitXor = bitA ^ bitB;
+    res.push_back(bitXor + '0');
+  }
+
+  reverse(res.begin(), res.end());
+
+  // удаляем лидирующие нули
+  for (int i = n - 1; i > 0; i--) {
+    if (res[i] == '0') {
+      res.pop_back();
+    } else {
+      break;
+    }
+  }
+
+  reverse(res.begin(), res.end());
+
+  // вывод результата
+  cout &lt;&lt; res;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -104,6 +234,82 @@
   <div><i>Ограничение по времени 1с
   <br>Ограничение по памяти 256мб</i></div>
 
+  <p>Игорь и Ира решили поехать на дачу, ведь там куча дел: прополоть и полить грядки, собрать урожай, окучить картошку, проверить сохранность забора и много-много всего.</p>
+
+  <p>На огороде у Игоря и Иры растет множество разных культур — n штук. Пришло время уборки урожая. Игорь будет хранить урожай в одинаковых ящиках. Игорь посчитал, сколько получилось собрать килограмм каждой культуры - aᵢ. Кроме того в один ящик помещается bᵢ килограмм каждой культуры.</p>
+
+  <p>Игорь не хочет складывать в один ящик разные овощи, ведь так не получится их сохранить за зиму. Помогите Игорю посчитать, сколько потребуется ящиков, чтобы сохранить весь урожай.</p>
+
+  <h4>Входные данные</h4>
+  <p>В первой строке задано одно целое число n (0 ≤ n ≤ 10⁵) — количество культур на огороде Игоря и Иры.</p>
+
+  <p>В каждой следующей строке записано два целых числа aᵢ и bᵢ (1 ≤ aᵢ, bᵢ ≤ 10⁵) — количество урожая в килограммах i культуры и то, сколько килограммов можно хранить в одном ящике.</p>
+
+  <h4>Выходные данные</h4>
+  <p>Выведите одно целое число — количество ящиков, которое потребуется Игорю для хранения всего урожая.</p>
+
+  <details>
+    <summary>Примеры</summary>
+  <h4>Пример 1</h4>
+<pre>
+3
+10 2
+20 4
+40 3
+</pre>
+  <code>24</code>
+
+  <h4>Пример 2</h4>
+<pre>
+6
+7 10
+1 8
+6 3
+3 6
+1 6
+1 1
+</pre>
+  <code>7</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/gym/104453/problem/G" target="_blank">Задача 104453G</a>
+      <br><a href="https://codeforces.com/gym/104453" target="_blank">ICPC Central Russia Regional Qualyfing Round, 2021 2010-08-16</a>
+    </div>
+
+<pre>
+#include &lt;iostream&gt;
+#include &lt;vector&gt;
+#include &lt;math.h&gt; // ceil
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int n;     // число культур
+  cin >> n;
+  vector&lt;pair&lt;double, int&gt; &gt; A(n);
+  for (int i = 0; i &lt; n; i++) {
+    cin >> A[i].first >> A[i].second;
+  }
+
+  // решение
+  int res = 0;
+
+  for (int i = 0; i &lt; n; i++) {
+    res += ceil(A[i].first / A[i].second);
+  }
+
+  // вывод результата
+  cout &lt;&lt; res;
+
+  return 0;
+}
+</pre>
+  </details>
 </article>
 
 
@@ -135,8 +341,126 @@
   <h3>Задача J. Вежливые соседи</h3>
 
   <div><i>Ограничение по времени 1с
-  <br>Ограничение по памяти 64мб</i></div>
+  <br>Ограничение по памяти 256мб</i></div>
 
+  <p>Игорь и Ира решили поехать на дачу, ведь там куча дел: прополоть и полить грядки, собрать урожай, окучить картошку, проверить сохранность забора, уточнить наличие ящиков для хранения урожая и много-много всего.</p>
+
+  <p>Приехав на дачу, Игорь и Ира увидели, что никого из соседей не было. У Игоря и Иры все соседи на даче очень вежливые люди. Игорю стало интересно, кто из соседей уезжает с дачи каждый день, а кто остается ночевать. Для этого Игорь будет в течение дня записывать в блокнот следующие события:</p>
+  <ul>
+    <li>+ k – сосед из домика под номером k приехал на свою дачу.</li>
+    <li>- k – сосед из домика под номером k сел в машину и собирается уехать.</li>
+  </ul>
+
+  <p>Дачные участки стоят вдоль узкой дороги и пронумерованы от 1 до N. Когда соседи приезжают на дачу, они всегда хотят встать рядом со своим участком k, ведь так гораздо удобней. Они могут это сделать только в том случае, если перед участками с 1-го по k-1-й не стоят машины. Если соседи не могут проехать к своему дому, тогда они оставляют свою машину на общей парковке перед дачами.</p>
+
+  <p>Если сосед хочет уехать и его машина стоит на парковке, то он без проблем садится в машину и уезжает, если сосед хочет уехать и его машина стоит рядом с его участком, тогда он садится в машину и уезжает только в том случае, если на дороге не стоят машины перед участками с 1
+   по k-1, иначе он сидит и ждет, как вежливый сосед, пока не уедут все машины, которые мешают, если этого не получилось, то он остается на даче.</p>
+
+  <p>Соседи могут возвращаться и уезжать с дачи несколько раз.</p>
+
+  <p>Помогите Игорю – определите, кто из соседей в конце дня остался ночевать на даче, кто – уехал домой, а кто из соседей вообще не приезжал на дачу.</p>
+
+  <h4>Входные данные</h4>
+  <p>Первая строка содержит два целых числа N, M (1 ≤ N, M ≤ 10⁵) – количество соседей и количество записей.</p>
+
+  <p>В следующих M строках содержатся записи в блокноте Игоря:</p>
+  <ul>
+    <li>+ k (1 ≤ k ≤ N) – на дачу с номером k приехал сосед.</li>
+    <li>- k (1 ≤ k ≤ N) – с дачи номер k уезжает сосед.</li>
+  </ul>
+
+  <p>Гарантируется, что перед операцией '+' соседа нет ни на участке, ни в машине рядом с участком.</p>
+
+  <h4>Выходные данные</h4>
+  <p>Для каждого i соседа выведите в i строке 'YES' (без кавычек), если сосед смог уехать домой, 'NO' (без кавычек), если сосед не уехал и остался ночевать на даче, '-1' (без кавычек) если сосед не приезжал на дачу.</p>
+
+  <details>
+    <summary>Пример</summary>
+<pre>
+5 7
++ 3
++ 4
++ 2
+- 4
+- 3
++ 1
+- 1
+</pre>
+<pre>
+YES
+NO
+NO
+YES
+-1
+</pre>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+
+    <div>
+      <a href="https://codeforces.com/gym/104453/problem/J" target="_blank">Задача 104453J</a>
+      <br><a href="https://codeforces.com/gym/104453" target="_blank">ICPC Central Russia Regional Qualyfing Round, 2021 2010-08-16</a>
+    </div>
+
+    <p>Решается методом стека с маркировкой. Каждого участника будем маркировать (надевать на него бейджик). Mark[i] = 0 если соседа не было на даче. Mark[i] = 1 если сосед приехал на дачу. Mark[i] = -1 если сосед уехал с дачи.</p>
+<pre>
+#include &lt;iostream&gt;
+#include &lt;stack&gt;
+#include &lt;vector&gt;
+
+using namespace std;
+
+int main() {
+  // ввод данных
+  int n, m;
+  cin >> n >> m;
+  stack&lt;int&gt; st;
+  st.push(n + 10); // несуществующий сосед
+  vector&lt;int&gt; Pos(n + 11), Park(n + 11), Uch(n + 11), Mark(n + 11);
+  char ch;
+  int k;
+  for (int i = 0; i &lt; m; i++) {
+    cin >> ch >> k;
+
+    // решение
+    if (ch == '+') {
+      Pos[k] = 1;
+      Mark[k] = -1;
+      if (st.top() &lt; k) {
+        Park[k] = 1;
+      } else {
+        Uch[k] = 1;
+        st.push(k);
+      }
+    } else {
+      if (Park[k] == 1) {
+        Mark[k] = 1;
+        Park[k] = 0;
+      } else {
+        Uch[k] = -1;
+        while (Uch[st.top()] == -1) {
+          Uch[st.top()] = 0;
+          Mark[st.top()] = 1;
+          st.pop();
+        }
+      }
+    }
+  }
+
+  // вывод результата
+  for (int i = 1; i &lt;= n; i++) {
+    if (Mark[i] == 0) {
+      cout &lt;&lt; "-1\n";
+    } else if (Mark[i] == 1) {
+      cout &lt;&lt; "YES\n";
+    } else {
+      cout &lt;&lt; "NO\n";
+    }
+  }
+}
+</pre>
+  </details>
 </article>
 
 
